第一次编译成功