@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2021 the original author or authors.
+ * Copyright 2002-2015 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      https://www.apache.org/licenses/LICENSE-2.0
+ *      http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -16,303 +16,309 @@
 
 package org.springframework.beans;
 
+import java.net.MalformedURLException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Properties;
 import java.util.Set;
 
-import org.junit.jupiter.api.Test;
+import org.junit.Test;
 
 import org.springframework.beans.propertyeditors.CustomNumberEditor;
 import org.springframework.beans.propertyeditors.StringTrimmerEditor;
-import org.springframework.beans.testfixture.beans.GenericBean;
-import org.springframework.beans.testfixture.beans.GenericIntegerBean;
-import org.springframework.beans.testfixture.beans.GenericSetOfIntegerBean;
-import org.springframework.beans.testfixture.beans.TestBean;
+import org.springframework.core.io.Resource;
 import org.springframework.core.io.UrlResource;
+import org.springframework.tests.sample.beans.GenericBean;
+import org.springframework.tests.sample.beans.GenericIntegerBean;
+import org.springframework.tests.sample.beans.GenericSetOfIntegerBean;
+import org.springframework.tests.sample.beans.TestBean;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
+import static org.junit.Assert.*;
 
 /**
  * @author Juergen Hoeller
  * @author Chris Beams
  * @since 18.01.2006
  */
-class BeanWrapperGenericsTests {
+public class BeanWrapperGenericsTests {
 
 	@Test
-	void testGenericSet() {
-		GenericBean<?> gb = new GenericBean<>();
+	public void testGenericSet() {
+		GenericBean<?> gb = new GenericBean<Object>();
 		BeanWrapper bw = new BeanWrapperImpl(gb);
-		Set<String> input = new HashSet<>();
+		Set<String> input = new HashSet<String>();
 		input.add("4");
 		input.add("5");
 		bw.setPropertyValue("integerSet", input);
-		assertThat(gb.getIntegerSet().contains(4)).isTrue();
-		assertThat(gb.getIntegerSet().contains(5)).isTrue();
+		assertTrue(gb.getIntegerSet().contains(new Integer(4)));
+		assertTrue(gb.getIntegerSet().contains(new Integer(5)));
 	}
 
 	@Test
-	void testGenericLowerBoundedSet() {
-		GenericBean<?> gb = new GenericBean<>();
+	public void testGenericLowerBoundedSet() {
+		GenericBean<?> gb = new GenericBean<Object>();
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.registerCustomEditor(Number.class, new CustomNumberEditor(Integer.class, true));
-		Set<String> input = new HashSet<>();
+		Set<String> input = new HashSet<String>();
 		input.add("4");
 		input.add("5");
 		bw.setPropertyValue("numberSet", input);
-		assertThat(gb.getNumberSet().contains(4)).isTrue();
-		assertThat(gb.getNumberSet().contains(5)).isTrue();
+		assertTrue(gb.getNumberSet().contains(new Integer(4)));
+		assertTrue(gb.getNumberSet().contains(new Integer(5)));
 	}
 
 	@Test
-	void testGenericSetWithConversionFailure() {
-		GenericBean<?> gb = new GenericBean<>();
+	public void testGenericSetWithConversionFailure() {
+		GenericBean<?> gb = new GenericBean<Object>();
 		BeanWrapper bw = new BeanWrapperImpl(gb);
-		Set<TestBean> input = new HashSet<>();
+		Set<TestBean> input = new HashSet<TestBean>();
 		input.add(new TestBean());
-		assertThatExceptionOfType(TypeMismatchException.class).isThrownBy(() ->
-				bw.setPropertyValue("integerSet", input))
-			.withMessageContaining("java.lang.Integer");
+		try {
+			bw.setPropertyValue("integerSet", input);
+			fail("Should have thrown TypeMismatchException");
+		}
+		catch (TypeMismatchException ex) {
+			assertTrue(ex.getMessage().indexOf("java.lang.Integer") != -1);
+		}
 	}
 
 	@Test
-	void testGenericList() throws Exception {
-		GenericBean<?> gb = new GenericBean<>();
+	public void testGenericList() throws MalformedURLException {
+		GenericBean<?> gb = new GenericBean<Object>();
 		BeanWrapper bw = new BeanWrapperImpl(gb);
-		List<String> input = new ArrayList<>();
+		List<String> input = new ArrayList<String>();
 		input.add("http://localhost:8080");
 		input.add("http://localhost:9090");
 		bw.setPropertyValue("resourceList", input);
-		assertThat(gb.getResourceList().get(0)).isEqualTo(new UrlResource("http://localhost:8080"));
-		assertThat(gb.getResourceList().get(1)).isEqualTo(new UrlResource("http://localhost:9090"));
+		assertEquals(new UrlResource("http://localhost:8080"), gb.getResourceList().get(0));
+		assertEquals(new UrlResource("http://localhost:9090"), gb.getResourceList().get(1));
 	}
 
 	@Test
-	void testGenericListElement() throws Exception {
-		GenericBean<?> gb = new GenericBean<>();
-		gb.setResourceList(new ArrayList<>());
+	public void testGenericListElement() throws MalformedURLException {
+		GenericBean<?> gb = new GenericBean<Object>();
+		gb.setResourceList(new ArrayList<Resource>());
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.setPropertyValue("resourceList[0]", "http://localhost:8080");
-		assertThat(gb.getResourceList().get(0)).isEqualTo(new UrlResource("http://localhost:8080"));
+		assertEquals(new UrlResource("http://localhost:8080"), gb.getResourceList().get(0));
 	}
 
 	@Test
-	void testGenericMap() {
-		GenericBean<?> gb = new GenericBean<>();
+	public void testGenericMap() {
+		GenericBean<?> gb = new GenericBean<Object>();
 		BeanWrapper bw = new BeanWrapperImpl(gb);
-		Map<String, String> input = new HashMap<>();
+		Map<String, String> input = new HashMap<String, String>();
 		input.put("4", "5");
 		input.put("6", "7");
 		bw.setPropertyValue("shortMap", input);
-		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
-		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
+		assertEquals(new Integer(5), gb.getShortMap().get(new Short("4")));
+		assertEquals(new Integer(7), gb.getShortMap().get(new Short("6")));
 	}
 
 	@Test
-	void testGenericMapElement() {
-		GenericBean<?> gb = new GenericBean<>();
-		gb.setShortMap(new HashMap<>());
+	public void testGenericMapElement() {
+		GenericBean<?> gb = new GenericBean<Object>();
+		gb.setShortMap(new HashMap<Short, Integer>());
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.setPropertyValue("shortMap[4]", "5");
-		assertThat(bw.getPropertyValue("shortMap[4]")).isEqualTo(5);
-		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
+		assertEquals(new Integer(5), bw.getPropertyValue("shortMap[4]"));
+		assertEquals(new Integer(5), gb.getShortMap().get(new Short("4")));
 	}
 
 	@Test
-	void testGenericMapWithKeyType() {
-		GenericBean<?> gb = new GenericBean<>();
+	public void testGenericMapWithKeyType() {
+		GenericBean<?> gb = new GenericBean<Object>();
 		BeanWrapper bw = new BeanWrapperImpl(gb);
-		Map<String, String> input = new HashMap<>();
+		Map<String, String> input = new HashMap<String, String>();
 		input.put("4", "5");
 		input.put("6", "7");
 		bw.setPropertyValue("longMap", input);
-		assertThat(gb.getLongMap().get(4L)).isEqualTo("5");
-		assertThat(gb.getLongMap().get(6L)).isEqualTo("7");
+		assertEquals("5", gb.getLongMap().get(new Long("4")));
+		assertEquals("7", gb.getLongMap().get(new Long("6")));
 	}
 
 	@Test
-	void testGenericMapElementWithKeyType() {
-		GenericBean<?> gb = new GenericBean<>();
+	public void testGenericMapElementWithKeyType() {
+		GenericBean<?> gb = new GenericBean<Object>();
 		gb.setLongMap(new HashMap<Long, Integer>());
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.setPropertyValue("longMap[4]", "5");
-		assertThat(gb.getLongMap().get(Long.valueOf("4"))).isEqualTo("5");
-		assertThat(bw.getPropertyValue("longMap[4]")).isEqualTo("5");
+		assertEquals("5", gb.getLongMap().get(new Long("4")));
+		assertEquals("5", bw.getPropertyValue("longMap[4]"));
 	}
 
 	@Test
-	void testGenericMapWithCollectionValue() {
-		GenericBean<?> gb = new GenericBean<>();
+	public void testGenericMapWithCollectionValue() {
+		GenericBean<?> gb = new GenericBean<Object>();
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.registerCustomEditor(Number.class, new CustomNumberEditor(Integer.class, false));
-		Map<String, Collection<?>> input = new HashMap<>();
-		HashSet<Integer> value1 = new HashSet<>();
-		value1.add(1);
+		Map<String, Collection> input = new HashMap<String, Collection>();
+		HashSet<Integer> value1 = new HashSet<Integer>();
+		value1.add(new Integer(1));
 		input.put("1", value1);
-		ArrayList<Boolean> value2 = new ArrayList<>();
+		ArrayList<Boolean> value2 = new ArrayList<Boolean>();
 		value2.add(Boolean.TRUE);
 		input.put("2", value2);
 		bw.setPropertyValue("collectionMap", input);
-		assertThat(gb.getCollectionMap().get(1) instanceof HashSet).isTrue();
-		assertThat(gb.getCollectionMap().get(2) instanceof ArrayList).isTrue();
+		assertTrue(gb.getCollectionMap().get(new Integer(1)) instanceof HashSet);
+		assertTrue(gb.getCollectionMap().get(new Integer(2)) instanceof ArrayList);
 	}
 
 	@Test
-	void testGenericMapElementWithCollectionValue() {
-		GenericBean<?> gb = new GenericBean<>();
-		gb.setCollectionMap(new HashMap<>());
+	public void testGenericMapElementWithCollectionValue() {
+		GenericBean<?> gb = new GenericBean<Object>();
+		gb.setCollectionMap(new HashMap<Number, Collection<? extends Object>>());
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.registerCustomEditor(Number.class, new CustomNumberEditor(Integer.class, false));
-		HashSet<Integer> value1 = new HashSet<>();
-		value1.add(1);
+		HashSet<Integer> value1 = new HashSet<Integer>();
+		value1.add(new Integer(1));
 		bw.setPropertyValue("collectionMap[1]", value1);
-		assertThat(gb.getCollectionMap().get(1) instanceof HashSet).isTrue();
+		assertTrue(gb.getCollectionMap().get(new Integer(1)) instanceof HashSet);
 	}
 
 	@Test
-	void testGenericMapFromProperties() {
-		GenericBean<?> gb = new GenericBean<>();
+	public void testGenericMapFromProperties() {
+		GenericBean<?> gb = new GenericBean<Object>();
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		Properties input = new Properties();
 		input.setProperty("4", "5");
 		input.setProperty("6", "7");
 		bw.setPropertyValue("shortMap", input);
-		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
-		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
+		assertEquals(new Integer(5), gb.getShortMap().get(new Short("4")));
+		assertEquals(new Integer(7), gb.getShortMap().get(new Short("6")));
 	}
 
 	@Test
-	void testGenericListOfLists() {
-		GenericBean<String> gb = new GenericBean<>();
-		List<List<Integer>> list = new ArrayList<>();
-		list.add(new ArrayList<>());
+	public void testGenericListOfLists() throws MalformedURLException {
+		GenericBean<String> gb = new GenericBean<String>();
+		List<List<Integer>> list = new LinkedList<List<Integer>>();
+		list.add(new LinkedList<Integer>());
 		gb.setListOfLists(list);
 		BeanWrapper bw = new BeanWrapperImpl(gb);
-		bw.setPropertyValue("listOfLists[0][0]", 5);
-		assertThat(bw.getPropertyValue("listOfLists[0][0]")).isEqualTo(5);
-		assertThat(gb.getListOfLists().get(0).get(0)).isEqualTo(5);
+		bw.setPropertyValue("listOfLists[0][0]", new Integer(5));
+		assertEquals(new Integer(5), bw.getPropertyValue("listOfLists[0][0]"));
+		assertEquals(new Integer(5), gb.getListOfLists().get(0).get(0));
 	}
 
 	@Test
-	void testGenericListOfListsWithElementConversion() {
-		GenericBean<String> gb = new GenericBean<>();
-		List<List<Integer>> list = new ArrayList<>();
-		list.add(new ArrayList<>());
+	public void testGenericListOfListsWithElementConversion() throws MalformedURLException {
+		GenericBean<String> gb = new GenericBean<String>();
+		List<List<Integer>> list = new LinkedList<List<Integer>>();
+		list.add(new LinkedList<Integer>());
 		gb.setListOfLists(list);
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.setPropertyValue("listOfLists[0][0]", "5");
-		assertThat(bw.getPropertyValue("listOfLists[0][0]")).isEqualTo(5);
-		assertThat(gb.getListOfLists().get(0).get(0)).isEqualTo(5);
+		assertEquals(new Integer(5), bw.getPropertyValue("listOfLists[0][0]"));
+		assertEquals(new Integer(5), gb.getListOfLists().get(0).get(0));
 	}
 
 	@Test
-	void testGenericListOfArrays() {
-		GenericBean<String> gb = new GenericBean<>();
-		ArrayList<String[]> list = new ArrayList<>();
+	public void testGenericListOfArrays() throws MalformedURLException {
+		GenericBean<String> gb = new GenericBean<String>();
+		ArrayList<String[]> list = new ArrayList<String[]>();
 		list.add(new String[] {"str1", "str2"});
 		gb.setListOfArrays(list);
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.setPropertyValue("listOfArrays[0][1]", "str3 ");
-		assertThat(bw.getPropertyValue("listOfArrays[0][1]")).isEqualTo("str3 ");
-		assertThat(gb.getListOfArrays().get(0)[1]).isEqualTo("str3 ");
+		assertEquals("str3 ", bw.getPropertyValue("listOfArrays[0][1]"));
+		assertEquals("str3 ", gb.getListOfArrays().get(0)[1]);
 	}
 
 	@Test
-	void testGenericListOfArraysWithElementConversion() {
-		GenericBean<String> gb = new GenericBean<>();
-		ArrayList<String[]> list = new ArrayList<>();
+	public void testGenericListOfArraysWithElementConversion() throws MalformedURLException {
+		GenericBean<String> gb = new GenericBean<String>();
+		ArrayList<String[]> list = new ArrayList<String[]>();
 		list.add(new String[] {"str1", "str2"});
 		gb.setListOfArrays(list);
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.registerCustomEditor(String.class, new StringTrimmerEditor(false));
 		bw.setPropertyValue("listOfArrays[0][1]", "str3 ");
-		assertThat(bw.getPropertyValue("listOfArrays[0][1]")).isEqualTo("str3");
-		assertThat(gb.getListOfArrays().get(0)[1]).isEqualTo("str3");
+		assertEquals("str3", bw.getPropertyValue("listOfArrays[0][1]"));
+		assertEquals("str3", gb.getListOfArrays().get(0)[1]);
 	}
 
 	@Test
-	void testGenericListOfMaps() {
-		GenericBean<String> gb = new GenericBean<>();
-		List<Map<Integer, Long>> list = new ArrayList<>();
-		list.add(new HashMap<>());
+	public void testGenericListOfMaps() throws MalformedURLException {
+		GenericBean<String> gb = new GenericBean<String>();
+		List<Map<Integer, Long>> list = new LinkedList<Map<Integer, Long>>();
+		list.add(new HashMap<Integer, Long>());
 		gb.setListOfMaps(list);
 		BeanWrapper bw = new BeanWrapperImpl(gb);
-		bw.setPropertyValue("listOfMaps[0][10]", 5L);
-		assertThat(bw.getPropertyValue("listOfMaps[0][10]")).isEqualTo(5L);
-		assertThat(gb.getListOfMaps().get(0).get(10)).isEqualTo(Long.valueOf(5));
+		bw.setPropertyValue("listOfMaps[0][10]", new Long(5));
+		assertEquals(new Long(5), bw.getPropertyValue("listOfMaps[0][10]"));
+		assertEquals(new Long(5), gb.getListOfMaps().get(0).get(10));
 	}
 
 	@Test
-	void testGenericListOfMapsWithElementConversion() {
-		GenericBean<String> gb = new GenericBean<>();
-		List<Map<Integer, Long>> list = new ArrayList<>();
-		list.add(new HashMap<>());
+	public void testGenericListOfMapsWithElementConversion() throws MalformedURLException {
+		GenericBean<String> gb = new GenericBean<String>();
+		List<Map<Integer, Long>> list = new LinkedList<Map<Integer, Long>>();
+		list.add(new HashMap<Integer, Long>());
 		gb.setListOfMaps(list);
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.setPropertyValue("listOfMaps[0][10]", "5");
-		assertThat(bw.getPropertyValue("listOfMaps[0][10]")).isEqualTo(5L);
-		assertThat(gb.getListOfMaps().get(0).get(10)).isEqualTo(Long.valueOf(5));
+		assertEquals(new Long(5), bw.getPropertyValue("listOfMaps[0][10]"));
+		assertEquals(new Long(5), gb.getListOfMaps().get(0).get(10));
 	}
 
 	@Test
-	void testGenericMapOfMaps() {
-		GenericBean<String> gb = new GenericBean<>();
-		Map<String, Map<Integer, Long>> map = new HashMap<>();
-		map.put("mykey", new HashMap<>());
+	public void testGenericMapOfMaps() throws MalformedURLException {
+		GenericBean<String> gb = new GenericBean<String>();
+		Map<String, Map<Integer, Long>> map = new HashMap<String, Map<Integer, Long>>();
+		map.put("mykey", new HashMap<Integer, Long>());
 		gb.setMapOfMaps(map);
 		BeanWrapper bw = new BeanWrapperImpl(gb);
-		bw.setPropertyValue("mapOfMaps[mykey][10]", 5L);
-		assertThat(bw.getPropertyValue("mapOfMaps[mykey][10]")).isEqualTo(5L);
-		assertThat(gb.getMapOfMaps().get("mykey").get(10)).isEqualTo(Long.valueOf(5));
+		bw.setPropertyValue("mapOfMaps[mykey][10]", new Long(5));
+		assertEquals(new Long(5), bw.getPropertyValue("mapOfMaps[mykey][10]"));
+		assertEquals(new Long(5), gb.getMapOfMaps().get("mykey").get(10));
 	}
 
 	@Test
-	void testGenericMapOfMapsWithElementConversion() {
-		GenericBean<String> gb = new GenericBean<>();
-		Map<String, Map<Integer, Long>> map = new HashMap<>();
-		map.put("mykey", new HashMap<>());
+	public void testGenericMapOfMapsWithElementConversion() throws MalformedURLException {
+		GenericBean<String> gb = new GenericBean<String>();
+		Map<String, Map<Integer, Long>> map = new HashMap<String, Map<Integer, Long>>();
+		map.put("mykey", new HashMap<Integer, Long>());
 		gb.setMapOfMaps(map);
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.setPropertyValue("mapOfMaps[mykey][10]", "5");
-		assertThat(bw.getPropertyValue("mapOfMaps[mykey][10]")).isEqualTo(Long.valueOf(5));
-		assertThat(gb.getMapOfMaps().get("mykey").get(10)).isEqualTo(Long.valueOf(5));
+		assertEquals(new Long(5), bw.getPropertyValue("mapOfMaps[mykey][10]"));
+		assertEquals(new Long(5), gb.getMapOfMaps().get("mykey").get(10));
 	}
 
 	@Test
-	void testGenericMapOfLists() {
-		GenericBean<String> gb = new GenericBean<>();
-		Map<Integer, List<Integer>> map = new HashMap<>();
-		map.put(1, new ArrayList<>());
+	public void testGenericMapOfLists() throws MalformedURLException {
+		GenericBean<String> gb = new GenericBean<String>();
+		Map<Integer, List<Integer>> map = new HashMap<Integer, List<Integer>>();
+		map.put(new Integer(1), new LinkedList<Integer>());
 		gb.setMapOfLists(map);
 		BeanWrapper bw = new BeanWrapperImpl(gb);
-		bw.setPropertyValue("mapOfLists[1][0]", 5);
-		assertThat(bw.getPropertyValue("mapOfLists[1][0]")).isEqualTo(5);
-		assertThat(gb.getMapOfLists().get(1).get(0)).isEqualTo(5);
+		bw.setPropertyValue("mapOfLists[1][0]", new Integer(5));
+		assertEquals(new Integer(5), bw.getPropertyValue("mapOfLists[1][0]"));
+		assertEquals(new Integer(5), gb.getMapOfLists().get(new Integer(1)).get(0));
 	}
 
 	@Test
-	void testGenericMapOfListsWithElementConversion() {
-		GenericBean<String> gb = new GenericBean<>();
-		Map<Integer, List<Integer>> map = new HashMap<>();
-		map.put(1, new ArrayList<>());
+	public void testGenericMapOfListsWithElementConversion() throws MalformedURLException {
+		GenericBean<String> gb = new GenericBean<String>();
+		Map<Integer, List<Integer>> map = new HashMap<Integer, List<Integer>>();
+		map.put(new Integer(1), new LinkedList<Integer>());
 		gb.setMapOfLists(map);
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.setPropertyValue("mapOfLists[1][0]", "5");
-		assertThat(bw.getPropertyValue("mapOfLists[1][0]")).isEqualTo(5);
-		assertThat(gb.getMapOfLists().get(1).get(0)).isEqualTo(5);
+		assertEquals(new Integer(5), bw.getPropertyValue("mapOfLists[1][0]"));
+		assertEquals(new Integer(5), gb.getMapOfLists().get(new Integer(1)).get(0));
 	}
 
 	@Test
-	void testGenericTypeNestingMapOfInteger() {
-		Map<String, String> map = new HashMap<>();
+	public void testGenericTypeNestingMapOfInteger() throws Exception {
+		Map<String, String> map = new HashMap<String, String>();
 		map.put("testKey", "100");
 
 		NestedGenericCollectionBean gb = new NestedGenericCollectionBean();
@@ -320,13 +326,13 @@ class BeanWrapperGenericsTests {
 		bw.setPropertyValue("mapOfInteger", map);
 
 		Object obj = gb.getMapOfInteger().get("testKey");
-		assertThat(obj instanceof Integer).isTrue();
+		assertTrue(obj instanceof Integer);
 	}
 
 	@Test
-	void testGenericTypeNestingMapOfListOfInteger() {
-		Map<String, List<String>> map = new HashMap<>();
-		List<String> list = Arrays.asList("1", "2", "3");
+	public void testGenericTypeNestingMapOfListOfInteger() throws Exception {
+		Map<String, List<String>> map = new HashMap<String, List<String>>();
+		List<String> list = Arrays.asList(new String[] {"1", "2", "3"});
 		map.put("testKey", list);
 
 		NestedGenericCollectionBean gb = new NestedGenericCollectionBean();
@@ -334,14 +340,14 @@ class BeanWrapperGenericsTests {
 		bw.setPropertyValue("mapOfListOfInteger", map);
 
 		Object obj = gb.getMapOfListOfInteger().get("testKey").get(0);
-		assertThat(obj instanceof Integer).isTrue();
-		assertThat(((Integer) obj).intValue()).isEqualTo(1);
+		assertTrue(obj instanceof Integer);
+		assertEquals(1, ((Integer) obj).intValue());
 	}
 
 	@Test
-	void testGenericTypeNestingListOfMapOfInteger() {
-		List<Map<String, String>> list = new ArrayList<>();
-		Map<String, String> map = new HashMap<>();
+	public void testGenericTypeNestingListOfMapOfInteger() throws Exception {
+		List<Map<String, String>> list = new LinkedList<Map<String, String>>();
+		Map<String, String> map = new HashMap<String, String>();
 		map.put("testKey", "5");
 		list.add(map);
 
@@ -350,14 +356,14 @@ class BeanWrapperGenericsTests {
 		bw.setPropertyValue("listOfMapOfInteger", list);
 
 		Object obj = gb.getListOfMapOfInteger().get(0).get("testKey");
-		assertThat(obj instanceof Integer).isTrue();
-		assertThat(((Integer) obj).intValue()).isEqualTo(5);
+		assertTrue(obj instanceof Integer);
+		assertEquals(5, ((Integer) obj).intValue());
 	}
 
 	@Test
-	void testGenericTypeNestingMapOfListOfListOfInteger() {
-		Map<String, List<List<String>>> map = new HashMap<>();
-		List<String> list = Arrays.asList("1", "2", "3");
+	public void testGenericTypeNestingMapOfListOfListOfInteger() throws Exception {
+		Map<String, List<List<String>>> map = new HashMap<String, List<List<String>>>();
+		List<String> list = Arrays.asList(new String[] {"1", "2", "3"});
 		map.put("testKey", Collections.singletonList(list));
 
 		NestedGenericCollectionBean gb = new NestedGenericCollectionBean();
@@ -365,16 +371,16 @@ class BeanWrapperGenericsTests {
 		bw.setPropertyValue("mapOfListOfListOfInteger", map);
 
 		Object obj = gb.getMapOfListOfListOfInteger().get("testKey").get(0).get(0);
-		assertThat(obj instanceof Integer).isTrue();
-		assertThat(((Integer) obj).intValue()).isEqualTo(1);
+		assertTrue(obj instanceof Integer);
+		assertEquals(1, ((Integer) obj).intValue());
 	}
 
 	@Test
-	void testComplexGenericMap() {
-		Map<List<String>, List<String>> inputMap = new HashMap<>();
-		List<String> inputKey = new ArrayList<>();
+	public void testComplexGenericMap() {
+		Map<List<String>, List<String>> inputMap = new HashMap<List<String>, List<String>>();
+		List<String> inputKey = new LinkedList<String>();
 		inputKey.add("1");
-		List<String> inputValue = new ArrayList<>();
+		List<String> inputValue = new LinkedList<String>();
 		inputValue.add("10");
 		inputMap.put(inputKey, inputValue);
 
@@ -382,16 +388,16 @@ class BeanWrapperGenericsTests {
 		BeanWrapper bw = new BeanWrapperImpl(holder);
 		bw.setPropertyValue("genericMap", inputMap);
 
-		assertThat(holder.getGenericMap().keySet().iterator().next().get(0)).isEqualTo(1);
-		assertThat(holder.getGenericMap().values().iterator().next().get(0)).isEqualTo(Long.valueOf(10));
+		assertEquals(new Integer(1), holder.getGenericMap().keySet().iterator().next().get(0));
+		assertEquals(new Long(10), holder.getGenericMap().values().iterator().next().get(0));
 	}
 
 	@Test
-	void testComplexGenericMapWithCollectionConversion() {
-		Map<Set<String>, Set<String>> inputMap = new HashMap<>();
-		Set<String> inputKey = new HashSet<>();
+	public void testComplexGenericMapWithCollectionConversion() {
+		Map<Set<String>, Set<String>> inputMap = new HashMap<Set<String>, Set<String>>();
+		Set<String> inputKey = new HashSet<String>();
 		inputKey.add("1");
-		Set<String> inputValue = new HashSet<>();
+		Set<String> inputValue = new HashSet<String>();
 		inputValue.add("10");
 			inputMap.put(inputKey, inputValue);
 
@@ -399,122 +405,121 @@ class BeanWrapperGenericsTests {
 		BeanWrapper bw = new BeanWrapperImpl(holder);
 		bw.setPropertyValue("genericMap", inputMap);
 
-		assertThat(holder.getGenericMap().keySet().iterator().next().get(0)).isEqualTo(1);
-		assertThat(holder.getGenericMap().values().iterator().next().get(0)).isEqualTo(Long.valueOf(10));
+		assertEquals(new Integer(1), holder.getGenericMap().keySet().iterator().next().get(0));
+		assertEquals(new Long(10), holder.getGenericMap().values().iterator().next().get(0));
 	}
 
 	@Test
-	void testComplexGenericIndexedMapEntry() {
-		List<String> inputValue = new ArrayList<>();
+	public void testComplexGenericIndexedMapEntry() {
+		List<String> inputValue = new LinkedList<String>();
 		inputValue.add("10");
 
 		ComplexMapHolder holder = new ComplexMapHolder();
 		BeanWrapper bw = new BeanWrapperImpl(holder);
 		bw.setPropertyValue("genericIndexedMap[1]", inputValue);
 
-		assertThat(holder.getGenericIndexedMap().keySet().iterator().next()).isEqualTo(1);
-		assertThat(holder.getGenericIndexedMap().values().iterator().next().get(0)).isEqualTo(Long.valueOf(10));
+		assertEquals(new Integer(1), holder.getGenericIndexedMap().keySet().iterator().next());
+		assertEquals(new Long(10), holder.getGenericIndexedMap().values().iterator().next().get(0));
 	}
 
 	@Test
-	void testComplexGenericIndexedMapEntryWithCollectionConversion() {
-		Set<String> inputValue = new HashSet<>();
+	public void testComplexGenericIndexedMapEntryWithCollectionConversion() {
+		Set<String> inputValue = new HashSet<String>();
 		inputValue.add("10");
 
 		ComplexMapHolder holder = new ComplexMapHolder();
 		BeanWrapper bw = new BeanWrapperImpl(holder);
 		bw.setPropertyValue("genericIndexedMap[1]", inputValue);
 
-		assertThat(holder.getGenericIndexedMap().keySet().iterator().next()).isEqualTo(1);
-		assertThat(holder.getGenericIndexedMap().values().iterator().next().get(0)).isEqualTo(Long.valueOf(10));
+		assertEquals(new Integer(1), holder.getGenericIndexedMap().keySet().iterator().next());
+		assertEquals(new Long(10), holder.getGenericIndexedMap().values().iterator().next().get(0));
 	}
 
 	@Test
-	void testComplexDerivedIndexedMapEntry() {
-		List<String> inputValue = new ArrayList<>();
+	public void testComplexDerivedIndexedMapEntry() {
+		List<String> inputValue = new LinkedList<String>();
 		inputValue.add("10");
 
 		ComplexMapHolder holder = new ComplexMapHolder();
 		BeanWrapper bw = new BeanWrapperImpl(holder);
 		bw.setPropertyValue("derivedIndexedMap[1]", inputValue);
 
-		assertThat(holder.getDerivedIndexedMap().keySet().iterator().next()).isEqualTo(1);
-		assertThat(holder.getDerivedIndexedMap().values().iterator().next().get(0)).isEqualTo(Long.valueOf(10));
+		assertEquals(new Integer(1), holder.getDerivedIndexedMap().keySet().iterator().next());
+		assertEquals(new Long(10), holder.getDerivedIndexedMap().values().iterator().next().get(0));
 	}
 
 	@Test
-	void testComplexDerivedIndexedMapEntryWithCollectionConversion() {
-		Set<String> inputValue = new HashSet<>();
+	public void testComplexDerivedIndexedMapEntryWithCollectionConversion() {
+		Set<String> inputValue = new HashSet<String>();
 		inputValue.add("10");
 
 		ComplexMapHolder holder = new ComplexMapHolder();
 		BeanWrapper bw = new BeanWrapperImpl(holder);
 		bw.setPropertyValue("derivedIndexedMap[1]", inputValue);
 
-		assertThat(holder.getDerivedIndexedMap().keySet().iterator().next()).isEqualTo(1);
-		assertThat(holder.getDerivedIndexedMap().values().iterator().next().get(0)).isEqualTo(Long.valueOf(10));
+		assertEquals(new Integer(1), holder.getDerivedIndexedMap().keySet().iterator().next());
+		assertEquals(new Long(10), holder.getDerivedIndexedMap().values().iterator().next().get(0));
 	}
 
 	@Test
-	void testGenericallyTypedIntegerBean() {
+	public void testGenericallyTypedIntegerBean() throws Exception {
 		GenericIntegerBean gb = new GenericIntegerBean();
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.setPropertyValue("genericProperty", "10");
 		bw.setPropertyValue("genericListProperty", new String[] {"20", "30"});
-		assertThat(gb.getGenericProperty()).isEqualTo(10);
-		assertThat(gb.getGenericListProperty().get(0)).isEqualTo(20);
-		assertThat(gb.getGenericListProperty().get(1)).isEqualTo(30);
+		assertEquals(new Integer(10), gb.getGenericProperty());
+		assertEquals(new Integer(20), gb.getGenericListProperty().get(0));
+		assertEquals(new Integer(30), gb.getGenericListProperty().get(1));
 	}
 
 	@Test
-	void testGenericallyTypedSetOfIntegerBean() {
+	public void testGenericallyTypedSetOfIntegerBean() throws Exception {
 		GenericSetOfIntegerBean gb = new GenericSetOfIntegerBean();
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.setPropertyValue("genericProperty", "10");
 		bw.setPropertyValue("genericListProperty", new String[] {"20", "30"});
-		assertThat(gb.getGenericProperty().iterator().next()).isEqualTo(10);
-		assertThat(gb.getGenericListProperty().get(0).iterator().next()).isEqualTo(20);
-		assertThat(gb.getGenericListProperty().get(1).iterator().next()).isEqualTo(30);
+		assertEquals(new Integer(10), gb.getGenericProperty().iterator().next());
+		assertEquals(new Integer(20), gb.getGenericListProperty().get(0).iterator().next());
+		assertEquals(new Integer(30), gb.getGenericListProperty().get(1).iterator().next());
 	}
 
 	@Test
-	void testSettingGenericPropertyWithReadOnlyInterface() {
+	public void testSettingGenericPropertyWithReadOnlyInterface() {
 		Bar bar = new Bar();
 		BeanWrapper bw = new BeanWrapperImpl(bar);
 		bw.setPropertyValue("version", "10");
-		assertThat(bar.getVersion()).isEqualTo(Double.valueOf(10.0));
+		assertEquals(new Double(10.0), bar.getVersion());
 	}
 
 	@Test
-	void testSettingLongPropertyWithGenericInterface() {
+	public void testSettingLongPropertyWithGenericInterface() {
 		Promotion bean = new Promotion();
 		BeanWrapper bw = new BeanWrapperImpl(bean);
 		bw.setPropertyValue("id", "10");
-		assertThat(bean.getId()).isEqualTo(Long.valueOf(10));
+		assertEquals(new Long(10), bean.getId());
 	}
 
 	@Test
-	void testUntypedPropertyWithMapAtRuntime() {
+	public void testUntypedPropertyWithMapAtRuntime() {
 		class Holder<D> {
 			private final D data;
 			public Holder(D data) {
 				this.data = data;
 			}
-			@SuppressWarnings("unused")
 			public D getData() {
 				return this.data;
 			}
 		}
 
-		Map<String, Object> data = new HashMap<>();
+		Map<String, Object> data = new HashMap<String, Object>();
 		data.put("x", "y");
-		Holder<Map<String, Object>> context = new Holder<>(data);
+		Holder<Map<String, Object>> context = new Holder<Map<String,Object>>(data);
 
 		BeanWrapper bw = PropertyAccessorFactory.forBeanPropertyAccess(context);
-		assertThat(bw.getPropertyValue("data['x']")).isEqualTo("y");
+		assertEquals("y", bw.getPropertyValue("data['x']"));
 
 		bw.setPropertyValue("data['message']", "it works!");
-		assertThat(data.get("message")).isEqualTo("it works!");
+		assertEquals(data.get("message"), "it works!");
 	}
 
 
@@ -581,7 +586,7 @@ class BeanWrapperGenericsTests {
 
 		private Map<List<Integer>, List<Long>> genericMap;
 
-		private Map<Integer, List<Long>> genericIndexedMap = new HashMap<>();
+		private Map<Integer, List<Long>> genericIndexedMap = new HashMap<Integer, List<Long>>();
 
 		private DerivedMap derivedIndexedMap = new DerivedMap();
 
@@ -640,25 +645,25 @@ class BeanWrapperGenericsTests {
 
 	public interface ObjectWithId<T extends Comparable<T>> {
 
-		T getId();
+	  T getId();
 
-		void setId(T aId);
+	  void setId(T aId);
 	}
 
 
 	public class Promotion implements ObjectWithId<Long> {
 
-		private Long id;
+	  private Long id;
 
-		@Override
-		public Long getId() {
-			return id;
-		}
+	  @Override
+	  public Long getId() {
+		  return id;
+	  }
 
-		@Override
-		public void setId(Long aId) {
-			this.id = aId;
-		}
+	  @Override
+	  public void setId(Long aId) {
+		  this.id = aId;
+	  }
 	}
 
 }
