@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2021 the original author or authors.
+ * Copyright 2002-2018 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      https://www.apache.org/licenses/LICENSE-2.0
+ *      http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -17,6 +17,7 @@
 package org.springframework.beans.factory.support;
 
 import java.lang.reflect.InvocationHandler;
+import java.lang.reflect.Method;
 import java.lang.reflect.Proxy;
 import java.net.MalformedURLException;
 import java.net.URI;
@@ -25,35 +26,32 @@ import java.util.AbstractCollection;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 
-import org.junit.jupiter.api.Test;
+import org.junit.Test;
 import org.mockito.Mockito;
 
+import org.springframework.beans.PropertyEditorRegistrar;
+import org.springframework.beans.PropertyEditorRegistry;
 import org.springframework.beans.factory.BeanCreationException;
-import org.springframework.beans.factory.NoUniqueBeanDefinitionException;
-import org.springframework.beans.factory.ObjectProvider;
 import org.springframework.beans.factory.config.TypedStringValue;
 import org.springframework.beans.factory.xml.XmlBeanDefinitionReader;
 import org.springframework.beans.propertyeditors.CustomNumberEditor;
-import org.springframework.beans.testfixture.beans.GenericBean;
-import org.springframework.beans.testfixture.beans.GenericIntegerBean;
-import org.springframework.beans.testfixture.beans.GenericSetOfIntegerBean;
-import org.springframework.beans.testfixture.beans.TestBean;
 import org.springframework.core.OverridingClassLoader;
 import org.springframework.core.ResolvableType;
-import org.springframework.core.annotation.AnnotationAwareOrderComparator;
-import org.springframework.core.annotation.Order;
 import org.springframework.core.io.ClassPathResource;
 import org.springframework.core.io.UrlResource;
-import org.springframework.core.testfixture.EnabledForTestGroups;
+import org.springframework.tests.Assume;
+import org.springframework.tests.TestGroup;
+import org.springframework.tests.sample.beans.GenericBean;
+import org.springframework.tests.sample.beans.GenericIntegerBean;
+import org.springframework.tests.sample.beans.GenericSetOfIntegerBean;
+import org.springframework.tests.sample.beans.TestBean;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
-import static org.springframework.core.testfixture.TestGroup.LONG_RUNNING;
+import static org.junit.Assert.*;
 
 /**
  * @author Juergen Hoeller
@@ -61,10 +59,10 @@ import static org.springframework.core.testfixture.TestGroup.LONG_RUNNING;
  * @author Sam Brannen
  * @since 20.01.2006
  */
-class BeanFactoryGenericsTests {
+public class BeanFactoryGenericsTests {
 
 	@Test
-	void testGenericSetProperty() {
+	public void testGenericSetProperty() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
@@ -76,12 +74,12 @@ class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertThat(gb.getIntegerSet().contains(4)).isTrue();
-		assertThat(gb.getIntegerSet().contains(5)).isTrue();
+		assertTrue(gb.getIntegerSet().contains(new Integer(4)));
+		assertTrue(gb.getIntegerSet().contains(new Integer(5)));
 	}
 
 	@Test
-	void testGenericListProperty() throws Exception {
+	public void testGenericListProperty() throws MalformedURLException {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
@@ -93,12 +91,12 @@ class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertThat(gb.getResourceList().get(0)).isEqualTo(new UrlResource("http://localhost:8080"));
-		assertThat(gb.getResourceList().get(1)).isEqualTo(new UrlResource("http://localhost:9090"));
+		assertEquals(new UrlResource("http://localhost:8080"), gb.getResourceList().get(0));
+		assertEquals(new UrlResource("http://localhost:9090"), gb.getResourceList().get(1));
 	}
 
 	@Test
-	void testGenericListPropertyWithAutowiring() throws Exception {
+	public void testGenericListPropertyWithAutowiring() throws MalformedURLException {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		bf.registerSingleton("resource1", new UrlResource("http://localhost:8080"));
 		bf.registerSingleton("resource2", new UrlResource("http://localhost:9090"));
@@ -108,12 +106,12 @@ class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericIntegerBean gb = (GenericIntegerBean) bf.getBean("genericBean");
 
-		assertThat(gb.getResourceList().get(0)).isEqualTo(new UrlResource("http://localhost:8080"));
-		assertThat(gb.getResourceList().get(1)).isEqualTo(new UrlResource("http://localhost:9090"));
+		assertEquals(new UrlResource("http://localhost:8080"), gb.getResourceList().get(0));
+		assertEquals(new UrlResource("http://localhost:9090"), gb.getResourceList().get(1));
 	}
 
 	@Test
-	void testGenericListPropertyWithInvalidElementType() {
+	public void testGenericListPropertyWithInvalidElementType() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericIntegerBean.class);
 
@@ -122,16 +120,18 @@ class BeanFactoryGenericsTests {
 		rbd.getPropertyValues().add("testBeanList", input);
 
 		bf.registerBeanDefinition("genericBean", rbd);
-		assertThatExceptionOfType(BeanCreationException.class).isThrownBy(() ->
-				bf.getBean("genericBean"))
-			.withMessageContaining("genericBean")
-			.withMessageContaining("testBeanList[0]")
-			.withMessageContaining(TestBean.class.getName())
-			.withMessageContaining("Integer");
+		try {
+			bf.getBean("genericBean");
+			fail("Should have thrown BeanCreationException");
+		}
+		catch (BeanCreationException ex) {
+			assertTrue(ex.getMessage().contains("genericBean") && ex.getMessage().contains("testBeanList[0]"));
+			assertTrue(ex.getMessage().contains(TestBean.class.getName()) && ex.getMessage().contains("Integer"));
+		}
 	}
 
 	@Test
-	void testGenericListPropertyWithOptionalAutowiring() {
+	public void testGenericListPropertyWithOptionalAutowiring() throws MalformedURLException {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
@@ -139,11 +139,11 @@ class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertThat(gb.getResourceList()).isNull();
+		assertNull(gb.getResourceList());
 	}
 
 	@Test
-	void testGenericMapProperty() {
+	public void testGenericMapProperty() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
@@ -155,27 +155,27 @@ class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
-		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
+		assertEquals(new Integer(5), gb.getShortMap().get(new Short("4")));
+		assertEquals(new Integer(7), gb.getShortMap().get(new Short("6")));
 	}
 
 	@Test
-	void testGenericListOfArraysProperty() {
+	public void testGenericListOfArraysProperty() throws MalformedURLException {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		new XmlBeanDefinitionReader(bf).loadBeanDefinitions(
 				new ClassPathResource("genericBeanTests.xml", getClass()));
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("listOfArrays");
 
-		assertThat(gb.getListOfArrays().size()).isEqualTo(1);
+		assertEquals(1, gb.getListOfArrays().size());
 		String[] array = gb.getListOfArrays().get(0);
-		assertThat(array).hasSize(2);
-		assertThat(array[0]).isEqualTo("value1");
-		assertThat(array[1]).isEqualTo("value2");
+		assertEquals(2, array.length);
+		assertEquals("value1", array[0]);
+		assertEquals("value2", array[1]);
 	}
 
 
 	@Test
-	void testGenericSetConstructor() {
+	public void testGenericSetConstructor() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
@@ -187,27 +187,27 @@ class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertThat(gb.getIntegerSet().contains(4)).isTrue();
-		assertThat(gb.getIntegerSet().contains(5)).isTrue();
+		assertTrue(gb.getIntegerSet().contains(new Integer(4)));
+		assertTrue(gb.getIntegerSet().contains(new Integer(5)));
 	}
 
 	@Test
-	void testGenericSetConstructorWithAutowiring() {
+	public void testGenericSetConstructorWithAutowiring() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
-		bf.registerSingleton("integer1", 4);
-		bf.registerSingleton("integer2", 5);
+		bf.registerSingleton("integer1", new Integer(4));
+		bf.registerSingleton("integer2", new Integer(5));
 
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 		rbd.setAutowireMode(RootBeanDefinition.AUTOWIRE_CONSTRUCTOR);
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertThat(gb.getIntegerSet().contains(4)).isTrue();
-		assertThat(gb.getIntegerSet().contains(5)).isTrue();
+		assertTrue(gb.getIntegerSet().contains(new Integer(4)));
+		assertTrue(gb.getIntegerSet().contains(new Integer(5)));
 	}
 
 	@Test
-	void testGenericSetConstructorWithOptionalAutowiring() {
+	public void testGenericSetConstructorWithOptionalAutowiring() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
@@ -215,11 +215,11 @@ class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertThat(gb.getIntegerSet()).isNull();
+		assertNull(gb.getIntegerSet());
 	}
 
 	@Test
-	void testGenericSetListConstructor() throws Exception {
+	public void testGenericSetListConstructor() throws MalformedURLException {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
@@ -235,17 +235,17 @@ class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertThat(gb.getIntegerSet().contains(4)).isTrue();
-		assertThat(gb.getIntegerSet().contains(5)).isTrue();
-		assertThat(gb.getResourceList().get(0)).isEqualTo(new UrlResource("http://localhost:8080"));
-		assertThat(gb.getResourceList().get(1)).isEqualTo(new UrlResource("http://localhost:9090"));
+		assertTrue(gb.getIntegerSet().contains(new Integer(4)));
+		assertTrue(gb.getIntegerSet().contains(new Integer(5)));
+		assertEquals(new UrlResource("http://localhost:8080"), gb.getResourceList().get(0));
+		assertEquals(new UrlResource("http://localhost:9090"), gb.getResourceList().get(1));
 	}
 
 	@Test
-	void testGenericSetListConstructorWithAutowiring() throws Exception {
+	public void testGenericSetListConstructorWithAutowiring() throws MalformedURLException {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
-		bf.registerSingleton("integer1", 4);
-		bf.registerSingleton("integer2", 5);
+		bf.registerSingleton("integer1", new Integer(4));
+		bf.registerSingleton("integer2", new Integer(5));
 		bf.registerSingleton("resource1", new UrlResource("http://localhost:8080"));
 		bf.registerSingleton("resource2", new UrlResource("http://localhost:9090"));
 
@@ -254,14 +254,14 @@ class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertThat(gb.getIntegerSet().contains(4)).isTrue();
-		assertThat(gb.getIntegerSet().contains(5)).isTrue();
-		assertThat(gb.getResourceList().get(0)).isEqualTo(new UrlResource("http://localhost:8080"));
-		assertThat(gb.getResourceList().get(1)).isEqualTo(new UrlResource("http://localhost:9090"));
+		assertTrue(gb.getIntegerSet().contains(new Integer(4)));
+		assertTrue(gb.getIntegerSet().contains(new Integer(5)));
+		assertEquals(new UrlResource("http://localhost:8080"), gb.getResourceList().get(0));
+		assertEquals(new UrlResource("http://localhost:9090"), gb.getResourceList().get(1));
 	}
 
 	@Test
-	void testGenericSetListConstructorWithOptionalAutowiring() throws Exception {
+	public void testGenericSetListConstructorWithOptionalAutowiring() throws MalformedURLException {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		bf.registerSingleton("resource1", new UrlResource("http://localhost:8080"));
 		bf.registerSingleton("resource2", new UrlResource("http://localhost:9090"));
@@ -271,12 +271,12 @@ class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertThat(gb.getIntegerSet()).isNull();
-		assertThat(gb.getResourceList()).isNull();
+		assertNull(gb.getIntegerSet());
+		assertNull(gb.getResourceList());
 	}
 
 	@Test
-	void testGenericSetMapConstructor() {
+	public void testGenericSetMapConstructor() throws MalformedURLException {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
@@ -292,14 +292,14 @@ class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertThat(gb.getIntegerSet().contains(4)).isTrue();
-		assertThat(gb.getIntegerSet().contains(5)).isTrue();
-		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
-		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
+		assertTrue(gb.getIntegerSet().contains(new Integer(4)));
+		assertTrue(gb.getIntegerSet().contains(new Integer(5)));
+		assertEquals(new Integer(5), gb.getShortMap().get(new Short("4")));
+		assertEquals(new Integer(7), gb.getShortMap().get(new Short("6")));
 	}
 
 	@Test
-	void testGenericMapResourceConstructor() throws Exception {
+	public void testGenericMapResourceConstructor() throws MalformedURLException {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
@@ -312,13 +312,13 @@ class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
-		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
-		assertThat(gb.getResourceList().get(0)).isEqualTo(new UrlResource("http://localhost:8080"));
+		assertEquals(new Integer(5), gb.getShortMap().get(new Short("4")));
+		assertEquals(new Integer(7), gb.getShortMap().get(new Short("6")));
+		assertEquals(new UrlResource("http://localhost:8080"), gb.getResourceList().get(0));
 	}
 
 	@Test
-	void testGenericMapMapConstructor() {
+	public void testGenericMapMapConstructor() throws MalformedURLException {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
@@ -334,17 +334,17 @@ class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertThat(gb.getShortMap()).isNotSameAs(gb.getPlainMap());
-		assertThat(gb.getPlainMap()).hasSize(2);
-		assertThat(gb.getPlainMap().get("1")).isEqualTo("0");
-		assertThat(gb.getPlainMap().get("2")).isEqualTo("3");
-		assertThat(gb.getShortMap().size()).isEqualTo(2);
-		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
-		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
+		assertNotSame(gb.getPlainMap(), gb.getShortMap());
+		assertEquals(2, gb.getPlainMap().size());
+		assertEquals("0", gb.getPlainMap().get("1"));
+		assertEquals("3", gb.getPlainMap().get("2"));
+		assertEquals(2, gb.getShortMap().size());
+		assertEquals(new Integer(5), gb.getShortMap().get(new Short("4")));
+		assertEquals(new Integer(7), gb.getShortMap().get(new Short("6")));
 	}
 
 	@Test
-	void testGenericMapMapConstructorWithSameRefAndConversion() {
+	public void testGenericMapMapConstructorWithSameRefAndConversion() throws MalformedURLException {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
@@ -357,37 +357,37 @@ class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertThat(gb.getShortMap()).isNotSameAs(gb.getPlainMap());
-		assertThat(gb.getPlainMap()).hasSize(2);
-		assertThat(gb.getPlainMap().get("1")).isEqualTo("0");
-		assertThat(gb.getPlainMap().get("2")).isEqualTo("3");
-		assertThat(gb.getShortMap().size()).isEqualTo(2);
-		assertThat(gb.getShortMap().get(Short.valueOf("1"))).isEqualTo(0);
-		assertThat(gb.getShortMap().get(Short.valueOf("2"))).isEqualTo(3);
+		assertNotSame(gb.getPlainMap(), gb.getShortMap());
+		assertEquals(2, gb.getPlainMap().size());
+		assertEquals("0", gb.getPlainMap().get("1"));
+		assertEquals("3", gb.getPlainMap().get("2"));
+		assertEquals(2, gb.getShortMap().size());
+		assertEquals(new Integer(0), gb.getShortMap().get(new Short("1")));
+		assertEquals(new Integer(3), gb.getShortMap().get(new Short("2")));
 	}
 
 	@Test
-	void testGenericMapMapConstructorWithSameRefAndNoConversion() {
+	public void testGenericMapMapConstructorWithSameRefAndNoConversion() throws MalformedURLException {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
 		Map<Short, Integer> input = new HashMap<>();
-		input.put((short) 1, 0);
-		input.put((short) 2, 3);
+		input.put(new Short((short) 1), new Integer(0));
+		input.put(new Short((short) 2), new Integer(3));
 		rbd.getConstructorArgumentValues().addGenericArgumentValue(input);
 		rbd.getConstructorArgumentValues().addGenericArgumentValue(input);
 
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertThat(gb.getShortMap()).isSameAs(gb.getPlainMap());
-		assertThat(gb.getShortMap()).hasSize(2);
-		assertThat(gb.getShortMap().get(Short.valueOf("1"))).isEqualTo(0);
-		assertThat(gb.getShortMap().get(Short.valueOf("2"))).isEqualTo(3);
+		assertSame(gb.getPlainMap(), gb.getShortMap());
+		assertEquals(2, gb.getShortMap().size());
+		assertEquals(new Integer(0), gb.getShortMap().get(new Short("1")));
+		assertEquals(new Integer(3), gb.getShortMap().get(new Short("2")));
 	}
 
 	@Test
-	void testGenericMapWithKeyTypeConstructor() {
+	public void testGenericMapWithKeyTypeConstructor() throws MalformedURLException {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
@@ -399,19 +399,24 @@ class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertThat(gb.getLongMap().get(4L)).isEqualTo("5");
-		assertThat(gb.getLongMap().get(6L)).isEqualTo("7");
+		assertEquals("5", gb.getLongMap().get(new Long("4")));
+		assertEquals("7", gb.getLongMap().get(new Long("6")));
 	}
 
 	@Test
-	void testGenericMapWithCollectionValueConstructor() {
+	public void testGenericMapWithCollectionValueConstructor() throws MalformedURLException {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
-		bf.addPropertyEditorRegistrar(registry -> registry.registerCustomEditor(Number.class, new CustomNumberEditor(Integer.class, false)));
+		bf.addPropertyEditorRegistrar(new PropertyEditorRegistrar() {
+			@Override
+			public void registerCustomEditors(PropertyEditorRegistry registry) {
+				registry.registerCustomEditor(Number.class, new CustomNumberEditor(Integer.class, false));
+			}
+		});
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
 		Map<String, AbstractCollection<?>> input = new HashMap<>();
 		HashSet<Integer> value1 = new HashSet<>();
-		value1.add(1);
+		value1.add(new Integer(1));
 		input.put("1", value1);
 		ArrayList<Boolean> value2 = new ArrayList<>();
 		value2.add(Boolean.TRUE);
@@ -422,15 +427,13 @@ class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		boolean condition1 = gb.getCollectionMap().get(1) instanceof HashSet;
-		assertThat(condition1).isTrue();
-		boolean condition = gb.getCollectionMap().get(2) instanceof ArrayList;
-		assertThat(condition).isTrue();
+		assertTrue(gb.getCollectionMap().get(new Integer(1)) instanceof HashSet);
+		assertTrue(gb.getCollectionMap().get(new Integer(2)) instanceof ArrayList);
 	}
 
 
 	@Test
-	void testGenericSetFactoryMethod() {
+	public void testGenericSetFactoryMethod() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 		rbd.setFactoryMethodName("createInstance");
@@ -443,12 +446,12 @@ class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertThat(gb.getIntegerSet().contains(4)).isTrue();
-		assertThat(gb.getIntegerSet().contains(5)).isTrue();
+		assertTrue(gb.getIntegerSet().contains(new Integer(4)));
+		assertTrue(gb.getIntegerSet().contains(new Integer(5)));
 	}
 
 	@Test
-	void testGenericSetListFactoryMethod() throws Exception {
+	public void testGenericSetListFactoryMethod() throws MalformedURLException {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 		rbd.setFactoryMethodName("createInstance");
@@ -465,14 +468,14 @@ class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertThat(gb.getIntegerSet().contains(4)).isTrue();
-		assertThat(gb.getIntegerSet().contains(5)).isTrue();
-		assertThat(gb.getResourceList().get(0)).isEqualTo(new UrlResource("http://localhost:8080"));
-		assertThat(gb.getResourceList().get(1)).isEqualTo(new UrlResource("http://localhost:9090"));
+		assertTrue(gb.getIntegerSet().contains(new Integer(4)));
+		assertTrue(gb.getIntegerSet().contains(new Integer(5)));
+		assertEquals(new UrlResource("http://localhost:8080"), gb.getResourceList().get(0));
+		assertEquals(new UrlResource("http://localhost:9090"), gb.getResourceList().get(1));
 	}
 
 	@Test
-	void testGenericSetMapFactoryMethod() {
+	public void testGenericSetMapFactoryMethod() throws MalformedURLException {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 		rbd.setFactoryMethodName("createInstance");
@@ -489,14 +492,14 @@ class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertThat(gb.getIntegerSet().contains(4)).isTrue();
-		assertThat(gb.getIntegerSet().contains(5)).isTrue();
-		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
-		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
+		assertTrue(gb.getIntegerSet().contains(new Integer(4)));
+		assertTrue(gb.getIntegerSet().contains(new Integer(5)));
+		assertEquals(new Integer(5), gb.getShortMap().get(new Short("4")));
+		assertEquals(new Integer(7), gb.getShortMap().get(new Short("6")));
 	}
 
 	@Test
-	void testGenericMapResourceFactoryMethod() throws Exception {
+	public void testGenericMapResourceFactoryMethod() throws MalformedURLException {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 		rbd.setFactoryMethodName("createInstance");
@@ -510,13 +513,13 @@ class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
-		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
-		assertThat(gb.getResourceList().get(0)).isEqualTo(new UrlResource("http://localhost:8080"));
+		assertEquals(new Integer(5), gb.getShortMap().get(new Short("4")));
+		assertEquals(new Integer(7), gb.getShortMap().get(new Short("6")));
+		assertEquals(new UrlResource("http://localhost:8080"), gb.getResourceList().get(0));
 	}
 
 	@Test
-	void testGenericMapMapFactoryMethod() {
+	public void testGenericMapMapFactoryMethod() throws MalformedURLException {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 		rbd.setFactoryMethodName("createInstance");
@@ -533,14 +536,14 @@ class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertThat(gb.getPlainMap().get("1")).isEqualTo("0");
-		assertThat(gb.getPlainMap().get("2")).isEqualTo("3");
-		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
-		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
+		assertEquals("0", gb.getPlainMap().get("1"));
+		assertEquals("3", gb.getPlainMap().get("2"));
+		assertEquals(new Integer(5), gb.getShortMap().get(new Short("4")));
+		assertEquals(new Integer(7), gb.getShortMap().get(new Short("6")));
 	}
 
 	@Test
-	void testGenericMapWithKeyTypeFactoryMethod() {
+	public void testGenericMapWithKeyTypeFactoryMethod() throws MalformedURLException {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 		rbd.setFactoryMethodName("createInstance");
@@ -553,20 +556,25 @@ class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertThat(gb.getLongMap().get(Long.valueOf("4"))).isEqualTo("5");
-		assertThat(gb.getLongMap().get(Long.valueOf("6"))).isEqualTo("7");
+		assertEquals("5", gb.getLongMap().get(new Long("4")));
+		assertEquals("7", gb.getLongMap().get(new Long("6")));
 	}
 
 	@Test
-	void testGenericMapWithCollectionValueFactoryMethod() {
+	public void testGenericMapWithCollectionValueFactoryMethod() throws MalformedURLException {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
-		bf.addPropertyEditorRegistrar(registry -> registry.registerCustomEditor(Number.class, new CustomNumberEditor(Integer.class, false)));
+		bf.addPropertyEditorRegistrar(new PropertyEditorRegistrar() {
+			@Override
+			public void registerCustomEditors(PropertyEditorRegistry registry) {
+				registry.registerCustomEditor(Number.class, new CustomNumberEditor(Integer.class, false));
+			}
+		});
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 		rbd.setFactoryMethodName("createInstance");
 
 		Map<String, AbstractCollection<?>> input = new HashMap<>();
 		HashSet<Integer> value1 = new HashSet<>();
-		value1.add(1);
+		value1.add(new Integer(1));
 		input.put("1", value1);
 		ArrayList<Boolean> value2 = new ArrayList<>();
 		value2.add(Boolean.TRUE);
@@ -577,74 +585,73 @@ class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		boolean condition1 = gb.getCollectionMap().get(1) instanceof HashSet;
-		assertThat(condition1).isTrue();
-		boolean condition = gb.getCollectionMap().get(2) instanceof ArrayList;
-		assertThat(condition).isTrue();
+		assertTrue(gb.getCollectionMap().get(new Integer(1)) instanceof HashSet);
+		assertTrue(gb.getCollectionMap().get(new Integer(2)) instanceof ArrayList);
 	}
 
 	@Test
-	void testGenericListBean() throws Exception {
+	public void testGenericListBean() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		new XmlBeanDefinitionReader(bf).loadBeanDefinitions(
 				new ClassPathResource("genericBeanTests.xml", getClass()));
 		List<?> list = (List<?>) bf.getBean("list");
-		assertThat(list.size()).isEqualTo(1);
-		assertThat(list.get(0)).isEqualTo(new URL("http://localhost:8080"));
+		assertEquals(1, list.size());
+		assertEquals(new URL("http://localhost:8080"), list.get(0));
 	}
 
 	@Test
-	void testGenericSetBean() throws Exception {
+	public void testGenericSetBean() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		new XmlBeanDefinitionReader(bf).loadBeanDefinitions(
 				new ClassPathResource("genericBeanTests.xml", getClass()));
 		Set<?> set = (Set<?>) bf.getBean("set");
-		assertThat(set.size()).isEqualTo(1);
-		assertThat(set.iterator().next()).isEqualTo(new URL("http://localhost:8080"));
+		assertEquals(1, set.size());
+		assertEquals(new URL("http://localhost:8080"), set.iterator().next());
 	}
 
 	@Test
-	void testGenericMapBean() throws Exception {
+	public void testGenericMapBean() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		new XmlBeanDefinitionReader(bf).loadBeanDefinitions(
 				new ClassPathResource("genericBeanTests.xml", getClass()));
 		Map<?, ?> map = (Map<?, ?>) bf.getBean("map");
-		assertThat(map).hasSize(1);
-		assertThat(map.keySet().iterator().next()).isEqualTo(10);
-		assertThat(map.values().iterator().next()).isEqualTo(new URL("http://localhost:8080"));
+		assertEquals(1, map.size());
+		assertEquals(new Integer(10), map.keySet().iterator().next());
+		assertEquals(new URL("http://localhost:8080"), map.values().iterator().next());
 	}
 
 	@Test
-	void testGenericallyTypedIntegerBean() {
+	public void testGenericallyTypedIntegerBean() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		new XmlBeanDefinitionReader(bf).loadBeanDefinitions(
 				new ClassPathResource("genericBeanTests.xml", getClass()));
 		GenericIntegerBean gb = (GenericIntegerBean) bf.getBean("integerBean");
-		assertThat(gb.getGenericProperty()).isEqualTo(10);
-		assertThat(gb.getGenericListProperty().get(0)).isEqualTo(20);
-		assertThat(gb.getGenericListProperty().get(1)).isEqualTo(30);
+		assertEquals(new Integer(10), gb.getGenericProperty());
+		assertEquals(new Integer(20), gb.getGenericListProperty().get(0));
+		assertEquals(new Integer(30), gb.getGenericListProperty().get(1));
 	}
 
 	@Test
-	void testGenericallyTypedSetOfIntegerBean() {
+	public void testGenericallyTypedSetOfIntegerBean() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		new XmlBeanDefinitionReader(bf).loadBeanDefinitions(
 				new ClassPathResource("genericBeanTests.xml", getClass()));
 		GenericSetOfIntegerBean gb = (GenericSetOfIntegerBean) bf.getBean("setOfIntegerBean");
-		assertThat(gb.getGenericProperty().iterator().next()).isEqualTo(10);
-		assertThat(gb.getGenericListProperty().get(0).iterator().next()).isEqualTo(20);
-		assertThat(gb.getGenericListProperty().get(1).iterator().next()).isEqualTo(30);
+		assertEquals(new Integer(10), gb.getGenericProperty().iterator().next());
+		assertEquals(new Integer(20), gb.getGenericListProperty().get(0).iterator().next());
+		assertEquals(new Integer(30), gb.getGenericListProperty().get(1).iterator().next());
 	}
 
 	@Test
-	@EnabledForTestGroups(LONG_RUNNING)
-	void testSetBean() throws Exception {
+	public void testSetBean() throws Exception {
+		Assume.group(TestGroup.LONG_RUNNING);
+
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		new XmlBeanDefinitionReader(bf).loadBeanDefinitions(
 				new ClassPathResource("genericBeanTests.xml", getClass()));
 		UrlSet us = (UrlSet) bf.getBean("setBean");
-		assertThat(us.size()).isEqualTo(1);
-		assertThat(us.iterator().next()).isEqualTo(new URL("https://www.springframework.org"));
+		assertEquals(1, us.size());
+		assertEquals(new URL("http://www.springframework.org"), us.iterator().next());
 	}
 
 	/**
@@ -658,7 +665,7 @@ class BeanFactoryGenericsTests {
 	 * <p>See SPR-9493
 	 */
 	@Test
-	void parameterizedStaticFactoryMethod() {
+	public void parameterizedStaticFactoryMethod() {
 		RootBeanDefinition rbd = new RootBeanDefinition(Mockito.class);
 		rbd.setFactoryMethodName("mock");
 		rbd.getConstructorArgumentValues().addGenericArgumentValue(Runnable.class);
@@ -666,10 +673,10 @@ class BeanFactoryGenericsTests {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		bf.registerBeanDefinition("mock", rbd);
 
-		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
-		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
+		assertEquals(Runnable.class, bf.getType("mock"));
+		assertEquals(Runnable.class, bf.getType("mock"));
 		Map<String, Runnable> beans = bf.getBeansOfType(Runnable.class);
-		assertThat(beans).hasSize(1);
+		assertEquals(1, beans.size());
 	}
 
 	/**
@@ -684,7 +691,7 @@ class BeanFactoryGenericsTests {
 	 * <p>See SPR-10411
 	 */
 	@Test
-	void parameterizedInstanceFactoryMethod() {
+	public void parameterizedInstanceFactoryMethod() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 
 		RootBeanDefinition rbd = new RootBeanDefinition(MocksControl.class);
@@ -696,16 +703,16 @@ class BeanFactoryGenericsTests {
 		rbd.getConstructorArgumentValues().addGenericArgumentValue(Runnable.class);
 		bf.registerBeanDefinition("mock", rbd);
 
-		assertThat(bf.isTypeMatch("mock", Runnable.class)).isTrue();
-		assertThat(bf.isTypeMatch("mock", Runnable.class)).isTrue();
-		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
-		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
+		assertTrue(bf.isTypeMatch("mock", Runnable.class));
+		assertTrue(bf.isTypeMatch("mock", Runnable.class));
+		assertEquals(Runnable.class, bf.getType("mock"));
+		assertEquals(Runnable.class, bf.getType("mock"));
 		Map<String, Runnable> beans = bf.getBeansOfType(Runnable.class);
-		assertThat(beans).hasSize(1);
+		assertEquals(1, beans.size());
 	}
 
 	@Test
-	void parameterizedInstanceFactoryMethodWithNonResolvedClassName() {
+	public void parameterizedInstanceFactoryMethodWithNonResolvedClassName() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 
 		RootBeanDefinition rbd = new RootBeanDefinition(MocksControl.class);
@@ -717,16 +724,16 @@ class BeanFactoryGenericsTests {
 		rbd.getConstructorArgumentValues().addGenericArgumentValue(Runnable.class.getName());
 		bf.registerBeanDefinition("mock", rbd);
 
-		assertThat(bf.isTypeMatch("mock", Runnable.class)).isTrue();
-		assertThat(bf.isTypeMatch("mock", Runnable.class)).isTrue();
-		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
-		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
+		assertTrue(bf.isTypeMatch("mock", Runnable.class));
+		assertTrue(bf.isTypeMatch("mock", Runnable.class));
+		assertEquals(Runnable.class, bf.getType("mock"));
+		assertEquals(Runnable.class, bf.getType("mock"));
 		Map<String, Runnable> beans = bf.getBeansOfType(Runnable.class);
-		assertThat(beans).hasSize(1);
+		assertEquals(1, beans.size());
 	}
 
 	@Test
-	void parameterizedInstanceFactoryMethodWithWrappedClassName() {
+	public void parameterizedInstanceFactoryMethodWithWrappedClassName() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 
 		RootBeanDefinition rbd = new RootBeanDefinition();
@@ -736,16 +743,16 @@ class BeanFactoryGenericsTests {
 		rbd.getConstructorArgumentValues().addGenericArgumentValue(new TypedStringValue(Runnable.class.getName()));
 		bf.registerBeanDefinition("mock", rbd);
 
-		assertThat(bf.isTypeMatch("mock", Runnable.class)).isTrue();
-		assertThat(bf.isTypeMatch("mock", Runnable.class)).isTrue();
-		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
-		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
+		assertTrue(bf.isTypeMatch("mock", Runnable.class));
+		assertTrue(bf.isTypeMatch("mock", Runnable.class));
+		assertEquals(Runnable.class, bf.getType("mock"));
+		assertEquals(Runnable.class, bf.getType("mock"));
 		Map<String, Runnable> beans = bf.getBeansOfType(Runnable.class);
-		assertThat(beans).hasSize(1);
+		assertEquals(1, beans.size());
 	}
 
 	@Test
-	void parameterizedInstanceFactoryMethodWithInvalidClassName() {
+	public void parameterizedInstanceFactoryMethodWithInvalidClassName() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 
 		RootBeanDefinition rbd = new RootBeanDefinition(MocksControl.class);
@@ -757,16 +764,16 @@ class BeanFactoryGenericsTests {
 		rbd.getConstructorArgumentValues().addGenericArgumentValue("x");
 		bf.registerBeanDefinition("mock", rbd);
 
-		assertThat(bf.isTypeMatch("mock", Runnable.class)).isFalse();
-		assertThat(bf.isTypeMatch("mock", Runnable.class)).isFalse();
-		assertThat(bf.getType("mock")).isNull();
-		assertThat(bf.getType("mock")).isNull();
+		assertFalse(bf.isTypeMatch("mock", Runnable.class));
+		assertFalse(bf.isTypeMatch("mock", Runnable.class));
+		assertNull(bf.getType("mock"));
+		assertNull(bf.getType("mock"));
 		Map<String, Runnable> beans = bf.getBeansOfType(Runnable.class);
-		assertThat(beans).hasSize(0);
+		assertEquals(0, beans.size());
 	}
 
 	@Test
-	void parameterizedInstanceFactoryMethodWithIndexedArgument() {
+	public void parameterizedInstanceFactoryMethodWithIndexedArgument() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 
 		RootBeanDefinition rbd = new RootBeanDefinition(MocksControl.class);
@@ -778,16 +785,16 @@ class BeanFactoryGenericsTests {
 		rbd.getConstructorArgumentValues().addIndexedArgumentValue(0, Runnable.class);
 		bf.registerBeanDefinition("mock", rbd);
 
-		assertThat(bf.isTypeMatch("mock", Runnable.class)).isTrue();
-		assertThat(bf.isTypeMatch("mock", Runnable.class)).isTrue();
-		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
-		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
+		assertTrue(bf.isTypeMatch("mock", Runnable.class));
+		assertTrue(bf.isTypeMatch("mock", Runnable.class));
+		assertEquals(Runnable.class, bf.getType("mock"));
+		assertEquals(Runnable.class, bf.getType("mock"));
 		Map<String, Runnable> beans = bf.getBeansOfType(Runnable.class);
-		assertThat(beans).hasSize(1);
+		assertEquals(1, beans.size());
 	}
 
 	@Test  // SPR-16720
-	void parameterizedInstanceFactoryMethodWithTempClassLoader() {
+	public void parameterizedInstanceFactoryMethodWithTempClassLoader() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		bf.setTempClassLoader(new OverridingClassLoader(getClass().getClassLoader()));
 
@@ -800,16 +807,16 @@ class BeanFactoryGenericsTests {
 		rbd.getConstructorArgumentValues().addGenericArgumentValue(Runnable.class);
 		bf.registerBeanDefinition("mock", rbd);
 
-		assertThat(bf.isTypeMatch("mock", Runnable.class)).isTrue();
-		assertThat(bf.isTypeMatch("mock", Runnable.class)).isTrue();
-		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
-		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
+		assertTrue(bf.isTypeMatch("mock", Runnable.class));
+		assertTrue(bf.isTypeMatch("mock", Runnable.class));
+		assertEquals(Runnable.class, bf.getType("mock"));
+		assertEquals(Runnable.class, bf.getType("mock"));
 		Map<String, Runnable> beans = bf.getBeansOfType(Runnable.class);
-		assertThat(beans).hasSize(1);
+		assertEquals(1, beans.size());
 	}
 
 	@Test
-	void testGenericMatchingWithBeanNameDifferentiation() {
+	public void testGenericMatchingWithBeanNameDifferentiation() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		bf.setAutowireCandidateResolver(new GenericTypeAwareAutowireCandidateResolver());
 
@@ -819,134 +826,48 @@ class BeanFactoryGenericsTests {
 				new RootBeanDefinition(NumberBean.class, RootBeanDefinition.AUTOWIRE_CONSTRUCTOR, false));
 
 		NumberBean nb = bf.getBean(NumberBean.class);
-		assertThat(nb.getDoubleStore()).isSameAs(bf.getBean("doubleStore"));
-		assertThat(nb.getFloatStore()).isSameAs(bf.getBean("floatStore"));
+		assertSame(bf.getBean("doubleStore"), nb.getDoubleStore());
+		assertSame(bf.getBean("floatStore"), nb.getFloatStore());
 
 		String[] numberStoreNames = bf.getBeanNamesForType(ResolvableType.forClass(NumberStore.class));
 		String[] doubleStoreNames = bf.getBeanNamesForType(ResolvableType.forClassWithGenerics(NumberStore.class, Double.class));
 		String[] floatStoreNames = bf.getBeanNamesForType(ResolvableType.forClassWithGenerics(NumberStore.class, Float.class));
-		assertThat(numberStoreNames).hasSize(2);
-		assertThat(numberStoreNames[0]).isEqualTo("doubleStore");
-		assertThat(numberStoreNames[1]).isEqualTo("floatStore");
-		assertThat(doubleStoreNames).hasSize(0);
-		assertThat(floatStoreNames).hasSize(0);
+		assertEquals(2, numberStoreNames.length);
+		assertEquals("doubleStore", numberStoreNames[0]);
+		assertEquals("floatStore", numberStoreNames[1]);
+		assertEquals(0, doubleStoreNames.length);
+		assertEquals(0, floatStoreNames.length);
 	}
 
 	@Test
-	void testGenericMatchingWithFullTypeDifferentiation() {
+	public void testGenericMatchingWithFullTypeDifferentiation() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
-		bf.setDependencyComparator(AnnotationAwareOrderComparator.INSTANCE);
 		bf.setAutowireCandidateResolver(new GenericTypeAwareAutowireCandidateResolver());
 
-		RootBeanDefinition bd1 = new RootBeanDefinition(NumberStoreFactory.class);
-		bd1.setFactoryMethodName("newDoubleStore");
-		bf.registerBeanDefinition("store1", bd1);
-		RootBeanDefinition bd2 = new RootBeanDefinition(NumberStoreFactory.class);
-		bd2.setFactoryMethodName("newFloatStore");
-		bf.registerBeanDefinition("store2", bd2);
+		bf.registerBeanDefinition("store1", new RootBeanDefinition(DoubleStore.class));
+		bf.registerBeanDefinition("store2", new RootBeanDefinition(FloatStore.class));
 		bf.registerBeanDefinition("numberBean",
 				new RootBeanDefinition(NumberBean.class, RootBeanDefinition.AUTOWIRE_CONSTRUCTOR, false));
 
 		NumberBean nb = bf.getBean(NumberBean.class);
-		assertThat(nb.getDoubleStore()).isSameAs(bf.getBean("store1"));
-		assertThat(nb.getFloatStore()).isSameAs(bf.getBean("store2"));
+		assertSame(bf.getBean("store1"), nb.getDoubleStore());
+		assertSame(bf.getBean("store2"), nb.getFloatStore());
 
 		String[] numberStoreNames = bf.getBeanNamesForType(ResolvableType.forClass(NumberStore.class));
 		String[] doubleStoreNames = bf.getBeanNamesForType(ResolvableType.forClassWithGenerics(NumberStore.class, Double.class));
 		String[] floatStoreNames = bf.getBeanNamesForType(ResolvableType.forClassWithGenerics(NumberStore.class, Float.class));
-		assertThat(numberStoreNames).hasSize(2);
-		assertThat(numberStoreNames[0]).isEqualTo("store1");
-		assertThat(numberStoreNames[1]).isEqualTo("store2");
-		assertThat(doubleStoreNames).hasSize(1);
-		assertThat(doubleStoreNames[0]).isEqualTo("store1");
-		assertThat(floatStoreNames).hasSize(1);
-		assertThat(floatStoreNames[0]).isEqualTo("store2");
-
-		ObjectProvider<NumberStore<?>> numberStoreProvider = bf.getBeanProvider(ResolvableType.forClass(NumberStore.class));
-		ObjectProvider<NumberStore<Double>> doubleStoreProvider = bf.getBeanProvider(ResolvableType.forClassWithGenerics(NumberStore.class, Double.class));
-		ObjectProvider<NumberStore<Float>> floatStoreProvider = bf.getBeanProvider(ResolvableType.forClassWithGenerics(NumberStore.class, Float.class));
-		assertThatExceptionOfType(NoUniqueBeanDefinitionException.class).isThrownBy(numberStoreProvider::getObject);
-		assertThatExceptionOfType(NoUniqueBeanDefinitionException.class).isThrownBy(numberStoreProvider::getIfAvailable);
-		assertThat(numberStoreProvider.getIfUnique()).isNull();
-		assertThat(doubleStoreProvider.getObject()).isSameAs(bf.getBean("store1"));
-		assertThat(doubleStoreProvider.getIfAvailable()).isSameAs(bf.getBean("store1"));
-		assertThat(doubleStoreProvider.getIfUnique()).isSameAs(bf.getBean("store1"));
-		assertThat(floatStoreProvider.getObject()).isSameAs(bf.getBean("store2"));
-		assertThat(floatStoreProvider.getIfAvailable()).isSameAs(bf.getBean("store2"));
-		assertThat(floatStoreProvider.getIfUnique()).isSameAs(bf.getBean("store2"));
-
-		List<NumberStore<?>> resolved = new ArrayList<>();
-		for (NumberStore<?> instance : numberStoreProvider) {
-			resolved.add(instance);
-		}
-		assertThat(resolved.size()).isEqualTo(2);
-		assertThat(resolved.get(0)).isSameAs(bf.getBean("store1"));
-		assertThat(resolved.get(1)).isSameAs(bf.getBean("store2"));
-
-		resolved = numberStoreProvider.stream().collect(Collectors.toList());
-		assertThat(resolved.size()).isEqualTo(2);
-		assertThat(resolved.get(0)).isSameAs(bf.getBean("store1"));
-		assertThat(resolved.get(1)).isSameAs(bf.getBean("store2"));
-
-		resolved = numberStoreProvider.orderedStream().collect(Collectors.toList());
-		assertThat(resolved.size()).isEqualTo(2);
-		assertThat(resolved.get(0)).isSameAs(bf.getBean("store2"));
-		assertThat(resolved.get(1)).isSameAs(bf.getBean("store1"));
-
-		resolved = new ArrayList<>();
-		for (NumberStore<Double> instance : doubleStoreProvider) {
-			resolved.add(instance);
-		}
-		assertThat(resolved.size()).isEqualTo(1);
-		assertThat(resolved.contains(bf.getBean("store1"))).isTrue();
-
-		resolved = doubleStoreProvider.stream().collect(Collectors.toList());
-		assertThat(resolved.size()).isEqualTo(1);
-		assertThat(resolved.contains(bf.getBean("store1"))).isTrue();
-
-		resolved = doubleStoreProvider.orderedStream().collect(Collectors.toList());
-		assertThat(resolved.size()).isEqualTo(1);
-		assertThat(resolved.contains(bf.getBean("store1"))).isTrue();
-
-		resolved = new ArrayList<>();
-		for (NumberStore<Float> instance : floatStoreProvider) {
-			resolved.add(instance);
-		}
-		assertThat(resolved.size()).isEqualTo(1);
-		assertThat(resolved.contains(bf.getBean("store2"))).isTrue();
-
-		resolved = floatStoreProvider.stream().collect(Collectors.toList());
-		assertThat(resolved.size()).isEqualTo(1);
-		assertThat(resolved.contains(bf.getBean("store2"))).isTrue();
-
-		resolved = floatStoreProvider.orderedStream().collect(Collectors.toList());
-		assertThat(resolved.size()).isEqualTo(1);
-		assertThat(resolved.contains(bf.getBean("store2"))).isTrue();
-	}
-
-	@Test
-	void testGenericMatchingWithUnresolvedOrderedStream() {
-		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
-		bf.setDependencyComparator(AnnotationAwareOrderComparator.INSTANCE);
-		bf.setAutowireCandidateResolver(new GenericTypeAwareAutowireCandidateResolver());
-
-		RootBeanDefinition bd1 = new RootBeanDefinition(NumberStoreFactory.class);
-		bd1.setFactoryMethodName("newDoubleStore");
-		bf.registerBeanDefinition("store1", bd1);
-		RootBeanDefinition bd2 = new RootBeanDefinition(NumberStoreFactory.class);
-		bd2.setFactoryMethodName("newFloatStore");
-		bf.registerBeanDefinition("store2", bd2);
-
-		ObjectProvider<NumberStore<?>> numberStoreProvider = bf.getBeanProvider(ResolvableType.forClass(NumberStore.class));
-		List<NumberStore<?>> resolved = numberStoreProvider.orderedStream().collect(Collectors.toList());
-		assertThat(resolved.size()).isEqualTo(2);
-		assertThat(resolved.get(0)).isSameAs(bf.getBean("store2"));
-		assertThat(resolved.get(1)).isSameAs(bf.getBean("store1"));
+		assertEquals(2, numberStoreNames.length);
+		assertEquals("store1", numberStoreNames[0]);
+		assertEquals("store2", numberStoreNames[1]);
+		assertEquals(1, doubleStoreNames.length);
+		assertEquals("store1", doubleStoreNames[0]);
+		assertEquals(1, floatStoreNames.length);
+		assertEquals("store2", floatStoreNames[0]);
 	}
 
 
 	@SuppressWarnings("serial")
-	public static class NamedUrlList extends ArrayList<URL> {
+	public static class NamedUrlList extends LinkedList<URL> {
 	}
 
 
@@ -963,9 +884,9 @@ class BeanFactoryGenericsTests {
 	public static class CollectionDependentBean {
 
 		public CollectionDependentBean(NamedUrlList list, NamedUrlSet set, NamedUrlMap map) {
-			assertThat(list.size()).isEqualTo(1);
-			assertThat(set.size()).isEqualTo(1);
-			assertThat(map.size()).isEqualTo(1);
+			assertEquals(1, list.size());
+			assertEquals(1, set.size());
+			assertEquals(1, map.size());
 		}
 	}
 
@@ -997,8 +918,11 @@ class BeanFactoryGenericsTests {
 		@SuppressWarnings("unchecked")
 		public <T> T createMock(Class<T> toMock) {
 			return (T) Proxy.newProxyInstance(BeanFactoryGenericsTests.class.getClassLoader(), new Class<?>[] {toMock},
-					(InvocationHandler) (proxy, method, args) -> {
-						throw new UnsupportedOperationException("mocked!");
+					new InvocationHandler() {
+						@Override
+						public Object invoke(Object proxy, Method method, Object[] args) throws Throwable {
+							throw new UnsupportedOperationException("mocked!");
+						}
 					});
 		}
 	}
@@ -1033,20 +957,6 @@ class BeanFactoryGenericsTests {
 
 		public NumberStore<Float> getFloatStore() {
 			return this.floatStore;
-		}
-	}
-
-
-	public static class NumberStoreFactory {
-
-		@Order(1)
-		public static NumberStore<Double> newDoubleStore() {
-			return new DoubleStore();
-		}
-
-		@Order(0)
-		public static NumberStore<Float> newFloatStore() {
-			return new FloatStore();
 		}
 	}
 
