@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2021 the original author or authors.
+ * Copyright 2002-2016 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      https://www.apache.org/licenses/LICENSE-2.0
+ *      http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -24,19 +24,14 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.LinkedHashSet;
 import java.util.List;
-import java.util.Optional;
 import java.util.Set;
-import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
 
-import jakarta.annotation.PostConstruct;
-import jakarta.inject.Inject;
-import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.Disabled;
-import org.junit.jupiter.api.Test;
-import reactor.core.publisher.Flux;
-import reactor.core.publisher.Mono;
+import org.junit.After;
+import org.junit.Rule;
+import org.junit.Test;
+import org.junit.rules.ExpectedException;
 
 import org.springframework.aop.framework.Advised;
 import org.springframework.aop.support.AopUtils;
@@ -44,7 +39,6 @@ import org.springframework.beans.factory.BeanCreationException;
 import org.springframework.beans.factory.BeanInitializationException;
 import org.springframework.beans.factory.ObjectFactory;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.context.ConfigurableApplicationContext;
 import org.springframework.context.PayloadApplicationEvent;
 import org.springframework.context.annotation.AnnotationConfigApplicationContext;
@@ -66,19 +60,20 @@ import org.springframework.scheduling.annotation.Async;
 import org.springframework.scheduling.annotation.EnableAsync;
 import org.springframework.stereotype.Component;
 import org.springframework.util.Assert;
-import org.springframework.util.concurrent.SettableListenableFuture;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.validation.beanvalidation.MethodValidationPostProcessor;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
-import static org.assertj.core.api.Assertions.assertThatIllegalStateException;
+import static org.hamcrest.Matchers.*;
+import static org.junit.Assert.*;
 
 /**
  * @author Stephane Nicoll
  * @author Juergen Hoeller
  */
-class AnnotationDrivenEventListenerTests {
+public class AnnotationDrivenEventListenerTests {
+
+	@Rule
+	public final ExpectedException thrown = ExpectedException.none();
 
 	private ConfigurableApplicationContext context;
 
@@ -87,7 +82,7 @@ class AnnotationDrivenEventListenerTests {
 	private CountDownLatch countDownLatch;  // 1 call by default
 
 
-	@AfterEach
+	@After
 	public void closeContext() {
 		if (this.context != null) {
 			this.context.close();
@@ -96,7 +91,7 @@ class AnnotationDrivenEventListenerTests {
 
 
 	@Test
-	void simpleEventJavaConfig() {
+	public void simpleEventJavaConfig() {
 		load(TestEventListener.class);
 		TestEvent event = new TestEvent(this, "test");
 		TestEventListener listener = this.context.getBean(TestEventListener.class);
@@ -110,16 +105,10 @@ class AnnotationDrivenEventListenerTests {
 		this.context.publishEvent(event);
 		this.eventCollector.assertEvent(listener, event);
 		this.eventCollector.assertTotalEventsCount(1);
-
-		context.getBean(ApplicationEventMulticaster.class).removeApplicationListeners(l ->
-				l instanceof SmartApplicationListener && ((SmartApplicationListener) l).getListenerId().contains("TestEvent"));
-		this.eventCollector.clear();
-		this.context.publishEvent(event);
-		this.eventCollector.assertNoEventReceived(listener);
 	}
 
 	@Test
-	void simpleEventXmlConfig() {
+	public void simpleEventXmlConfig() {
 		this.context = new ClassPathXmlApplicationContext(
 				"org/springframework/context/event/simple-event-configuration.xml");
 
@@ -131,16 +120,10 @@ class AnnotationDrivenEventListenerTests {
 		this.context.publishEvent(event);
 		this.eventCollector.assertEvent(listener, event);
 		this.eventCollector.assertTotalEventsCount(1);
-
-		context.getBean(ApplicationEventMulticaster.class).removeApplicationListeners(l ->
-				l instanceof SmartApplicationListener && ((SmartApplicationListener) l).getListenerId().contains("TestEvent"));
-		this.eventCollector.clear();
-		this.context.publishEvent(event);
-		this.eventCollector.assertNoEventReceived(listener);
 	}
 
 	@Test
-	void metaAnnotationIsDiscovered() {
+	public void metaAnnotationIsDiscovered() {
 		load(MetaAnnotationListenerTestBean.class);
 		MetaAnnotationListenerTestBean bean = this.context.getBean(MetaAnnotationListenerTestBean.class);
 		this.eventCollector.assertNoEventReceived(bean);
@@ -149,50 +132,44 @@ class AnnotationDrivenEventListenerTests {
 		this.context.publishEvent(event);
 		this.eventCollector.assertEvent(bean, event);
 		this.eventCollector.assertTotalEventsCount(1);
-
-		context.getBean(ApplicationEventMulticaster.class).removeApplicationListeners(l ->
-				l instanceof SmartApplicationListener && ((SmartApplicationListener) l).getListenerId().equals("foo"));
-		this.eventCollector.clear();
-		this.context.publishEvent(event);
-		this.eventCollector.assertNoEventReceived(bean);
 	}
 
 	@Test
-	void contextEventsAreReceived() {
+	public void contextEventsAreReceived() {
 		load(ContextEventListener.class);
 		ContextEventListener listener = this.context.getBean(ContextEventListener.class);
 
 		List<Object> events = this.eventCollector.getEvents(listener);
-		assertThat(events.size()).as("Wrong number of initial context events").isEqualTo(1);
-		assertThat(events.get(0).getClass()).isEqualTo(ContextRefreshedEvent.class);
+		assertEquals("Wrong number of initial context events", 1, events.size());
+		assertEquals(ContextRefreshedEvent.class, events.get(0).getClass());
 
 		this.context.stop();
 		List<Object> eventsAfterStop = this.eventCollector.getEvents(listener);
-		assertThat(eventsAfterStop.size()).as("Wrong number of context events on shutdown").isEqualTo(2);
-		assertThat(eventsAfterStop.get(1).getClass()).isEqualTo(ContextStoppedEvent.class);
+		assertEquals("Wrong number of context events on shutdown", 2, eventsAfterStop.size());
+		assertEquals(ContextStoppedEvent.class, eventsAfterStop.get(1).getClass());
 		this.eventCollector.assertTotalEventsCount(2);
 	}
 
 	@Test
-	void methodSignatureNoEvent() {
-		@SuppressWarnings("resource")
+	public void methodSignatureNoEvent() {
 		AnnotationConfigApplicationContext failingContext =
 				new AnnotationConfigApplicationContext();
 		failingContext.register(BasicConfiguration.class,
 				InvalidMethodSignatureEventListener.class);
 
-		assertThatExceptionOfType(BeanInitializationException.class).isThrownBy(() ->
-				failingContext.refresh())
-			.withMessageContaining(InvalidMethodSignatureEventListener.class.getName())
-			.withMessageContaining("cannotBeCalled");
+		this.thrown.expect(BeanInitializationException.class);
+		this.thrown.expectMessage(InvalidMethodSignatureEventListener.class.getName());
+		this.thrown.expectMessage("cannotBeCalled");
+		failingContext.refresh();
 	}
 
 	@Test
-	void simpleReply() {
+	public void simpleReply() {
 		load(TestEventListener.class, ReplyEventListener.class);
 		AnotherTestEvent event = new AnotherTestEvent(this, "dummy");
 		ReplyEventListener replyEventListener = this.context.getBean(ReplyEventListener.class);
 		TestEventListener listener = this.context.getBean(TestEventListener.class);
+
 
 		this.eventCollector.assertNoEventReceived(listener);
 		this.eventCollector.assertNoEventReceived(replyEventListener);
@@ -203,7 +180,7 @@ class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	void nullReplyIgnored() {
+	public void nullReplyIgnored() {
 		load(TestEventListener.class, ReplyEventListener.class);
 		AnotherTestEvent event = new AnotherTestEvent(this, null); // No response
 		ReplyEventListener replyEventListener = this.context.getBean(ReplyEventListener.class);
@@ -218,7 +195,7 @@ class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	void arrayReply() {
+	public void arrayReply() {
 		load(TestEventListener.class, ReplyEventListener.class);
 		AnotherTestEvent event = new AnotherTestEvent(this, new String[]{"first", "second"});
 		ReplyEventListener replyEventListener = this.context.getBean(ReplyEventListener.class);
@@ -233,7 +210,7 @@ class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	void collectionReply() {
+	public void collectionReply() {
 		load(TestEventListener.class, ReplyEventListener.class);
 		Set<Object> replies = new LinkedHashSet<>();
 		replies.add("first");
@@ -252,7 +229,7 @@ class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	void collectionReplyNullValue() {
+	public void collectionReplyNullValue() {
 		load(TestEventListener.class, ReplyEventListener.class);
 		AnotherTestEvent event = new AnotherTestEvent(this, Arrays.asList(null, "test"));
 		ReplyEventListener replyEventListener = this.context.getBean(ReplyEventListener.class);
@@ -267,73 +244,11 @@ class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	void listenableFutureReply() {
-		load(TestEventListener.class, ReplyEventListener.class);
-		SettableListenableFuture<String> future = new SettableListenableFuture<>();
-		future.set("dummy");
-		AnotherTestEvent event = new AnotherTestEvent(this, future);
-		ReplyEventListener replyEventListener = this.context.getBean(ReplyEventListener.class);
-		TestEventListener listener = this.context.getBean(TestEventListener.class);
-
-		this.eventCollector.assertNoEventReceived(listener);
-		this.eventCollector.assertNoEventReceived(replyEventListener);
-		this.context.publishEvent(event);
-		this.eventCollector.assertEvent(replyEventListener, event);
-		this.eventCollector.assertEvent(listener, "dummy"); // reply
-		this.eventCollector.assertTotalEventsCount(2);
-	}
-
-	@Test
-	void completableFutureReply() {
-		load(TestEventListener.class, ReplyEventListener.class);
-		AnotherTestEvent event = new AnotherTestEvent(this, CompletableFuture.completedFuture("dummy"));
-		ReplyEventListener replyEventListener = this.context.getBean(ReplyEventListener.class);
-		TestEventListener listener = this.context.getBean(TestEventListener.class);
-
-		this.eventCollector.assertNoEventReceived(listener);
-		this.eventCollector.assertNoEventReceived(replyEventListener);
-		this.context.publishEvent(event);
-		this.eventCollector.assertEvent(replyEventListener, event);
-		this.eventCollector.assertEvent(listener, "dummy"); // reply
-		this.eventCollector.assertTotalEventsCount(2);
-	}
-
-	@Test
-	void monoReply() {
-		load(TestEventListener.class, ReplyEventListener.class);
-		AnotherTestEvent event = new AnotherTestEvent(this, Mono.just("dummy"));
-		ReplyEventListener replyEventListener = this.context.getBean(ReplyEventListener.class);
-		TestEventListener listener = this.context.getBean(TestEventListener.class);
-
-		this.eventCollector.assertNoEventReceived(listener);
-		this.eventCollector.assertNoEventReceived(replyEventListener);
-		this.context.publishEvent(event);
-		this.eventCollector.assertEvent(replyEventListener, event);
-		this.eventCollector.assertEvent(listener, "dummy"); // reply
-		this.eventCollector.assertTotalEventsCount(2);
-	}
-
-	@Test
-	void fluxReply() {
-		load(TestEventListener.class, ReplyEventListener.class);
-		AnotherTestEvent event = new AnotherTestEvent(this, Flux.just("dummy1", "dummy2"));
-		ReplyEventListener replyEventListener = this.context.getBean(ReplyEventListener.class);
-		TestEventListener listener = this.context.getBean(TestEventListener.class);
-
-		this.eventCollector.assertNoEventReceived(listener);
-		this.eventCollector.assertNoEventReceived(replyEventListener);
-		this.context.publishEvent(event);
-		this.eventCollector.assertEvent(replyEventListener, event);
-		this.eventCollector.assertEvent(listener, "dummy1", "dummy2"); // reply
-		this.eventCollector.assertTotalEventsCount(3);
-	}
-
-	@Test
-	void eventListenerWorksWithSimpleInterfaceProxy() {
+	public void eventListenerWorksWithSimpleInterfaceProxy() throws Exception {
 		load(ScopedProxyTestBean.class);
 
 		SimpleService proxy = this.context.getBean(SimpleService.class);
-		assertThat(proxy instanceof Advised).as("bean should be a proxy").isTrue();
+		assertTrue("bean should be a proxy", proxy instanceof Advised);
 		this.eventCollector.assertNoEventReceived(proxy.getId());
 
 		this.context.publishEvent(new ContextRefreshedEvent(this.context));
@@ -346,11 +261,11 @@ class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	void eventListenerWorksWithAnnotatedInterfaceProxy() {
+	public void eventListenerWorksWithAnnotatedInterfaceProxy() throws Exception {
 		load(AnnotatedProxyTestBean.class);
 
 		AnnotatedSimpleService proxy = this.context.getBean(AnnotatedSimpleService.class);
-		assertThat(proxy instanceof Advised).as("bean should be a proxy").isTrue();
+		assertTrue("bean should be a proxy", proxy instanceof Advised);
 		this.eventCollector.assertNoEventReceived(proxy.getId());
 
 		this.context.publishEvent(new ContextRefreshedEvent(this.context));
@@ -363,11 +278,11 @@ class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	void eventListenerWorksWithCglibProxy() {
+	public void eventListenerWorksWithCglibProxy() throws Exception {
 		load(CglibProxyTestBean.class);
 
 		CglibProxyTestBean proxy = this.context.getBean(CglibProxyTestBean.class);
-		assertThat(AopUtils.isCglibProxy(proxy)).as("bean should be a cglib proxy").isTrue();
+		assertTrue("bean should be a cglib proxy", AopUtils.isCglibProxy(proxy));
 		this.eventCollector.assertNoEventReceived(proxy.getId());
 
 		this.context.publishEvent(new ContextRefreshedEvent(this.context));
@@ -380,20 +295,24 @@ class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	void privateMethodOnCglibProxyFails() {
-		assertThatExceptionOfType(BeanInitializationException.class).isThrownBy(() ->
-				load(CglibProxyWithPrivateMethod.class))
-			.withCauseInstanceOf(IllegalStateException.class);
+	public void privateMethodOnCglibProxyFails() throws Exception {
+		try {
+			load(CglibProxyWithPrivateMethod.class);
+			fail("Should have thrown BeanInitializationException");
+		}
+		catch (BeanInitializationException ex) {
+			assertTrue(ex.getCause() instanceof IllegalStateException);
+		}
 	}
 
 	@Test
-	void eventListenerWorksWithCustomScope() {
+	public void eventListenerWorksWithCustomScope() throws Exception {
 		load(CustomScopeTestBean.class);
 		CustomScope customScope = new CustomScope();
 		this.context.getBeanFactory().registerScope("custom", customScope);
 
 		CustomScopeTestBean proxy = this.context.getBean(CustomScopeTestBean.class);
-		assertThat(AopUtils.isCglibProxy(proxy)).as("bean should be a cglib proxy").isTrue();
+		assertTrue("bean should be a cglib proxy", AopUtils.isCglibProxy(proxy));
 		this.eventCollector.assertNoEventReceived(proxy.getId());
 
 		this.context.publishEvent(new ContextRefreshedEvent(this.context));
@@ -409,14 +328,19 @@ class AnnotationDrivenEventListenerTests {
 		this.eventCollector.assertEvent(proxy.getId(), event);
 		this.eventCollector.assertTotalEventsCount(1);
 
-		customScope.active = false;
-		assertThatExceptionOfType(BeanCreationException.class).isThrownBy(() ->
-				this.context.publishEvent(new TestEvent()))
-			.withCauseInstanceOf(IllegalStateException.class);
+		try {
+			customScope.active = false;
+			this.context.publishEvent(new TestEvent());
+			fail("Should have thrown IllegalStateException");
+		}
+		catch (BeanCreationException ex) {
+			// expected
+			assertTrue(ex.getCause() instanceof IllegalStateException);
+		}
 	}
 
 	@Test
-	void asyncProcessingApplied() throws InterruptedException {
+	public void asyncProcessingApplied() throws InterruptedException {
 		loadAsync(AsyncEventListener.class);
 
 		String threadName = Thread.currentThread().getName();
@@ -431,7 +355,7 @@ class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	void asyncProcessingAppliedWithInterfaceProxy() throws InterruptedException {
+	public void asyncProcessingAppliedWithInterfaceProxy() throws InterruptedException {
 		doLoad(AsyncConfigurationWithInterfaces.class, SimpleProxyTestBean.class);
 
 		String threadName = Thread.currentThread().getName();
@@ -446,7 +370,7 @@ class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	void asyncProcessingAppliedWithScopedProxy() throws InterruptedException {
+	public void asyncProcessingAppliedWithScopedProxy() throws InterruptedException {
 		doLoad(AsyncConfigurationWithInterfaces.class, ScopedProxyTestBean.class);
 
 		String threadName = Thread.currentThread().getName();
@@ -461,20 +385,24 @@ class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	void exceptionPropagated() {
+	public void exceptionPropagated() {
 		load(ExceptionEventListener.class);
 		TestEvent event = new TestEvent(this, "fail");
 		ExceptionEventListener listener = this.context.getBean(ExceptionEventListener.class);
 		this.eventCollector.assertNoEventReceived(listener);
-		assertThatIllegalStateException().isThrownBy(() ->
-				this.context.publishEvent(event))
-			.withMessage("Test exception");
-		this.eventCollector.assertEvent(listener, event);
-		this.eventCollector.assertTotalEventsCount(1);
+		try {
+			this.context.publishEvent(event);
+			fail("An exception should have thrown");
+		}
+		catch (IllegalStateException e) {
+			assertEquals("Wrong exception", "Test exception", e.getMessage());
+			this.eventCollector.assertEvent(listener, event);
+			this.eventCollector.assertTotalEventsCount(1);
+		}
 	}
 
 	@Test
-	void exceptionNotPropagatedWithAsync() throws InterruptedException {
+	public void exceptionNotPropagatedWithAsync() throws InterruptedException {
 		loadAsync(ExceptionEventListener.class);
 		AnotherTestEvent event = new AnotherTestEvent(this, "fail");
 		ExceptionEventListener listener = this.context.getBean(ExceptionEventListener.class);
@@ -488,7 +416,7 @@ class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	void listenerWithSimplePayload() {
+	public void listenerWithSimplePayload() {
 		load(TestEventListener.class);
 		TestEventListener listener = this.context.getBean(TestEventListener.class);
 
@@ -499,7 +427,7 @@ class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	void listenerWithNonMatchingPayload() {
+	public void listenerWithNonMatchingPayload() {
 		load(TestEventListener.class);
 		TestEventListener listener = this.context.getBean(TestEventListener.class);
 
@@ -510,7 +438,7 @@ class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	void replyWithPayload() {
+	public void replyWithPayload() {
 		load(TestEventListener.class, ReplyEventListener.class);
 		AnotherTestEvent event = new AnotherTestEvent(this, "String");
 		ReplyEventListener replyEventListener = this.context.getBean(ReplyEventListener.class);
@@ -526,7 +454,7 @@ class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	void listenerWithGenericApplicationEvent() {
+	public void listenerWithGenericApplicationEvent() {
 		load(GenericEventListener.class);
 		GenericEventListener listener = this.context.getBean(GenericEventListener.class);
 
@@ -537,7 +465,7 @@ class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	void listenerWithResolvableTypeEvent() {
+	public void listenerWithResolvableTypeEvent() {
 		load(ResolvableTypeEventListener.class);
 		ResolvableTypeEventListener listener = this.context.getBean(ResolvableTypeEventListener.class);
 
@@ -549,7 +477,7 @@ class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	void listenerWithResolvableTypeEventWrongGeneric() {
+	public void listenerWithResolvableTypeEventWrongGeneric() {
 		load(ResolvableTypeEventListener.class);
 		ResolvableTypeEventListener listener = this.context.getBean(ResolvableTypeEventListener.class);
 
@@ -561,12 +489,12 @@ class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	void conditionMatch() {
+	public void conditionMatch() {
 		validateConditionMatch(ConditionalEventListener.class);
 	}
 
 	@Test
-	void conditionMatchWithProxy() {
+	public void conditionMatchWithProxy() {
 		validateConditionMatch(ConditionalEventListener.class, MethodValidationPostProcessor.class);
 	}
 
@@ -599,7 +527,7 @@ class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	void conditionDoesNotMatch() {
+	public void conditionDoesNotMatch() {
 		long maxLong = Long.MAX_VALUE;
 		load(ConditionalEventListener.class);
 		TestEvent event = new TestEvent(this, "KO");
@@ -624,28 +552,13 @@ class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	void orderedListeners() {
+	public void orderedListeners() {
 		load(OrderedTestListener.class);
 		OrderedTestListener listener = this.context.getBean(OrderedTestListener.class);
 
-		assertThat(listener.order.isEmpty()).isTrue();
+		assertTrue(listener.order.isEmpty());
 		this.context.publishEvent("whatever");
-		assertThat(listener.order).contains("first", "second", "third");
-	}
-
-	@Test @Disabled  // SPR-15122
-	void listenersReceiveEarlyEvents() {
-		load(EventOnPostConstruct.class, OrderedTestListener.class);
-		OrderedTestListener listener = this.context.getBean(OrderedTestListener.class);
-
-		assertThat(listener.order).contains("first", "second", "third");
-	}
-
-	@Test
-	void missingListenerBeanIgnored() {
-		load(MissingEventListener.class);
-		context.getBean(UseMissingEventListener.class);
-		context.getBean(ApplicationEventMulticaster.class).multicastEvent(new TestEvent(this));
+		assertThat(listener.order, contains("first", "second", "third"));
 	}
 
 
@@ -696,7 +609,7 @@ class AnnotationDrivenEventListenerTests {
 		static class TestConditionEvaluator {
 
 			public boolean valid(Double ratio) {
-				return Double.valueOf(42).equals(ratio);
+				return new Double(42).equals(ratio);
 			}
 		}
 	}
@@ -728,7 +641,7 @@ class AnnotationDrivenEventListenerTests {
 	}
 
 
-	@EventListener(id = "foo")
+	@EventListener
 	@Target(ElementType.METHOD)
 	@Retention(RetentionPolicy.RUNTIME)
 	@interface FooListener {
@@ -774,7 +687,8 @@ class AnnotationDrivenEventListenerTests {
 			if (event.content == null) {
 				return null;
 			}
-			else if (event.content instanceof String s) {
+			else if (event.content instanceof String) {
+				String s = (String) event.content;
 				if (s.equals("String")) {
 					return event.content;
 				}
@@ -822,7 +736,7 @@ class AnnotationDrivenEventListenerTests {
 		@EventListener
 		@Async
 		public void handleAsync(AnotherTestEvent event) {
-			assertThat(Thread.currentThread().getName()).isNotEqualTo(event.content);
+			assertTrue(!Thread.currentThread().getName().equals(event.content));
 			collectEvent(event);
 			this.countDownLatch.countDown();
 		}
@@ -868,9 +782,8 @@ class AnnotationDrivenEventListenerTests {
 
 		@EventListener
 		@Async
-		@Override
 		public void handleAsync(AnotherTestEvent event) {
-			assertThat(Thread.currentThread().getName()).isNotEqualTo(event.content);
+			assertTrue(!Thread.currentThread().getName().equals(event.content));
 			this.eventCollector.addEvent(this, event);
 			this.countDownLatch.countDown();
 		}
@@ -895,9 +808,8 @@ class AnnotationDrivenEventListenerTests {
 
 		@EventListener
 		@Async
-		@Override
 		public void handleAsync(AnotherTestEvent event) {
-			assertThat(Thread.currentThread().getName()).isNotEqualTo(event.content);
+			assertTrue(!Thread.currentThread().getName().equals(event.content));
 			this.eventCollector.addEvent(this, event);
 			this.countDownLatch.countDown();
 		}
@@ -1010,27 +922,25 @@ class AnnotationDrivenEventListenerTests {
 			super.handle(event);
 		}
 
-		@EventListener(condition = "#payload.startsWith('OK')")
 		@Override
+		@EventListener(condition = "#payload.startsWith('OK')")
 		public void handleString(String payload) {
 			super.handleString(payload);
 		}
 
 		@ConditionalEvent("#root.event.timestamp > #p0")
-		@Override
 		public void handleTimestamp(Long timestamp) {
 			collectEvent(timestamp);
 		}
 
 		@ConditionalEvent("@conditionEvaluator.valid(#p0)")
-		@Override
 		public void handleRatio(Double ratio) {
 			collectEvent(ratio);
 		}
 	}
 
 
-	@Configuration
+	@Component
 	static class OrderedTestListener extends TestEventListener {
 
 		public final List<String> order = new ArrayList<>();
@@ -1050,18 +960,6 @@ class AnnotationDrivenEventListenerTests {
 		@EventListener
 		public void handleSecond(String payload) {
 			this.order.add("second");
-		}
-	}
-
-
-	static class EventOnPostConstruct {
-
-		@Autowired
-		ApplicationEventPublisher publisher;
-
-		@PostConstruct
-		public void init() {
-			this.publisher.publishEvent("earlyEvent");
 		}
 	}
 
@@ -1098,38 +996,6 @@ class AnnotationDrivenEventListenerTests {
 		@Override
 		public String getConversationId() {
 			return null;
-		}
-	}
-
-
-	@Configuration
-	@Import(UseMissingEventListener.class)
-	public static class MissingEventListener {
-
-		@Bean
-		public MyEventListener missing() {
-			return null;
-		}
-	}
-
-
-	@Component
-	public static class MyEventListener {
-
-		@EventListener
-		public void hear(TestEvent e) {
-			throw new AssertionError();
-		}
-	}
-
-
-	public static class UseMissingEventListener {
-
-		@Inject
-		public UseMissingEventListener(Optional<MyEventListener> notHere) {
-			if (notHere.isPresent()) {
-				throw new AssertionError();
-			}
 		}
 	}
 
