@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2022 the original author or authors.
+ * Copyright 2002-2018 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      https://www.apache.org/licenses/LICENSE-2.0
+ *      http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -23,6 +23,8 @@ import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.Comparator;
+import java.util.HashSet;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
@@ -38,15 +40,12 @@ import org.springframework.expression.PropertyAccessor;
 import org.springframework.expression.TypedValue;
 import org.springframework.expression.spel.CodeFlow;
 import org.springframework.expression.spel.CompilablePropertyAccessor;
-import org.springframework.lang.Nullable;
-import org.springframework.util.Assert;
-import org.springframework.util.ClassUtils;
 import org.springframework.util.ReflectionUtils;
 import org.springframework.util.StringUtils;
 
 /**
  * A powerful {@link PropertyAccessor} that uses reflection to access properties
- * for reading and possibly also for writing on a target instance.
+ * for reading and possibly also for writing.
  *
  * <p>A property can be referenced through a public getter method (when being read)
  * or a public setter method (when being written), and also as a public field.
@@ -54,7 +53,6 @@ import org.springframework.util.StringUtils;
  * @author Andy Clement
  * @author Juergen Hoeller
  * @author Phillip Webb
- * @author Sam Brannen
  * @since 3.0
  * @see StandardEvaluationContext
  * @see SimpleEvaluationContext
@@ -64,19 +62,30 @@ public class ReflectivePropertyAccessor implements PropertyAccessor {
 
 	private static final Set<Class<?>> ANY_TYPES = Collections.emptySet();
 
-	private static final Set<Class<?>> BOOLEAN_TYPES = Set.of(Boolean.class, Boolean.TYPE);
+	private static final Set<Class<?>> BOOLEAN_TYPES;
+
+	static {
+		Set<Class<?>> booleanTypes = new HashSet<Class<?>>(4);
+		booleanTypes.add(Boolean.class);
+		booleanTypes.add(Boolean.TYPE);
+		BOOLEAN_TYPES = Collections.unmodifiableSet(booleanTypes);
+	}
+
 
 	private final boolean allowWrite;
 
-	private final Map<PropertyCacheKey, InvokerPair> readerCache = new ConcurrentHashMap<>(64);
+	private final Map<PropertyCacheKey, InvokerPair> readerCache =
+			new ConcurrentHashMap<PropertyCacheKey, InvokerPair>(64);
 
-	private final Map<PropertyCacheKey, Member> writerCache = new ConcurrentHashMap<>(64);
+	private final Map<PropertyCacheKey, Member> writerCache =
+			new ConcurrentHashMap<PropertyCacheKey, Member>(64);
 
-	private final Map<PropertyCacheKey, TypeDescriptor> typeDescriptorCache = new ConcurrentHashMap<>(64);
+	private final Map<PropertyCacheKey, TypeDescriptor> typeDescriptorCache =
+			new ConcurrentHashMap<PropertyCacheKey, TypeDescriptor>(64);
 
-	private final Map<Class<?>, Method[]> sortedMethodsCache = new ConcurrentHashMap<>(64);
+	private final Map<Class<?>, Method[]> sortedMethodsCache =
+			new ConcurrentHashMap<Class<?>, Method[]>(64);
 
-	@Nullable
 	private volatile InvokerPair lastReadInvokerPair;
 
 
@@ -89,8 +98,8 @@ public class ReflectivePropertyAccessor implements PropertyAccessor {
 	}
 
 	/**
-	 * Create a new property accessor for reading and possibly also writing.
-	 * @param allowWrite whether to allow write operations on a target instance
+	 * Create a new property accessor for reading and possibly writing.
+	 * @param allowWrite whether to also allow for write operations
 	 * @since 4.3.15
 	 * @see #canWrite
 	 */
@@ -103,18 +112,17 @@ public class ReflectivePropertyAccessor implements PropertyAccessor {
 	 * Returns {@code null} which means this is a general purpose accessor.
 	 */
 	@Override
-	@Nullable
 	public Class<?>[] getSpecificTargetClasses() {
 		return null;
 	}
 
 	@Override
-	public boolean canRead(EvaluationContext context, @Nullable Object target, String name) throws AccessException {
+	public boolean canRead(EvaluationContext context, Object target, String name) throws AccessException {
 		if (target == null) {
 			return false;
 		}
 
-		Class<?> type = (target instanceof Class<?> clazz ? clazz : target.getClass());
+		Class<?> type = (target instanceof Class ? (Class<?>) target : target.getClass());
 		if (type.isArray() && name.equals("length")) {
 			return true;
 		}
@@ -130,7 +138,6 @@ public class ReflectivePropertyAccessor implements PropertyAccessor {
 			// The readerCache will only contain gettable properties (let's not worry about setters for now).
 			Property property = new Property(type, method, null);
 			TypeDescriptor typeDescriptor = new TypeDescriptor(property);
-			method = ClassUtils.getInterfaceMethodIfPossible(method, type);
 			this.readerCache.put(cacheKey, new InvokerPair(method, typeDescriptor));
 			this.typeDescriptorCache.put(cacheKey, typeDescriptor);
 			return true;
@@ -149,9 +156,11 @@ public class ReflectivePropertyAccessor implements PropertyAccessor {
 	}
 
 	@Override
-	public TypedValue read(EvaluationContext context, @Nullable Object target, String name) throws AccessException {
-		Assert.state(target != null, "Target must not be null");
-		Class<?> type = (target instanceof Class<?> clazz ? clazz : target.getClass());
+	public TypedValue read(EvaluationContext context, Object target, String name) throws AccessException {
+		if (target == null) {
+			throw new AccessException("Cannot read property of null target");
+		}
+		Class<?> type = (target instanceof Class ? (Class<?>) target : target.getClass());
 
 		if (type.isArray() && name.equals("length")) {
 			if (target instanceof Class) {
@@ -173,7 +182,6 @@ public class ReflectivePropertyAccessor implements PropertyAccessor {
 					// The readerCache will only contain gettable properties (let's not worry about setters for now).
 					Property property = new Property(type, method, null);
 					TypeDescriptor typeDescriptor = new TypeDescriptor(property);
-					method = ClassUtils.getInterfaceMethodIfPossible(method, type);
 					invoker = new InvokerPair(method, typeDescriptor);
 					this.lastReadInvokerPair = invoker;
 					this.readerCache.put(cacheKey, invoker);
@@ -217,12 +225,12 @@ public class ReflectivePropertyAccessor implements PropertyAccessor {
 	}
 
 	@Override
-	public boolean canWrite(EvaluationContext context, @Nullable Object target, String name) throws AccessException {
+	public boolean canWrite(EvaluationContext context, Object target, String name) throws AccessException {
 		if (!this.allowWrite || target == null) {
 			return false;
 		}
 
-		Class<?> type = (target instanceof Class<?> clazz ? clazz : target.getClass());
+		Class<?> type = (target instanceof Class ? (Class<?>) target : target.getClass());
 		PropertyCacheKey cacheKey = new PropertyCacheKey(type, name, target instanceof Class);
 		if (this.writerCache.containsKey(cacheKey)) {
 			return true;
@@ -233,7 +241,6 @@ public class ReflectivePropertyAccessor implements PropertyAccessor {
 			// Treat it like a property
 			Property property = new Property(type, null, method);
 			TypeDescriptor typeDescriptor = new TypeDescriptor(property);
-			method = ClassUtils.getInterfaceMethodIfPossible(method, type);
 			this.writerCache.put(cacheKey, method);
 			this.typeDescriptorCache.put(cacheKey, typeDescriptor);
 			return true;
@@ -251,16 +258,16 @@ public class ReflectivePropertyAccessor implements PropertyAccessor {
 	}
 
 	@Override
-	public void write(EvaluationContext context, @Nullable Object target, String name, @Nullable Object newValue)
-			throws AccessException {
-
+	public void write(EvaluationContext context, Object target, String name, Object newValue) throws AccessException {
 		if (!this.allowWrite) {
 			throw new AccessException("PropertyAccessor for property '" + name +
 					"' on target [" + target + "] does not allow write operations");
 		}
 
-		Assert.state(target != null, "Target must not be null");
-		Class<?> type = (target instanceof Class<?> clazz ? clazz : target.getClass());
+		if (target == null) {
+			throw new AccessException("Cannot write property on null target");
+		}
+		Class<?> type = (target instanceof Class ? (Class<?>) target : target.getClass());
 
 		Object possiblyConvertedNewValue = newValue;
 		TypeDescriptor typeDescriptor = getTypeDescriptor(context, target, name);
@@ -282,7 +289,6 @@ public class ReflectivePropertyAccessor implements PropertyAccessor {
 			if (method == null) {
 				method = findSetterForProperty(name, type, target);
 				if (method != null) {
-					method = ClassUtils.getInterfaceMethodIfPossible(method, type);
 					cachedMember = method;
 					this.writerCache.put(cacheKey, cachedMember);
 				}
@@ -323,10 +329,21 @@ public class ReflectivePropertyAccessor implements PropertyAccessor {
 		throw new AccessException("Neither setter method nor field found for property '" + name + "'");
 	}
 
+	/**
+	 * @deprecated as of 4.3.15 since it is not used within the framework anymore
+	 */
+	@Deprecated
+	public Member getLastReadInvokerPair() {
+		InvokerPair lastReadInvoker = this.lastReadInvokerPair;
+		return (lastReadInvoker != null ? lastReadInvoker.member : null);
+	}
 
-	@Nullable
+
 	private TypeDescriptor getTypeDescriptor(EvaluationContext context, Object target, String name) {
-		Class<?> type = (target instanceof Class<?> clazz ? clazz : target.getClass());
+		if (target == null) {
+			return null;
+		}
+		Class<?> type = (target instanceof Class ? (Class<?>) target : target.getClass());
 
 		if (type.isArray() && name.equals("length")) {
 			return TypeDescriptor.valueOf(Integer.TYPE);
@@ -347,7 +364,6 @@ public class ReflectivePropertyAccessor implements PropertyAccessor {
 		return typeDescriptor;
 	}
 
-	@Nullable
 	private Method findGetterForProperty(String propertyName, Class<?> clazz, Object target) {
 		Method method = findGetterForProperty(propertyName, clazz, target instanceof Class);
 		if (method == null && target instanceof Class) {
@@ -356,7 +372,6 @@ public class ReflectivePropertyAccessor implements PropertyAccessor {
 		return method;
 	}
 
-	@Nullable
 	private Method findSetterForProperty(String propertyName, Class<?> clazz, Object target) {
 		Method method = findSetterForProperty(propertyName, clazz, target instanceof Class);
 		if (method == null && target instanceof Class) {
@@ -368,18 +383,12 @@ public class ReflectivePropertyAccessor implements PropertyAccessor {
 	/**
 	 * Find a getter method for the specified property.
 	 */
-	@Nullable
 	protected Method findGetterForProperty(String propertyName, Class<?> clazz, boolean mustBeStatic) {
 		Method method = findMethodForProperty(getPropertyMethodSuffixes(propertyName),
-				"get", clazz, mustBeStatic, 0, ANY_TYPES);
+				 "get", clazz, mustBeStatic, 0, ANY_TYPES);
 		if (method == null) {
 			method = findMethodForProperty(getPropertyMethodSuffixes(propertyName),
-					"is", clazz, mustBeStatic, 0, BOOLEAN_TYPES);
-			if (method == null) {
-				// Record-style plain accessor method, e.g. name()
-				method = findMethodForProperty(new String[] {propertyName},
-						"", clazz, mustBeStatic, 0, ANY_TYPES);
-			}
+					 "is", clazz, mustBeStatic, 0, BOOLEAN_TYPES);
 		}
 		return method;
 	}
@@ -387,13 +396,11 @@ public class ReflectivePropertyAccessor implements PropertyAccessor {
 	/**
 	 * Find a setter method for the specified property.
 	 */
-	@Nullable
 	protected Method findSetterForProperty(String propertyName, Class<?> clazz, boolean mustBeStatic) {
 		return findMethodForProperty(getPropertyMethodSuffixes(propertyName),
 				"set", clazz, mustBeStatic, 1, ANY_TYPES);
 	}
 
-	@Nullable
 	private Method findMethodForProperty(String[] methodSuffixes, String prefix, Class<?> clazz,
 			boolean mustBeStatic, int numberOfParams, Set<Class<?>> requiredReturnTypes) {
 
@@ -401,7 +408,7 @@ public class ReflectivePropertyAccessor implements PropertyAccessor {
 		for (String methodSuffix : methodSuffixes) {
 			for (Method method : methods) {
 				if (isCandidateForProperty(method, clazz) && method.getName().equals(prefix + methodSuffix) &&
-						method.getParameterCount() == numberOfParams &&
+						method.getParameterTypes().length == numberOfParams &&
 						(!mustBeStatic || Modifier.isStatic(method.getModifiers())) &&
 						(requiredReturnTypes.isEmpty() || requiredReturnTypes.contains(method.getReturnType()))) {
 					return method;
@@ -409,17 +416,6 @@ public class ReflectivePropertyAccessor implements PropertyAccessor {
 			}
 		}
 		return null;
-	}
-
-	/**
-	 * Return class methods ordered with non-bridge methods appearing higher.
-	 */
-	private Method[] getSortedMethods(Class<?> clazz) {
-		return this.sortedMethodsCache.computeIfAbsent(clazz, key -> {
-			Method[] methods = key.getMethods();
-			Arrays.sort(methods, (o1, o2) -> (o1.isBridge() == o2.isBridge() ? 0 : (o1.isBridge() ? 1 : -1)));
-			return methods;
-		});
 	}
 
 	/**
@@ -433,6 +429,24 @@ public class ReflectivePropertyAccessor implements PropertyAccessor {
 	 */
 	protected boolean isCandidateForProperty(Method method, Class<?> targetClass) {
 		return true;
+	}
+
+	/**
+	 * Return class methods ordered with non-bridge methods appearing higher.
+	 */
+	private Method[] getSortedMethods(Class<?> clazz) {
+		Method[] methods = this.sortedMethodsCache.get(clazz);
+		if (methods == null) {
+			methods = clazz.getMethods();
+			Arrays.sort(methods, new Comparator<Method>() {
+				@Override
+				public int compare(Method o1, Method o2) {
+					return (o1.isBridge() == o2.isBridge()) ? 0 : (o1.isBridge() ? 1 : -1);
+				}
+			});
+			this.sortedMethodsCache.put(clazz, methods);
+		}
+		return methods;
 	}
 
 	/**
@@ -460,7 +474,6 @@ public class ReflectivePropertyAccessor implements PropertyAccessor {
 		return StringUtils.capitalize(propertyName);
 	}
 
-	@Nullable
 	private Field findField(String name, Class<?> clazz, Object target) {
 		Field field = findField(name, clazz, target instanceof Class);
 		if (field == null && target instanceof Class) {
@@ -472,7 +485,6 @@ public class ReflectivePropertyAccessor implements PropertyAccessor {
 	/**
 	 * Find a field of a certain name on a specified class.
 	 */
-	@Nullable
 	protected Field findField(String name, Class<?> clazz, boolean mustBeStatic) {
 		Field[] fields = clazz.getFields();
 		for (Field field : fields) {
@@ -508,27 +520,25 @@ public class ReflectivePropertyAccessor implements PropertyAccessor {
 	 * Do not call this method if you need a read-write accessor.
 	 * @see OptimalPropertyAccessor
 	 */
-	public PropertyAccessor createOptimalAccessor(EvaluationContext context, @Nullable Object target, String name) {
+	public PropertyAccessor createOptimalAccessor(EvaluationContext context, Object target, String name) {
 		// Don't be clever for arrays or a null target...
 		if (target == null) {
 			return this;
 		}
-		Class<?> type = (target instanceof Class<?> clazz ? clazz : target.getClass());
-		if (type.isArray()) {
+		Class<?> clazz = (target instanceof Class ? (Class<?>) target : target.getClass());
+		if (clazz.isArray()) {
 			return this;
 		}
 
-		PropertyCacheKey cacheKey = new PropertyCacheKey(type, name, target instanceof Class);
+		PropertyCacheKey cacheKey = new PropertyCacheKey(clazz, name, target instanceof Class);
 		InvokerPair invocationTarget = this.readerCache.get(cacheKey);
 
 		if (invocationTarget == null || invocationTarget.member instanceof Method) {
 			Method method = (Method) (invocationTarget != null ? invocationTarget.member : null);
 			if (method == null) {
-				method = findGetterForProperty(name, type, target);
+				method = findGetterForProperty(name, clazz, target);
 				if (method != null) {
-					TypeDescriptor typeDescriptor = new TypeDescriptor(new MethodParameter(method, -1));
-					method = ClassUtils.getInterfaceMethodIfPossible(method, type);
-					invocationTarget = new InvokerPair(method, typeDescriptor);
+					invocationTarget = new InvokerPair(method, new TypeDescriptor(new MethodParameter(method, -1)));
 					ReflectionUtils.makeAccessible(method);
 					this.readerCache.put(cacheKey, invocationTarget);
 				}
@@ -541,7 +551,7 @@ public class ReflectivePropertyAccessor implements PropertyAccessor {
 		if (invocationTarget == null || invocationTarget.member instanceof Field) {
 			Field field = (invocationTarget != null ? (Field) invocationTarget.member : null);
 			if (field == null) {
-				field = findField(name, type, target instanceof Class);
+				field = findField(name, clazz, target instanceof Class);
 				if (field != null) {
 					invocationTarget = new InvokerPair(field, new TypeDescriptor(field));
 					ReflectionUtils.makeAccessible(field);
@@ -580,7 +590,7 @@ public class ReflectivePropertyAccessor implements PropertyAccessor {
 
 		private final String property;
 
-		private final boolean targetIsClass;
+		private boolean targetIsClass;
 
 		public PropertyCacheKey(Class<?> clazz, String name, boolean targetIsClass) {
 			this.clazz = clazz;
@@ -589,13 +599,14 @@ public class ReflectivePropertyAccessor implements PropertyAccessor {
 		}
 
 		@Override
-		public boolean equals(@Nullable Object other) {
+		public boolean equals(Object other) {
 			if (this == other) {
 				return true;
 			}
-			if (!(other instanceof PropertyCacheKey otherKey)) {
+			if (!(other instanceof PropertyCacheKey)) {
 				return false;
 			}
+			PropertyCacheKey otherKey = (PropertyCacheKey) other;
 			return (this.clazz == otherKey.clazz && this.property.equals(otherKey.property) &&
 					this.targetIsClass == otherKey.targetIsClass);
 		}
@@ -607,8 +618,8 @@ public class ReflectivePropertyAccessor implements PropertyAccessor {
 
 		@Override
 		public String toString() {
-			return "PropertyCacheKey [clazz=" + this.clazz.getName() + ", property=" + this.property +
-					", targetIsClass=" + this.targetIsClass + "]";
+			return "CacheKey [clazz=" + this.clazz.getName() + ", property=" + this.property + ", " +
+					this.property + ", targetIsClass=" + this.targetIsClass + "]";
 		}
 
 		@Override
@@ -632,52 +643,57 @@ public class ReflectivePropertyAccessor implements PropertyAccessor {
 	 */
 	public static class OptimalPropertyAccessor implements CompilablePropertyAccessor {
 
-		/**
-		 * The member being accessed.
-		 */
 		public final Member member;
 
 		private final TypeDescriptor typeDescriptor;
 
+		private final boolean needsToBeMadeAccessible;
+
 		OptimalPropertyAccessor(InvokerPair target) {
 			this.member = target.member;
 			this.typeDescriptor = target.typeDescriptor;
+			this.needsToBeMadeAccessible = (!Modifier.isPublic(this.member.getModifiers()) ||
+					!Modifier.isPublic(this.member.getDeclaringClass().getModifiers()));
 		}
 
 		@Override
-		@Nullable
 		public Class<?>[] getSpecificTargetClasses() {
 			throw new UnsupportedOperationException("Should not be called on an OptimalPropertyAccessor");
 		}
 
 		@Override
-		public boolean canRead(EvaluationContext context, @Nullable Object target, String name) throws AccessException {
+		public boolean canRead(EvaluationContext context, Object target, String name) throws AccessException {
 			if (target == null) {
 				return false;
 			}
-			Class<?> type = (target instanceof Class<?> clazz ? clazz : target.getClass());
+			Class<?> type = (target instanceof Class ? (Class<?>) target : target.getClass());
 			if (type.isArray()) {
 				return false;
 			}
 
-			if (this.member instanceof Method method) {
+			if (this.member instanceof Method) {
+				Method method = (Method) this.member;
 				String getterName = "get" + StringUtils.capitalize(name);
 				if (getterName.equals(method.getName())) {
 					return true;
 				}
 				getterName = "is" + StringUtils.capitalize(name);
-				if (getterName.equals(method.getName())) {
-					return true;
-				}
+				return getterName.equals(method.getName());
 			}
-			return this.member.getName().equals(name);
+			else {
+				Field field = (Field) this.member;
+				return field.getName().equals(name);
+			}
 		}
 
 		@Override
-		public TypedValue read(EvaluationContext context, @Nullable Object target, String name) throws AccessException {
-			if (this.member instanceof Method method) {
+		public TypedValue read(EvaluationContext context, Object target, String name) throws AccessException {
+			if (this.member instanceof Method) {
+				Method method = (Method) this.member;
 				try {
-					ReflectionUtils.makeAccessible(method);
+					if (this.needsToBeMadeAccessible && !method.isAccessible()) {
+						method.setAccessible(true);
+					}
 					Object value = method.invoke(target);
 					return new TypedValue(value, this.typeDescriptor.narrow(value));
 				}
@@ -688,7 +704,9 @@ public class ReflectivePropertyAccessor implements PropertyAccessor {
 			else {
 				Field field = (Field) this.member;
 				try {
-					ReflectionUtils.makeAccessible(field);
+					if (this.needsToBeMadeAccessible && !field.isAccessible()) {
+						field.setAccessible(true);
+					}
 					Object value = field.get(target);
 					return new TypedValue(value, this.typeDescriptor.narrow(value));
 				}
@@ -699,12 +717,12 @@ public class ReflectivePropertyAccessor implements PropertyAccessor {
 		}
 
 		@Override
-		public boolean canWrite(EvaluationContext context, @Nullable Object target, String name) {
+		public boolean canWrite(EvaluationContext context, Object target, String name) {
 			throw new UnsupportedOperationException("Should not be called on an OptimalPropertyAccessor");
 		}
 
 		@Override
-		public void write(EvaluationContext context, @Nullable Object target, String name, @Nullable Object newValue) {
+		public void write(EvaluationContext context, Object target, String name, Object newValue) {
 			throw new UnsupportedOperationException("Should not be called on an OptimalPropertyAccessor");
 		}
 
@@ -716,8 +734,8 @@ public class ReflectivePropertyAccessor implements PropertyAccessor {
 
 		@Override
 		public Class<?> getPropertyType() {
-			if (this.member instanceof Method method) {
-				return method.getReturnType();
+			if (this.member instanceof Method) {
+				return ((Method) this.member).getReturnType();
 			}
 			else {
 				return ((Field) this.member).getType();
@@ -746,11 +764,9 @@ public class ReflectivePropertyAccessor implements PropertyAccessor {
 				}
 			}
 
-			if (this.member instanceof Method method) {
-				boolean isInterface = method.getDeclaringClass().isInterface();
-				int opcode = (isStatic ? INVOKESTATIC : isInterface ? INVOKEINTERFACE : INVOKEVIRTUAL);
-				mv.visitMethodInsn(opcode, classDesc, method.getName(),
-						CodeFlow.createSignatureDescriptor(method), isInterface);
+			if (this.member instanceof Method) {
+				mv.visitMethodInsn((isStatic ? INVOKESTATIC : INVOKEVIRTUAL), classDesc, this.member.getName(),
+						CodeFlow.createSignatureDescriptor((Method) this.member), false);
 			}
 			else {
 				mv.visitFieldInsn((isStatic ? GETSTATIC : GETFIELD), classDesc, this.member.getName(),
