@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2022 the original author or authors.
+ * Copyright 2002-2015 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      https://www.apache.org/licenses/LICENSE-2.0
+ *      http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -20,14 +20,13 @@ import java.lang.annotation.ElementType;
 import java.lang.annotation.Retention;
 import java.lang.annotation.RetentionPolicy;
 import java.lang.annotation.Target;
-import java.math.BigDecimal;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
-import org.junit.jupiter.api.Test;
+import org.junit.Test;
 
 import org.springframework.expression.AccessException;
 import org.springframework.expression.EvaluationContext;
@@ -38,34 +37,32 @@ import org.springframework.expression.TypedValue;
 import org.springframework.expression.spel.standard.SpelExpressionParser;
 import org.springframework.expression.spel.support.StandardEvaluationContext;
 
-import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.Assert.*;
 
 @SuppressWarnings("rawtypes")
-class IndexingTests {
+public class IndexingTests {
 
 	@Test
-	@SuppressWarnings("unchecked")
-	void indexIntoGenericPropertyContainingMap() {
-		Map<String, String> property = new HashMap<>();
+	public void indexIntoGenericPropertyContainingMap() {
+		Map<String, String> property = new HashMap<String, String>();
 		property.put("foo", "bar");
 		this.property = property;
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expression = parser.parseExpression("property");
-		assertThat(expression.getValueTypeDescriptor(this).toString()).isEqualTo("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.util.HashMap<?, ?>");
-		assertThat(expression.getValue(this)).isEqualTo(property);
-		assertThat(expression.getValue(this, Map.class)).isEqualTo(property);
+		assertEquals("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.util.HashMap<?, ?>", expression.getValueTypeDescriptor(this).toString());
+		assertEquals(property, expression.getValue(this));
+		assertEquals(property, expression.getValue(this, Map.class));
 		expression = parser.parseExpression("property['foo']");
-		assertThat(expression.getValue(this)).isEqualTo("bar");
+		assertEquals("bar", expression.getValue(this));
 	}
 
 	@FieldAnnotation
 	public Object property;
 
 	@Test
-	@SuppressWarnings("unchecked")
-	void indexIntoGenericPropertyContainingMapObject() {
-		Map<String, Map<String, String>> property = new HashMap<>();
-		Map<String, String> map = new HashMap<>();
+	public void indexIntoGenericPropertyContainingMapObject() {
+		Map<String, Map<String, String>> property = new HashMap<String, Map<String, String>>();
+		Map<String, String> map =  new HashMap<String, String>();
 		map.put("foo", "bar");
 		property.put("property", map);
 		SpelExpressionParser parser = new SpelExpressionParser();
@@ -73,11 +70,11 @@ class IndexingTests {
 		context.addPropertyAccessor(new MapAccessor());
 		context.setRootObject(property);
 		Expression expression = parser.parseExpression("property");
-		assertThat(expression.getValueTypeDescriptor(context).toString()).isEqualTo("java.util.HashMap<?, ?>");
-		assertThat(expression.getValue(context)).isEqualTo(map);
-		assertThat(expression.getValue(context, Map.class)).isEqualTo(map);
+		assertEquals("java.util.HashMap<?, ?>", expression.getValueTypeDescriptor(context).toString());
+		assertEquals(map, expression.getValue(context));
+		assertEquals(map, expression.getValue(context, Map.class));
 		expression = parser.parseExpression("property['foo']");
-		assertThat(expression.getValue(context)).isEqualTo("bar");
+		assertEquals("bar", expression.getValue(context));
 	}
 
 	public static class MapAccessor implements PropertyAccessor {
@@ -112,251 +109,231 @@ class IndexingTests {
 	}
 
 	@Test
-	void setGenericPropertyContainingMap() {
-		Map<String, String> property = new HashMap<>();
+	public void setGenericPropertyContainingMap() {
+		Map<String, String> property = new HashMap<String, String>();
 		property.put("foo", "bar");
 		this.property = property;
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expression = parser.parseExpression("property");
-		assertThat(expression.getValueTypeDescriptor(this).toString()).isEqualTo("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.util.HashMap<?, ?>");
-		assertThat(expression.getValue(this)).isEqualTo(property);
+		assertEquals("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.util.HashMap<?, ?>", expression.getValueTypeDescriptor(this).toString());
+		assertEquals(property, expression.getValue(this));
 		expression = parser.parseExpression("property['foo']");
-		assertThat(expression.getValue(this)).isEqualTo("bar");
+		assertEquals("bar", expression.getValue(this));
 		expression.setValue(this, "baz");
-		assertThat(expression.getValue(this)).isEqualTo("baz");
+		assertEquals("baz", expression.getValue(this));
 	}
 
 	@Test
-	void setPropertyContainingMap() {
-		Map<Integer, Integer> property = new HashMap<>();
+	public void setPropertyContainingMap() {
+		Map<Integer, Integer> property = new HashMap<Integer, Integer>();
 		property.put(9, 3);
 		this.parameterizedMap = property;
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expression = parser.parseExpression("parameterizedMap");
-		assertThat(expression.getValueTypeDescriptor(this).toString()).isEqualTo("java.util.HashMap<java.lang.Integer, java.lang.Integer>");
-		assertThat(expression.getValue(this)).isEqualTo(property);
+		assertEquals("java.util.HashMap<java.lang.Integer, java.lang.Integer>", expression.getValueTypeDescriptor(this).toString());
+		assertEquals(property, expression.getValue(this));
 		expression = parser.parseExpression("parameterizedMap['9']");
-		assertThat(expression.getValue(this)).isEqualTo(3);
+		assertEquals(3, expression.getValue(this));
 		expression.setValue(this, "37");
-		assertThat(expression.getValue(this)).isEqualTo(37);
+		assertEquals(37, expression.getValue(this));
 	}
 
 	public Map<Integer, Integer> parameterizedMap;
 
 	@Test
-	void setPropertyContainingMapAutoGrow() {
+	public void setPropertyContainingMapAutoGrow() {
 		SpelExpressionParser parser = new SpelExpressionParser(new SpelParserConfiguration(true, false));
 		Expression expression = parser.parseExpression("parameterizedMap");
-		assertThat(expression.getValueTypeDescriptor(this).toString()).isEqualTo("java.util.Map<java.lang.Integer, java.lang.Integer>");
-		assertThat(expression.getValue(this)).isEqualTo(property);
+		assertEquals("java.util.Map<java.lang.Integer, java.lang.Integer>", expression.getValueTypeDescriptor(this).toString());
+		assertEquals(property, expression.getValue(this));
 		expression = parser.parseExpression("parameterizedMap['9']");
-		assertThat(expression.getValue(this)).isNull();
+		assertEquals(null, expression.getValue(this));
 		expression.setValue(this, "37");
-		assertThat(expression.getValue(this)).isEqualTo(37);
+		assertEquals(37, expression.getValue(this));
 	}
 
 	@Test
-	void indexIntoGenericPropertyContainingList() {
-		List<String> property = new ArrayList<>();
+	public void indexIntoGenericPropertyContainingList() {
+		List<String> property = new ArrayList<String>();
 		property.add("bar");
 		this.property = property;
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expression = parser.parseExpression("property");
-		assertThat(expression.getValueTypeDescriptor(this).toString()).isEqualTo("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.util.ArrayList<?>");
-		assertThat(expression.getValue(this)).isEqualTo(property);
+		assertEquals("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.util.ArrayList<?>", expression.getValueTypeDescriptor(this).toString());
+		assertEquals(property, expression.getValue(this));
 		expression = parser.parseExpression("property[0]");
-		assertThat(expression.getValue(this)).isEqualTo("bar");
+		assertEquals("bar", expression.getValue(this));
 	}
 
 	@Test
-	void setGenericPropertyContainingList() {
-		List<Integer> property = new ArrayList<>();
+	public void setGenericPropertyContainingList() {
+		List<Integer> property = new ArrayList<Integer>();
 		property.add(3);
 		this.property = property;
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expression = parser.parseExpression("property");
-		assertThat(expression.getValueTypeDescriptor(this).toString()).isEqualTo("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.util.ArrayList<?>");
-		assertThat(expression.getValue(this)).isEqualTo(property);
+		assertEquals("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.util.ArrayList<?>", expression.getValueTypeDescriptor(this).toString());
+		assertEquals(property, expression.getValue(this));
 		expression = parser.parseExpression("property[0]");
-		assertThat(expression.getValue(this)).isEqualTo(3);
+		assertEquals(3, expression.getValue(this));
 		expression.setValue(this, "4");
-		assertThat(expression.getValue(this)).isEqualTo("4");
+		assertEquals("4", expression.getValue(this));
 	}
 
 	@Test
-	void setGenericPropertyContainingListAutogrow() {
-		List<Integer> property = new ArrayList<>();
+	public void setGenericPropertyContainingListAutogrow() {
+		List<Integer> property = new ArrayList<Integer>();
 		this.property = property;
 		SpelExpressionParser parser = new SpelExpressionParser(new SpelParserConfiguration(true, true));
 		Expression expression = parser.parseExpression("property");
-		assertThat(expression.getValueTypeDescriptor(this).toString()).isEqualTo("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.util.ArrayList<?>");
-		assertThat(expression.getValue(this)).isEqualTo(property);
+		assertEquals("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.util.ArrayList<?>", expression.getValueTypeDescriptor(this).toString());
+		assertEquals(property, expression.getValue(this));
 		expression = parser.parseExpression("property[0]");
 		try {
 			expression.setValue(this, "4");
 		}
 		catch (EvaluationException ex) {
-			assertThat(ex.getMessage().startsWith("EL1053E")).isTrue();
+			assertTrue(ex.getMessage().startsWith("EL1053E"));
 		}
 	}
 
-	public List<BigDecimal> decimals;
-
 	@Test
-	void autoGrowListOfElementsWithoutDefaultConstructor() {
-		this.decimals = new ArrayList<>();
-		SpelExpressionParser parser = new SpelExpressionParser(new SpelParserConfiguration(true, true));
-		parser.parseExpression("decimals[0]").setValue(this, "123.4");
-		assertThat(decimals).containsExactly(BigDecimal.valueOf(123.4));
-	}
-
-	@Test
-	void indexIntoPropertyContainingListContainingNullElement() {
-		this.decimals = new ArrayList<>();
-		this.decimals.add(null);
-		this.decimals.add(BigDecimal.ONE);
-		SpelExpressionParser parser = new SpelExpressionParser(new SpelParserConfiguration(true, true));
-		parser.parseExpression("decimals[0]").setValue(this, "9876.5");
-		assertThat(decimals).containsExactly(BigDecimal.valueOf(9876.5), BigDecimal.ONE);
-	}
-
-	@Test
-	void indexIntoPropertyContainingList() {
-		List<Integer> property = new ArrayList<>();
+	public void indexIntoPropertyContainingList() {
+		List<Integer> property = new ArrayList<Integer>();
 		property.add(3);
 		this.parameterizedList = property;
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expression = parser.parseExpression("parameterizedList");
-		assertThat(expression.getValueTypeDescriptor(this).toString()).isEqualTo("java.util.ArrayList<java.lang.Integer>");
-		assertThat(expression.getValue(this)).isEqualTo(property);
+		assertEquals("java.util.ArrayList<java.lang.Integer>", expression.getValueTypeDescriptor(this).toString());
+		assertEquals(property, expression.getValue(this));
 		expression = parser.parseExpression("parameterizedList[0]");
-		assertThat(expression.getValue(this)).isEqualTo(3);
+		assertEquals(3, expression.getValue(this));
 	}
 
 	public List<Integer> parameterizedList;
 
 	@Test
-	void indexIntoPropertyContainingListOfList() {
-		List<List<Integer>> property = new ArrayList<>();
+	public void indexIntoPropertyContainingListOfList() {
+		List<List<Integer>> property = new ArrayList<List<Integer>>();
 		property.add(Arrays.asList(3));
 		this.parameterizedListOfList = property;
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expression = parser.parseExpression("parameterizedListOfList[0]");
-		assertThat(expression.getValueTypeDescriptor(this).toString()).isEqualTo("java.util.Arrays$ArrayList<java.lang.Integer>");
-		assertThat(expression.getValue(this)).isEqualTo(property.get(0));
+		assertEquals("java.util.Arrays$ArrayList<java.lang.Integer>", expression.getValueTypeDescriptor(this).toString());
+		assertEquals(property.get(0), expression.getValue(this));
 		expression = parser.parseExpression("parameterizedListOfList[0][0]");
-		assertThat(expression.getValue(this)).isEqualTo(3);
+		assertEquals(3, expression.getValue(this));
 	}
 
 	public List<List<Integer>> parameterizedListOfList;
 
 	@Test
-	void setPropertyContainingList() {
-		List<Integer> property = new ArrayList<>();
+	public void setPropertyContainingList() {
+		List<Integer> property = new ArrayList<Integer>();
 		property.add(3);
 		this.parameterizedList = property;
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expression = parser.parseExpression("parameterizedList");
-		assertThat(expression.getValueTypeDescriptor(this).toString()).isEqualTo("java.util.ArrayList<java.lang.Integer>");
-		assertThat(expression.getValue(this)).isEqualTo(property);
+		assertEquals("java.util.ArrayList<java.lang.Integer>", expression.getValueTypeDescriptor(this).toString());
+		assertEquals(property, expression.getValue(this));
 		expression = parser.parseExpression("parameterizedList[0]");
-		assertThat(expression.getValue(this)).isEqualTo(3);
+		assertEquals(3, expression.getValue(this));
 		expression.setValue(this, "4");
-		assertThat(expression.getValue(this)).isEqualTo(4);
+		assertEquals(4, expression.getValue(this));
 	}
 
 	@Test
-	void indexIntoGenericPropertyContainingNullList() {
+	public void indexIntoGenericPropertyContainingNullList() {
 		SpelParserConfiguration configuration = new SpelParserConfiguration(true, true);
 		SpelExpressionParser parser = new SpelExpressionParser(configuration);
 		Expression expression = parser.parseExpression("property");
-		assertThat(expression.getValueTypeDescriptor(this).toString()).isEqualTo("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.lang.Object");
-		assertThat(expression.getValue(this)).isEqualTo(property);
+		assertEquals("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.lang.Object", expression.getValueTypeDescriptor(this).toString());
+		assertEquals(property, expression.getValue(this));
 		expression = parser.parseExpression("property[0]");
 		try {
-			assertThat(expression.getValue(this)).isEqualTo("bar");
+			assertEquals("bar", expression.getValue(this));
 		}
 		catch (EvaluationException ex) {
-			assertThat(ex.getMessage().startsWith("EL1027E")).isTrue();
+			assertTrue(ex.getMessage().startsWith("EL1027E"));
 		}
 	}
 
 	@Test
-	void indexIntoGenericPropertyContainingGrowingList() {
-		List<String> property = new ArrayList<>();
+	public void indexIntoGenericPropertyContainingGrowingList() {
+		List<String> property = new ArrayList<String>();
 		this.property = property;
 		SpelParserConfiguration configuration = new SpelParserConfiguration(true, true);
 		SpelExpressionParser parser = new SpelExpressionParser(configuration);
 		Expression expression = parser.parseExpression("property");
-		assertThat(expression.getValueTypeDescriptor(this).toString()).isEqualTo("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.util.ArrayList<?>");
-		assertThat(expression.getValue(this)).isEqualTo(property);
+		assertEquals("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.util.ArrayList<?>", expression.getValueTypeDescriptor(this).toString());
+		assertEquals(property, expression.getValue(this));
 		expression = parser.parseExpression("property[0]");
 		try {
-			assertThat(expression.getValue(this)).isEqualTo("bar");
+			assertEquals("bar", expression.getValue(this));
 		}
 		catch (EvaluationException ex) {
-			assertThat(ex.getMessage().startsWith("EL1053E")).isTrue();
+			assertTrue(ex.getMessage().startsWith("EL1053E"));
 		}
 	}
 
 	@Test
-	void indexIntoGenericPropertyContainingGrowingList2() {
-		List<String> property2 = new ArrayList<>();
+	public void indexIntoGenericPropertyContainingGrowingList2() {
+		List<String> property2 = new ArrayList<String>();
 		this.property2 = property2;
 		SpelParserConfiguration configuration = new SpelParserConfiguration(true, true);
 		SpelExpressionParser parser = new SpelExpressionParser(configuration);
 		Expression expression = parser.parseExpression("property2");
-		assertThat(expression.getValueTypeDescriptor(this).toString()).isEqualTo("java.util.ArrayList<?>");
-		assertThat(expression.getValue(this)).isEqualTo(property2);
+		assertEquals("java.util.ArrayList<?>", expression.getValueTypeDescriptor(this).toString());
+		assertEquals(property2, expression.getValue(this));
 		expression = parser.parseExpression("property2[0]");
 		try {
-			assertThat(expression.getValue(this)).isEqualTo("bar");
+			assertEquals("bar", expression.getValue(this));
 		}
 		catch (EvaluationException ex) {
-			assertThat(ex.getMessage().startsWith("EL1053E")).isTrue();
+			assertTrue(ex.getMessage().startsWith("EL1053E"));
 		}
 	}
 
 	public List property2;
 
 	@Test
-	void indexIntoGenericPropertyContainingArray() {
+	public void indexIntoGenericPropertyContainingArray() {
 		String[] property = new String[] { "bar" };
 		this.property = property;
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expression = parser.parseExpression("property");
-		assertThat(expression.getValueTypeDescriptor(this).toString()).isEqualTo("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.lang.String[]");
-		assertThat(expression.getValue(this)).isEqualTo(property);
+		assertEquals("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.lang.String[]", expression.getValueTypeDescriptor(this).toString());
+		assertEquals(property, expression.getValue(this));
 		expression = parser.parseExpression("property[0]");
-		assertThat(expression.getValue(this)).isEqualTo("bar");
+		assertEquals("bar", expression.getValue(this));
 	}
 
 	@Test
-	void emptyList() {
+	public void emptyList() {
 		listOfScalarNotGeneric = new ArrayList();
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expression = parser.parseExpression("listOfScalarNotGeneric");
-		assertThat(expression.getValueTypeDescriptor(this).toString()).isEqualTo("java.util.ArrayList<?>");
-		assertThat(expression.getValue(this, String.class)).isEqualTo("");
+		assertEquals("java.util.ArrayList<?>", expression.getValueTypeDescriptor(this).toString());
+		assertEquals("", expression.getValue(this, String.class));
 	}
 
 	@SuppressWarnings("unchecked")
 	@Test
-	void resolveCollectionElementType() {
+	public void resolveCollectionElementType() {
 		listNotGeneric = new ArrayList(2);
 		listNotGeneric.add(5);
 		listNotGeneric.add(6);
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expression = parser.parseExpression("listNotGeneric");
-		assertThat(expression.getValueTypeDescriptor(this).toString()).isEqualTo("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.util.ArrayList<?>");
-		assertThat(expression.getValue(this, String.class)).isEqualTo("5,6");
+		assertEquals("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.util.ArrayList<?>", expression.getValueTypeDescriptor(this).toString());
+		assertEquals("5,6", expression.getValue(this, String.class));
 	}
 
 	@Test
-	void resolveCollectionElementTypeNull() {
+	public void resolveCollectionElementTypeNull() {
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expression = parser.parseExpression("listNotGeneric");
-		assertThat(expression.getValueTypeDescriptor(this).toString()).isEqualTo("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.util.List<?>");
+		assertEquals("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.util.List<?>", expression.getValueTypeDescriptor(this).toString());
 	}
 
 	@FieldAnnotation
@@ -370,13 +347,13 @@ class IndexingTests {
 
 	@SuppressWarnings("unchecked")
 	@Test
-	void resolveMapKeyValueTypes() {
+	public void resolveMapKeyValueTypes() {
 		mapNotGeneric = new HashMap();
 		mapNotGeneric.put("baseAmount", 3.11);
 		mapNotGeneric.put("bonusAmount", 7.17);
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expression = parser.parseExpression("mapNotGeneric");
-		assertThat(expression.getValueTypeDescriptor(this).toString()).isEqualTo("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.util.HashMap<?, ?>");
+		assertEquals("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.util.HashMap<?, ?>", expression.getValueTypeDescriptor(this).toString());
 	}
 
 	@FieldAnnotation
@@ -384,12 +361,12 @@ class IndexingTests {
 
 	@SuppressWarnings("unchecked")
 	@Test
-	void testListOfScalar() {
+	public void testListOfScalar() {
 		listOfScalarNotGeneric = new ArrayList(1);
 		listOfScalarNotGeneric.add("5");
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expression = parser.parseExpression("listOfScalarNotGeneric[0]");
-		assertThat(expression.getValue(this, Integer.class)).isEqualTo(Integer.valueOf(5));
+		assertEquals(new Integer(5), expression.getValue(this, Integer.class));
 	}
 
 	public List listOfScalarNotGeneric;
@@ -397,14 +374,14 @@ class IndexingTests {
 
 	@SuppressWarnings("unchecked")
 	@Test
-	void testListsOfMap() {
+	public void testListsOfMap() {
 		listOfMapsNotGeneric = new ArrayList();
 		Map map = new HashMap();
 		map.put("fruit", "apple");
 		listOfMapsNotGeneric.add(map);
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expression = parser.parseExpression("listOfMapsNotGeneric[0]['fruit']");
-		assertThat(expression.getValue(this, String.class)).isEqualTo("apple");
+		assertEquals("apple", expression.getValue(this, String.class));
 	}
 
 	public List listOfMapsNotGeneric;
