@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2021 the original author or authors.
+ * Copyright 2002-2016 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      https://www.apache.org/licenses/LICENSE-2.0
+ *      http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -22,40 +22,41 @@ import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.Map;
+import javax.jms.BytesMessage;
+import javax.jms.JMSException;
+import javax.jms.Session;
+import javax.jms.TextMessage;
 
 import com.fasterxml.jackson.annotation.JsonView;
-import jakarta.jms.BytesMessage;
-import jakarta.jms.JMSException;
-import jakarta.jms.Session;
-import jakarta.jms.TextMessage;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
+import org.junit.Before;
+import org.junit.Rule;
+import org.junit.Test;
+import org.junit.rules.ExpectedException;
+import org.mockito.invocation.InvocationOnMock;
 import org.mockito.stubbing.Answer;
 
 import org.springframework.core.MethodParameter;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.isA;
-import static org.mockito.BDDMockito.given;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.verify;
+import static org.junit.Assert.*;
+import static org.mockito.BDDMockito.*;
 
 /**
  * @author Arjen Poutsma
  * @author Dave Syer
  * @author Stephane Nicoll
  */
-class MappingJackson2MessageConverterTests {
+public class MappingJackson2MessageConverterTests {
+
+	@Rule
+	public final ExpectedException thrown = ExpectedException.none();
 
 	private MappingJackson2MessageConverter converter;
 
 	private Session sessionMock;
 
 
-	@BeforeEach
-	public void setup() {
+	@Before
+	public void setUp() throws Exception {
 		sessionMock = mock(Session.class);
 		converter = new MappingJackson2MessageConverter();
 		converter.setEncodingPropertyName("__encoding__");
@@ -64,7 +65,7 @@ class MappingJackson2MessageConverterTests {
 
 
 	@Test
-	void toBytesMessage() throws Exception {
+	public void toBytesMessage() throws Exception {
 		BytesMessage bytesMessageMock = mock(BytesMessage.class);
 		Date toBeMarshalled = new Date();
 
@@ -78,7 +79,7 @@ class MappingJackson2MessageConverterTests {
 	}
 
 	@Test
-	void fromBytesMessage() throws Exception {
+	public void fromBytesMessage() throws Exception {
 		BytesMessage bytesMessageMock = mock(BytesMessage.class);
 		Map<String, String> unmarshalled = Collections.singletonMap("foo", "bar");
 
@@ -87,16 +88,21 @@ class MappingJackson2MessageConverterTests {
 
 		given(bytesMessageMock.getStringProperty("__typeid__")).willReturn(Object.class.getName());
 		given(bytesMessageMock.propertyExists("__encoding__")).willReturn(false);
-		given(bytesMessageMock.getBodyLength()).willReturn(Long.valueOf(bytes.length));
+		given(bytesMessageMock.getBodyLength()).willReturn(new Long(bytes.length));
 		given(bytesMessageMock.readBytes(any(byte[].class))).willAnswer(
-				(Answer<Integer>) invocation -> byteStream.read((byte[]) invocation.getArguments()[0]));
+				new Answer<Integer>() {
+					@Override
+					public Integer answer(InvocationOnMock invocation) throws Throwable {
+						return byteStream.read((byte[]) invocation.getArguments()[0]);
+					}
+				});
 
 		Object result = converter.fromMessage(bytesMessageMock);
-		assertThat(unmarshalled).as("Invalid result").isEqualTo(result);
+		assertEquals("Invalid result", result, unmarshalled);
 	}
 
 	@Test
-	void toTextMessageWithObject() throws Exception {
+	public void toTextMessageWithObject() throws Exception {
 		converter.setTargetType(MessageType.TEXT);
 		TextMessage textMessageMock = mock(TextMessage.class);
 		Date toBeMarshalled = new Date();
@@ -108,10 +114,10 @@ class MappingJackson2MessageConverterTests {
 	}
 
 	@Test
-	void toTextMessageWithMap() throws Exception {
+	public void toTextMessageWithMap() throws Exception {
 		converter.setTargetType(MessageType.TEXT);
 		TextMessage textMessageMock = mock(TextMessage.class);
-		Map<String, String> toBeMarshalled = new HashMap<>();
+		Map<String, String> toBeMarshalled = new HashMap<String, String>();
 		toBeMarshalled.put("foo", "bar");
 
 		given(sessionMock.createTextMessage(isA(String.class))).willReturn(textMessageMock);
@@ -121,7 +127,7 @@ class MappingJackson2MessageConverterTests {
 	}
 
 	@Test
-	void fromTextMessage() throws Exception {
+	public void fromTextMessage() throws Exception {
 		TextMessage textMessageMock = mock(TextMessage.class);
 		MyBean unmarshalled = new MyBean("bar");
 
@@ -130,11 +136,11 @@ class MappingJackson2MessageConverterTests {
 		given(textMessageMock.getText()).willReturn(text);
 
 		MyBean result = (MyBean)converter.fromMessage(textMessageMock);
-		assertThat(unmarshalled).as("Invalid result").isEqualTo(result);
+		assertEquals("Invalid result", result, unmarshalled);
 	}
 
 	@Test
-	void fromTextMessageWithUnknownProperty() throws Exception {
+	public void fromTextMessageWithUnknownProperty() throws Exception {
 		TextMessage textMessageMock = mock(TextMessage.class);
 		MyBean unmarshalled = new MyBean("bar");
 
@@ -143,11 +149,11 @@ class MappingJackson2MessageConverterTests {
 		given(textMessageMock.getText()).willReturn(text);
 
 		MyBean result = (MyBean)converter.fromMessage(textMessageMock);
-		assertThat(unmarshalled).as("Invalid result").isEqualTo(result);
+		assertEquals("Invalid result", result, unmarshalled);
 	}
 
 	@Test
-	void fromTextMessageAsObject() throws Exception {
+	public void fromTextMessageAsObject() throws Exception {
 		TextMessage textMessageMock = mock(TextMessage.class);
 		Map<String, String> unmarshalled = Collections.singletonMap("foo", "bar");
 
@@ -156,11 +162,11 @@ class MappingJackson2MessageConverterTests {
 		given(textMessageMock.getText()).willReturn(text);
 
 		Object result = converter.fromMessage(textMessageMock);
-		assertThat(unmarshalled).as("Invalid result").isEqualTo(result);
+		assertEquals("Invalid result", result, unmarshalled);
 	}
 
 	@Test
-	void fromTextMessageAsMap() throws Exception {
+	public void fromTextMessageAsMap() throws Exception {
 		TextMessage textMessageMock = mock(TextMessage.class);
 		Map<String, String> unmarshalled = Collections.singletonMap("foo", "bar");
 
@@ -169,11 +175,11 @@ class MappingJackson2MessageConverterTests {
 		given(textMessageMock.getText()).willReturn(text);
 
 		Object result = converter.fromMessage(textMessageMock);
-		assertThat(unmarshalled).as("Invalid result").isEqualTo(result);
+		assertEquals("Invalid result", result, unmarshalled);
 	}
 
 	@Test
-	void toTextMessageWithReturnType() throws JMSException, NoSuchMethodException {
+	public void toTextMessageWithReturnType() throws JMSException, NoSuchMethodException {
 		Method method = this.getClass().getDeclaredMethod("summary");
 		MethodParameter returnType = new MethodParameter(method, -1);
 		testToTextMessageWithReturnType(returnType);
@@ -181,13 +187,13 @@ class MappingJackson2MessageConverterTests {
 	}
 
 	@Test
-	void toTextMessageWithNullReturnType() throws JMSException, NoSuchMethodException {
+	public void toTextMessageWithNullReturnType() throws JMSException, NoSuchMethodException {
 		testToTextMessageWithReturnType(null);
 		verify(sessionMock).createTextMessage("{\"name\":\"test\",\"description\":\"lengthy description\"}");
 	}
 
 	@Test
-	void toTextMessageWithReturnTypeAndNoJsonView() throws JMSException, NoSuchMethodException {
+	public void toTextMessageWithReturnTypeAndNoJsonView() throws JMSException, NoSuchMethodException {
 		Method method = this.getClass().getDeclaredMethod("none");
 		MethodParameter returnType = new MethodParameter(method, -1);
 
@@ -196,12 +202,12 @@ class MappingJackson2MessageConverterTests {
 	}
 
 	@Test
-	void toTextMessageWithReturnTypeAndMultipleJsonViews() throws JMSException, NoSuchMethodException {
+	public void toTextMessageWithReturnTypeAndMultipleJsonViews() throws JMSException, NoSuchMethodException {
 		Method method = this.getClass().getDeclaredMethod("invalid");
 		MethodParameter returnType = new MethodParameter(method, -1);
 
-		assertThatIllegalArgumentException().isThrownBy(() ->
-				testToTextMessageWithReturnType(returnType));
+		thrown.expect(IllegalArgumentException.class);
+		testToTextMessageWithReturnType(returnType);
 	}
 
 	private void testToTextMessageWithReturnType(MethodParameter returnType) throws JMSException, NoSuchMethodException {
@@ -215,7 +221,7 @@ class MappingJackson2MessageConverterTests {
 	}
 
 	@Test
-	void toTextMessageWithJsonViewClass() throws JMSException {
+	public void toTextMessageWithJsonViewClass() throws JMSException {
 		converter.setTargetType(MessageType.TEXT);
 		TextMessage textMessageMock = mock(TextMessage.class);
 
@@ -229,7 +235,7 @@ class MappingJackson2MessageConverterTests {
 	}
 
 	@Test
-	void toTextMessageWithAnotherJsonViewClass() throws JMSException {
+	public void toTextMessageWithAnotherJsonViewClass() throws JMSException {
 		converter.setTargetType(MessageType.TEXT);
 		TextMessage textMessageMock = mock(TextMessage.class);
 
@@ -257,10 +263,7 @@ class MappingJackson2MessageConverterTests {
 		return new MyAnotherBean();
 	}
 
-
 	public static class MyBean {
-
-		private String foo;
 
 		public MyBean() {
 		}
@@ -268,6 +271,8 @@ class MappingJackson2MessageConverterTests {
 		public MyBean(String foo) {
 			this.foo = foo;
 		}
+
+		private String foo;
 
 		public String getFoo() {
 			return foo;
@@ -285,10 +290,13 @@ class MappingJackson2MessageConverterTests {
 			if (o == null || getClass() != o.getClass()) {
 				return false;
 			}
+
 			MyBean bean = (MyBean) o;
+
 			if (foo != null ? !foo.equals(bean.foo) : bean.foo != null) {
 				return false;
 			}
+
 			return true;
 		}
 
@@ -298,13 +306,9 @@ class MappingJackson2MessageConverterTests {
 		}
 	}
 
+	private interface Summary {};
+	private interface Full extends Summary {};
 
-	private interface Summary {}
-
-	private interface Full extends Summary {}
-
-
-	@SuppressWarnings("unused")
 	private static class MyAnotherBean {
 
 		@JsonView(Summary.class)
