@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2021 the original author or authors.
+ * Copyright 2002-2016 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      https://www.apache.org/licenses/LICENSE-2.0
+ *      http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -18,23 +18,16 @@ package org.springframework.web.context.request;
 
 import java.io.Serializable;
 import java.math.BigInteger;
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpSession;
 
-import jakarta.servlet.http.HttpServletRequest;
-import jakarta.servlet.http.HttpSession;
-import org.junit.jupiter.api.Test;
+import org.junit.Test;
 
-import org.springframework.web.testfixture.servlet.MockHttpServletRequest;
-import org.springframework.web.testfixture.servlet.MockHttpSession;
+import org.springframework.mock.web.test.MockHttpServletRequest;
+import org.springframework.mock.web.test.MockHttpSession;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException;
-import static org.assertj.core.api.Assertions.assertThatIllegalStateException;
-import static org.mockito.ArgumentMatchers.anyBoolean;
-import static org.mockito.BDDMockito.given;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.verifyNoMoreInteractions;
+import static org.junit.Assert.*;
+import static org.mockito.BDDMockito.*;
 
 /**
  * @author Rick Evans
@@ -49,67 +42,96 @@ public class ServletRequestAttributesTests {
 	};
 
 
-	@Test
-	public void ctorRejectsNullArg() {
-		assertThatIllegalArgumentException().isThrownBy(() ->
-				new ServletRequestAttributes(null));
+	@Test(expected = IllegalArgumentException.class)
+	public void ctorRejectsNullArg() throws Exception {
+		new ServletRequestAttributes(null);
 	}
 
 	@Test
-	public void setRequestScopedAttribute() {
+	public void setRequestScopedAttribute() throws Exception {
 		MockHttpServletRequest request = new MockHttpServletRequest();
 		ServletRequestAttributes attrs = new ServletRequestAttributes(request);
 		attrs.setAttribute(KEY, VALUE, RequestAttributes.SCOPE_REQUEST);
 		Object value = request.getAttribute(KEY);
-		assertThat(value).isSameAs(VALUE);
+		assertSame(VALUE, value);
 	}
 
 	@Test
-	public void setRequestScopedAttributeAfterCompletion() {
+	public void setRequestScopedAttributeAfterCompletion() throws Exception {
 		MockHttpServletRequest request = new MockHttpServletRequest();
 		ServletRequestAttributes attrs = new ServletRequestAttributes(request);
 		request.close();
-		assertThatIllegalStateException().isThrownBy(() ->
-				attrs.setAttribute(KEY, VALUE, RequestAttributes.SCOPE_REQUEST));
+		try {
+			attrs.setAttribute(KEY, VALUE, RequestAttributes.SCOPE_REQUEST);
+			fail("Should have thrown IllegalStateException");
+		}
+		catch (IllegalStateException ex) {
+			// expected
+		}
 	}
 
 	@Test
-	public void setSessionScopedAttribute() {
+	public void setSessionScopedAttribute() throws Exception {
 		MockHttpSession session = new MockHttpSession();
 		session.setAttribute(KEY, VALUE);
 		MockHttpServletRequest request = new MockHttpServletRequest();
 		request.setSession(session);
 		ServletRequestAttributes attrs = new ServletRequestAttributes(request);
 		attrs.setAttribute(KEY, VALUE, RequestAttributes.SCOPE_SESSION);
-		assertThat(session.getAttribute(KEY)).isSameAs(VALUE);
+		assertSame(VALUE, session.getAttribute(KEY));
 	}
 
 	@Test
-	public void setSessionScopedAttributeAfterCompletion() {
+	public void setSessionScopedAttributeAfterCompletion() throws Exception {
 		MockHttpSession session = new MockHttpSession();
 		session.setAttribute(KEY, VALUE);
 		MockHttpServletRequest request = new MockHttpServletRequest();
 		request.setSession(session);
 		ServletRequestAttributes attrs = new ServletRequestAttributes(request);
-		assertThat(attrs.getAttribute(KEY, RequestAttributes.SCOPE_SESSION)).isSameAs(VALUE);
+		assertSame(VALUE, attrs.getAttribute(KEY, RequestAttributes.SCOPE_SESSION));
 		attrs.requestCompleted();
 		request.close();
 		attrs.setAttribute(KEY, VALUE, RequestAttributes.SCOPE_SESSION);
-		assertThat(session.getAttribute(KEY)).isSameAs(VALUE);
+		assertSame(VALUE, session.getAttribute(KEY));
 	}
 
 	@Test
-	public void getSessionScopedAttributeDoesNotForceCreationOfSession() {
+	public void setGlobalSessionScopedAttribute() throws Exception {
+		MockHttpSession session = new MockHttpSession();
+		session.setAttribute(KEY, VALUE);
+		MockHttpServletRequest request = new MockHttpServletRequest();
+		request.setSession(session);
+		ServletRequestAttributes attrs = new ServletRequestAttributes(request);
+		attrs.setAttribute(KEY, VALUE, RequestAttributes.SCOPE_GLOBAL_SESSION);
+		assertSame(VALUE, session.getAttribute(KEY));
+	}
+
+	@Test
+	public void setGlobalSessionScopedAttributeAfterCompletion() throws Exception {
+		MockHttpSession session = new MockHttpSession();
+		session.setAttribute(KEY, VALUE);
+		MockHttpServletRequest request = new MockHttpServletRequest();
+		request.setSession(session);
+		ServletRequestAttributes attrs = new ServletRequestAttributes(request);
+		assertSame(VALUE, attrs.getAttribute(KEY, RequestAttributes.SCOPE_GLOBAL_SESSION));
+		attrs.requestCompleted();
+		request.close();
+		attrs.setAttribute(KEY, VALUE, RequestAttributes.SCOPE_GLOBAL_SESSION);
+		assertSame(VALUE, session.getAttribute(KEY));
+	}
+
+	@Test
+	public void getSessionScopedAttributeDoesNotForceCreationOfSession() throws Exception {
 		HttpServletRequest request = mock(HttpServletRequest.class);
 
 		ServletRequestAttributes attrs = new ServletRequestAttributes(request);
 		Object value = attrs.getAttribute(KEY, RequestAttributes.SCOPE_SESSION);
-		assertThat(value).isNull();
+		assertNull(value);
 		verify(request).getSession(false);
 	}
 
 	@Test
-	public void removeSessionScopedAttribute() {
+	public void removeSessionScopedAttribute() throws Exception {
 		MockHttpSession session = new MockHttpSession();
 		session.setAttribute(KEY, VALUE);
 		MockHttpServletRequest request = new MockHttpServletRequest();
@@ -117,11 +139,11 @@ public class ServletRequestAttributesTests {
 		ServletRequestAttributes attrs = new ServletRequestAttributes(request);
 		attrs.removeAttribute(KEY, RequestAttributes.SCOPE_SESSION);
 		Object value = session.getAttribute(KEY);
-		assertThat(value).isNull();
+		assertNull(value);
 	}
 
 	@Test
-	public void removeSessionScopedAttributeDoesNotForceCreationOfSession() {
+	public void removeSessionScopedAttributeDoesNotForceCreationOfSession() throws Exception {
 		HttpServletRequest request = mock(HttpServletRequest.class);
 
 		ServletRequestAttributes attrs = new ServletRequestAttributes(request);
@@ -130,14 +152,14 @@ public class ServletRequestAttributesTests {
 	}
 
 	@Test
-	public void updateAccessedAttributes() {
+	public void updateAccessedAttributes() throws Exception {
 		HttpServletRequest request = mock(HttpServletRequest.class);
 		HttpSession session = mock(HttpSession.class);
 		given(request.getSession(anyBoolean())).willReturn(session);
 		given(session.getAttribute(KEY)).willReturn(VALUE);
 
 		ServletRequestAttributes attrs = new ServletRequestAttributes(request);
-		assertThat(attrs.getAttribute(KEY, RequestAttributes.SCOPE_SESSION)).isSameAs(VALUE);
+		assertSame(VALUE, attrs.getAttribute(KEY, RequestAttributes.SCOPE_SESSION));
 		attrs.requestCompleted();
 
 		verify(session, times(2)).getAttribute(KEY);
@@ -152,7 +174,7 @@ public class ServletRequestAttributesTests {
 
 	@Test
 	public void skipImmutableCharacter() {
-		doSkipImmutableValue(Character.valueOf('x'));
+		doSkipImmutableValue(new Character('x'));
 	}
 
 	@Test
@@ -162,12 +184,12 @@ public class ServletRequestAttributesTests {
 
 	@Test
 	public void skipImmutableInteger() {
-		doSkipImmutableValue(1);
+		doSkipImmutableValue(new Integer(1));
 	}
 
 	@Test
 	public void skipImmutableFloat() {
-		doSkipImmutableValue(1.1F);
+		doSkipImmutableValue(new Float(1.1));
 	}
 
 	@Test
