@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2021 the original author or authors.
+ * Copyright 2002-2018 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      https://www.apache.org/licenses/LICENSE-2.0
+ *      http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -17,27 +17,22 @@
 package org.springframework.web.servlet.resource;
 
 import java.io.IOException;
+import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.nio.charset.Charset;
-import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.StringTokenizer;
-
-import jakarta.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletRequest;
 
 import org.springframework.core.io.ClassPathResource;
 import org.springframework.core.io.Resource;
 import org.springframework.core.io.UrlResource;
-import org.springframework.core.log.LogFormatUtils;
-import org.springframework.http.server.PathContainer;
-import org.springframework.lang.Nullable;
 import org.springframework.util.StringUtils;
 import org.springframework.web.context.support.ServletContextResource;
-import org.springframework.web.util.ServletRequestPathUtils;
 import org.springframework.web.util.UriUtils;
 import org.springframework.web.util.UrlPathHelper;
 
@@ -55,12 +50,13 @@ import org.springframework.web.util.UrlPathHelper;
  */
 public class PathResourceResolver extends AbstractResourceResolver {
 
-	@Nullable
+	private static final Charset DEFAULT_CHARSET = Charset.forName("UTF-8");
+
+
 	private Resource[] allowedLocations;
 
-	private final Map<Resource, Charset> locationCharsets = new HashMap<>(4);
+	private final Map<Resource, Charset> locationCharsets = new HashMap<Resource, Charset>(4);
 
-	@Nullable
 	private UrlPathHelper urlPathHelper;
 
 
@@ -81,11 +77,10 @@ public class PathResourceResolver extends AbstractResourceResolver {
 	 * @since 4.1.2
 	 * @see ResourceHttpRequestHandler#initAllowedLocations()
 	 */
-	public void setAllowedLocations(@Nullable Resource... locations) {
+	public void setAllowedLocations(Resource... locations) {
 		this.allowedLocations = locations;
 	}
 
-	@Nullable
 	public Resource[] getAllowedLocations() {
 		return this.allowedLocations;
 	}
@@ -118,7 +113,7 @@ public class PathResourceResolver extends AbstractResourceResolver {
 	 * such as whether it is decoded or not.
 	 * @since 4.3.13
 	 */
-	public void setUrlPathHelper(@Nullable UrlPathHelper urlPathHelper) {
+	public void setUrlPathHelper(UrlPathHelper urlPathHelper) {
 		this.urlPathHelper = urlPathHelper;
 	}
 
@@ -126,14 +121,13 @@ public class PathResourceResolver extends AbstractResourceResolver {
 	 * The configured {@link UrlPathHelper}.
 	 * @since 4.3.13
 	 */
-	@Nullable
 	public UrlPathHelper getUrlPathHelper() {
 		return this.urlPathHelper;
 	}
 
 
 	@Override
-	protected Resource resolveResourceInternal(@Nullable HttpServletRequest request, String requestPath,
+	protected Resource resolveResourceInternal(HttpServletRequest request, String requestPath,
 			List<? extends Resource> locations, ResourceResolverChain chain) {
 
 		return getResource(requestPath, request, locations);
@@ -147,28 +141,28 @@ public class PathResourceResolver extends AbstractResourceResolver {
 				getResource(resourcePath, null, locations) != null ? resourcePath : null);
 	}
 
-	@Nullable
-	private Resource getResource(String resourcePath, @Nullable HttpServletRequest request,
+	private Resource getResource(String resourcePath, HttpServletRequest request,
 			List<? extends Resource> locations) {
 
 		for (Resource location : locations) {
 			try {
-				String pathToUse = encodeOrDecodeIfNecessary(resourcePath, request, location);
+				if (logger.isTraceEnabled()) {
+					logger.trace("Checking location: " + location);
+				}
+				String pathToUse = encodeIfNecessary(resourcePath, request, location);
 				Resource resource = getResource(pathToUse, location);
 				if (resource != null) {
+					if (logger.isTraceEnabled()) {
+						logger.trace("Found match: " + resource);
+					}
 					return resource;
+				}
+				else if (logger.isTraceEnabled()) {
+					logger.trace("No match for location: " + location);
 				}
 			}
 			catch (IOException ex) {
-				if (logger.isDebugEnabled()) {
-					String error = "Skip location [" + location + "] due to error";
-					if (logger.isTraceEnabled()) {
-						logger.trace(error, ex);
-					}
-					else {
-						logger.debug(error + ": " + ex.getMessage());
-					}
-				}
+				logger.trace("Failure checking for relative resource - trying next location", ex);
 			}
 		}
 		return null;
@@ -182,20 +176,18 @@ public class PathResourceResolver extends AbstractResourceResolver {
 	 * @param location the location to check
 	 * @return the resource, or {@code null} if none found
 	 */
-	@Nullable
 	protected Resource getResource(String resourcePath, Resource location) throws IOException {
 		Resource resource = location.createRelative(resourcePath);
-		if (resource.isReadable()) {
+		if (resource.exists() && resource.isReadable()) {
 			if (checkResource(resource, location)) {
 				return resource;
 			}
-			else if (logger.isWarnEnabled()) {
-				Resource[] allowed = getAllowedLocations();
-				logger.warn(LogFormatUtils.formatValue(
-						"Resource path \"" + resourcePath + "\" was successfully resolved " +
-								"but resource \"" + resource.getURL() + "\" is neither under " +
-								"the current location \"" + location.getURL() + "\" nor under any of " +
-								"the allowed locations " + (allowed != null ? Arrays.asList(allowed) : "[]"), -1, true));
+			else if (logger.isTraceEnabled()) {
+				Resource[] allowedLocations = getAllowedLocations();
+				logger.trace("Resource path \"" + resourcePath + "\" was successfully resolved " +
+						"but resource \"" +	resource.getURL() + "\" is neither under the " +
+						"current location \"" + location.getURL() + "\" nor under any of the " +
+						"allowed locations " + (allowedLocations != null ? Arrays.asList(allowedLocations) : "[]"));
 			}
 		}
 		return null;
@@ -215,9 +207,8 @@ public class PathResourceResolver extends AbstractResourceResolver {
 		if (isResourceUnderLocation(resource, location)) {
 			return true;
 		}
-		Resource[] allowedLocations = getAllowedLocations();
-		if (allowedLocations != null) {
-			for (Resource current : allowedLocations) {
+		if (getAllowedLocations() != null) {
+			for (Resource current : getAllowedLocations()) {
 				if (isResourceUnderLocation(resource, current)) {
 					return true;
 				}
@@ -238,12 +229,12 @@ public class PathResourceResolver extends AbstractResourceResolver {
 			resourcePath = resource.getURL().toExternalForm();
 			locationPath = StringUtils.cleanPath(location.getURL().toString());
 		}
-		else if (resource instanceof ClassPathResource classPathResource) {
-			resourcePath = classPathResource.getPath();
+		else if (resource instanceof ClassPathResource) {
+			resourcePath = ((ClassPathResource) resource).getPath();
 			locationPath = StringUtils.cleanPath(((ClassPathResource) location).getPath());
 		}
-		else if (resource instanceof ServletContextResource servletContextResource) {
-			resourcePath = servletContextResource.getPath();
+		else if (resource instanceof ServletContextResource) {
+			resourcePath = ((ServletContextResource) resource).getPath();
 			locationPath = StringUtils.cleanPath(((ServletContextResource) location).getPath());
 		}
 		else {
@@ -258,18 +249,23 @@ public class PathResourceResolver extends AbstractResourceResolver {
 		return (resourcePath.startsWith(locationPath) && !isInvalidEncodedPath(resourcePath));
 	}
 
-	private String encodeOrDecodeIfNecessary(String path, @Nullable HttpServletRequest request, Resource location) {
-		if (shouldDecodeRelativePath(location, request)) {
-			return UriUtils.decode(path, StandardCharsets.UTF_8);
-		}
-		else if (shouldEncodeRelativePath(location) && request != null) {
-			Charset charset = this.locationCharsets.getOrDefault(location, StandardCharsets.UTF_8);
+	private String encodeIfNecessary(String path, HttpServletRequest request, Resource location) {
+		if (shouldEncodeRelativePath(location) && request != null) {
+			Charset charset = this.locationCharsets.get(location);
+			charset = charset != null ? charset : DEFAULT_CHARSET;
 			StringBuilder sb = new StringBuilder();
 			StringTokenizer tokenizer = new StringTokenizer(path, "/");
 			while (tokenizer.hasMoreTokens()) {
-				String value = UriUtils.encode(tokenizer.nextToken(), charset);
+				String value = null;
+				try {
+					value = UriUtils.encode(tokenizer.nextToken(), charset.name());
+				}
+				catch (UnsupportedEncodingException ex) {
+					// Should never happen
+					throw new IllegalStateException("Unexpected error", ex);
+				}
 				sb.append(value);
-				sb.append('/');
+				sb.append("/");
 			}
 			if (!path.endsWith("/")) {
 				sb.setLength(sb.length() - 1);
@@ -281,30 +277,24 @@ public class PathResourceResolver extends AbstractResourceResolver {
 		}
 	}
 
-	private boolean shouldDecodeRelativePath(Resource location, @Nullable HttpServletRequest request) {
-		return  (!(location instanceof UrlResource) && request != null &&
-				ServletRequestPathUtils.hasCachedPath(request) &&
-				ServletRequestPathUtils.getCachedPath(request) instanceof PathContainer);
-	}
-
 	private boolean shouldEncodeRelativePath(Resource location) {
-		return (location instanceof UrlResource &&
-				this.urlPathHelper != null && this.urlPathHelper.isUrlDecode());
+		return (location instanceof UrlResource && this.urlPathHelper != null && this.urlPathHelper.isUrlDecode());
 	}
 
 	private boolean isInvalidEncodedPath(String resourcePath) {
 		if (resourcePath.contains("%")) {
 			// Use URLDecoder (vs UriUtils) to preserve potentially decoded UTF-8 chars...
 			try {
-				String decodedPath = URLDecoder.decode(resourcePath, StandardCharsets.UTF_8);
+				String decodedPath = URLDecoder.decode(resourcePath, "UTF-8");
 				if (decodedPath.contains("../") || decodedPath.contains("..\\")) {
-					logger.warn(LogFormatUtils.formatValue(
-							"Resolved resource path contains encoded \"../\" or \"..\\\": " + resourcePath, -1, true));
+					if (logger.isTraceEnabled()) {
+						logger.trace("Resolved resource path contains encoded \"../\" or \"..\\\": " + resourcePath);
+					}
 					return true;
 				}
 			}
-			catch (IllegalArgumentException ex) {
-				// May not be possible to decode...
+			catch (UnsupportedEncodingException ex) {
+				// Should never happen...
 			}
 		}
 		return false;
