@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2021 the original author or authors.
+ * Copyright 2002-2015 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      https://www.apache.org/licenses/LICENSE-2.0
+ *      http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -22,16 +22,16 @@ import java.text.DateFormat;
 import java.text.SimpleDateFormat;
 import java.util.Date;
 import java.util.Set;
+import javax.servlet.jsp.JspException;
+import javax.servlet.jsp.PageContext;
+import javax.servlet.jsp.tagext.Tag;
 
-import jakarta.servlet.jsp.JspException;
-import jakarta.servlet.jsp.PageContext;
-import jakarta.servlet.jsp.tagext.Tag;
-import org.junit.jupiter.api.Test;
+import org.junit.Test;
 
 import org.springframework.beans.propertyeditors.CustomDateEditor;
-import org.springframework.beans.testfixture.beans.IndexedTestBean;
-import org.springframework.beans.testfixture.beans.NestedTestBean;
-import org.springframework.beans.testfixture.beans.TestBean;
+import org.springframework.tests.sample.beans.IndexedTestBean;
+import org.springframework.tests.sample.beans.NestedTestBean;
+import org.springframework.tests.sample.beans.TestBean;
 import org.springframework.validation.BindException;
 import org.springframework.validation.BindingResult;
 import org.springframework.validation.DataBinder;
@@ -41,41 +41,39 @@ import org.springframework.web.servlet.support.BindStatus;
 import org.springframework.web.servlet.tags.form.FormTag;
 import org.springframework.web.servlet.tags.form.TagWriter;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
+import static org.junit.Assert.*;
 
 /**
  * @author Juergen Hoeller
  * @author Alef Arendsen
  * @author Mark Fisher
  */
-class BindTagTests extends AbstractTagTests {
+public class BindTagTests extends AbstractTagTests {
 
 	@Test
-	void bindTagWithoutErrors() throws JspException {
+	public void bindTagWithoutErrors() throws JspException {
 		PageContext pc = createPageContext();
 		Errors errors = new ServletRequestDataBinder(new TestBean(), "tb").getBindingResult();
 		pc.getRequest().setAttribute(BindingResult.MODEL_KEY_PREFIX + "tb", errors);
 		BindTag tag = new BindTag();
 		tag.setPageContext(pc);
 		tag.setPath("tb");
-		assertThat(tag.doStartTag() == Tag.EVAL_BODY_INCLUDE).as("Correct doStartTag return value").isTrue();
+		assertTrue("Correct doStartTag return value", tag.doStartTag() == Tag.EVAL_BODY_INCLUDE);
 		BindStatus status = (BindStatus) pc.getAttribute(BindTag.STATUS_VARIABLE_NAME, PageContext.REQUEST_SCOPE);
-		assertThat(status != null).as("Has status variable").isTrue();
-		assertThat(status.getExpression() == null).as("Correct expression").isTrue();
-		assertThat(status.getValue() == null).as("Correct value").isTrue();
-		assertThat("".equals(status.getDisplayValue())).as("Correct displayValue").isTrue();
-		boolean condition = !status.isError();
-		assertThat(condition).as("Correct isError").isTrue();
-		assertThat(status.getErrorCodes().length == 0).as("Correct errorCodes").isTrue();
-		assertThat(status.getErrorMessages().length == 0).as("Correct errorMessages").isTrue();
-		assertThat("".equals(status.getErrorCode())).as("Correct errorCode").isTrue();
-		assertThat("".equals(status.getErrorMessage())).as("Correct errorMessage").isTrue();
-		assertThat("".equals(status.getErrorMessagesAsString(","))).as("Correct errorMessagesAsString").isTrue();
+		assertTrue("Has status variable", status != null);
+		assertTrue("Correct expression", status.getExpression() == null);
+		assertTrue("Correct value", status.getValue() == null);
+		assertTrue("Correct displayValue", "".equals(status.getDisplayValue()));
+		assertTrue("Correct isError", !status.isError());
+		assertTrue("Correct errorCodes", status.getErrorCodes().length == 0);
+		assertTrue("Correct errorMessages", status.getErrorMessages().length == 0);
+		assertTrue("Correct errorCode", "".equals(status.getErrorCode()));
+		assertTrue("Correct errorMessage", "".equals(status.getErrorMessage()));
+		assertTrue("Correct errorMessagesAsString", "".equals(status.getErrorMessagesAsString(",")));
 	}
 
 	@Test
-	void bindTagWithGlobalErrors() throws JspException {
+	public void bindTagWithGlobalErrors() throws JspException {
 		PageContext pc = createPageContext();
 		Errors errors = new ServletRequestDataBinder(new TestBean(), "tb").getBindingResult();
 		errors.reject("code1", "message1");
@@ -84,38 +82,38 @@ class BindTagTests extends AbstractTagTests {
 		BindTag tag = new BindTag();
 		tag.setPageContext(pc);
 		tag.setPath("tb");
-		assertThat(tag.doStartTag() == Tag.EVAL_BODY_INCLUDE).as("Correct doStartTag return value").isTrue();
+		assertTrue("Correct doStartTag return value", tag.doStartTag() == Tag.EVAL_BODY_INCLUDE);
 		BindStatus status = (BindStatus) pc.getAttribute(BindTag.STATUS_VARIABLE_NAME, PageContext.REQUEST_SCOPE);
-		assertThat(status != null).as("Has status variable").isTrue();
-		assertThat(status.getExpression() == null).as("Correct expression").isTrue();
-		assertThat(status.getValue() == null).as("Correct value").isTrue();
-		assertThat("".equals(status.getDisplayValue())).as("Correct displayValue").isTrue();
-		assertThat(status.isError()).as("Correct isError").isTrue();
-		assertThat(status.getErrorCodes().length == 1).as("Correct errorCodes").isTrue();
-		assertThat(status.getErrorMessages().length == 1).as("Correct errorMessages").isTrue();
-		assertThat("code1".equals(status.getErrorCode())).as("Correct errorCode").isTrue();
-		assertThat("message1".equals(status.getErrorMessage())).as("Correct errorMessage").isTrue();
-		assertThat("message1".equals(status.getErrorMessagesAsString(","))).as("Correct errorMessagesAsString").isTrue();
+		assertTrue("Has status variable", status != null);
+		assertTrue("Correct expression", status.getExpression() == null);
+		assertTrue("Correct value", status.getValue() == null);
+		assertTrue("Correct displayValue", "".equals(status.getDisplayValue()));
+		assertTrue("Correct isError", status.isError());
+		assertTrue("Correct errorCodes", status.getErrorCodes().length == 1);
+		assertTrue("Correct errorMessages", status.getErrorMessages().length == 1);
+		assertTrue("Correct errorCode", "code1".equals(status.getErrorCode()));
+		assertTrue("Correct errorMessage", "message1".equals(status.getErrorMessage()));
+		assertTrue("Correct errorMessagesAsString", "message1".equals(status.getErrorMessagesAsString(",")));
 
 		tag = new BindTag();
 		tag.setPageContext(pc);
 		tag.setPath("tb.*");
-		assertThat(tag.doStartTag() == Tag.EVAL_BODY_INCLUDE).as("Correct doStartTag return value").isTrue();
+		assertTrue("Correct doStartTag return value", tag.doStartTag() == Tag.EVAL_BODY_INCLUDE);
 		status = (BindStatus) pc.getAttribute(BindTag.STATUS_VARIABLE_NAME, PageContext.REQUEST_SCOPE);
-		assertThat(status != null).as("Has status variable").isTrue();
-		assertThat("*".equals(status.getExpression())).as("Correct expression").isTrue();
-		assertThat(status.getValue() == null).as("Correct value").isTrue();
-		assertThat("".equals(status.getDisplayValue())).as("Correct displayValue").isTrue();
-		assertThat(status.isError()).as("Correct isError").isTrue();
-		assertThat(status.getErrorCodes().length == 1).as("Correct errorCodes").isTrue();
-		assertThat(status.getErrorMessages().length == 1).as("Correct errorMessages").isTrue();
-		assertThat("code1".equals(status.getErrorCode())).as("Correct errorCode").isTrue();
-		assertThat("message1".equals(status.getErrorMessage())).as("Correct errorMessage").isTrue();
-		assertThat("message1".equals(status.getErrorMessagesAsString(","))).as("Correct errorMessagesAsString").isTrue();
+		assertTrue("Has status variable", status != null);
+		assertTrue("Correct expression", "*".equals(status.getExpression()));
+		assertTrue("Correct value", status.getValue() == null);
+		assertTrue("Correct displayValue", "".equals(status.getDisplayValue()));
+		assertTrue("Correct isError", status.isError());
+		assertTrue("Correct errorCodes", status.getErrorCodes().length == 1);
+		assertTrue("Correct errorMessages", status.getErrorMessages().length == 1);
+		assertTrue("Correct errorCode", "code1".equals(status.getErrorCode()));
+		assertTrue("Correct errorMessage", "message1".equals(status.getErrorMessage()));
+		assertTrue("Correct errorMessagesAsString", "message1".equals(status.getErrorMessagesAsString(",")));
 	}
 
 	@Test
-	void bindTagWithGlobalErrorsAndNoDefaultMessage() throws JspException {
+	public void bindTagWithGlobalErrorsAndNoDefaultMessage() throws JspException {
 		PageContext pc = createPageContext();
 		Errors errors = new ServletRequestDataBinder(new TestBean(), "tb").getBindingResult();
 		errors.reject("code1");
@@ -124,32 +122,32 @@ class BindTagTests extends AbstractTagTests {
 		BindTag tag = new BindTag();
 		tag.setPageContext(pc);
 		tag.setPath("tb");
-		assertThat(tag.doStartTag() == Tag.EVAL_BODY_INCLUDE).as("Correct doStartTag return value").isTrue();
+		assertTrue("Correct doStartTag return value", tag.doStartTag() == Tag.EVAL_BODY_INCLUDE);
 		BindStatus status = (BindStatus) pc.getAttribute(BindTag.STATUS_VARIABLE_NAME, PageContext.REQUEST_SCOPE);
-		assertThat(status != null).as("Has status variable").isTrue();
-		assertThat(status.getExpression() == null).as("Correct expression").isTrue();
-		assertThat(status.getValue() == null).as("Correct value").isTrue();
-		assertThat("".equals(status.getDisplayValue())).as("Correct displayValue").isTrue();
-		assertThat(status.isError()).as("Correct isError").isTrue();
-		assertThat(status.getErrorCodes().length == 1).as("Correct errorCodes").isTrue();
-		assertThat("code1".equals(status.getErrorCode())).as("Correct errorCode").isTrue();
+		assertTrue("Has status variable", status != null);
+		assertTrue("Correct expression", status.getExpression() == null);
+		assertTrue("Correct value", status.getValue() == null);
+		assertTrue("Correct displayValue", "".equals(status.getDisplayValue()));
+		assertTrue("Correct isError", status.isError());
+		assertTrue("Correct errorCodes", status.getErrorCodes().length == 1);
+		assertTrue("Correct errorCode", "code1".equals(status.getErrorCode()));
 
 		tag = new BindTag();
 		tag.setPageContext(pc);
 		tag.setPath("tb.*");
-		assertThat(tag.doStartTag() == Tag.EVAL_BODY_INCLUDE).as("Correct doStartTag return value").isTrue();
+		assertTrue("Correct doStartTag return value", tag.doStartTag() == Tag.EVAL_BODY_INCLUDE);
 		status = (BindStatus) pc.getAttribute(BindTag.STATUS_VARIABLE_NAME, PageContext.REQUEST_SCOPE);
-		assertThat(status != null).as("Has status variable").isTrue();
-		assertThat("*".equals(status.getExpression())).as("Correct expression").isTrue();
-		assertThat(status.getValue() == null).as("Correct value").isTrue();
-		assertThat("".equals(status.getDisplayValue())).as("Correct displayValue").isTrue();
-		assertThat(status.isError()).as("Correct isError").isTrue();
-		assertThat(status.getErrorCodes().length == 1).as("Correct errorCodes").isTrue();
-		assertThat("code1".equals(status.getErrorCode())).as("Correct errorCode").isTrue();
+		assertTrue("Has status variable", status != null);
+		assertTrue("Correct expression", "*".equals(status.getExpression()));
+		assertTrue("Correct value", status.getValue() == null);
+		assertTrue("Correct displayValue", "".equals(status.getDisplayValue()));
+		assertTrue("Correct isError", status.isError());
+		assertTrue("Correct errorCodes", status.getErrorCodes().length == 1);
+		assertTrue("Correct errorCode", "code1".equals(status.getErrorCode()));
 	}
 
 	@Test
-	void bindTagWithGlobalErrorsAndDefaultMessageOnly() throws JspException {
+	public void bindTagWithGlobalErrorsAndDefaultMessageOnly() throws JspException {
 		PageContext pc = createPageContext();
 		Errors errors = new ServletRequestDataBinder(new TestBean(), "tb").getBindingResult();
 		errors.reject(null, "message1");
@@ -158,34 +156,34 @@ class BindTagTests extends AbstractTagTests {
 		BindTag tag = new BindTag();
 		tag.setPageContext(pc);
 		tag.setPath("tb");
-		assertThat(tag.doStartTag() == Tag.EVAL_BODY_INCLUDE).as("Correct doStartTag return value").isTrue();
+		assertTrue("Correct doStartTag return value", tag.doStartTag() == Tag.EVAL_BODY_INCLUDE);
 		BindStatus status = (BindStatus) pc.getAttribute(BindTag.STATUS_VARIABLE_NAME, PageContext.REQUEST_SCOPE);
-		assertThat(status != null).as("Has status variable").isTrue();
-		assertThat(status.getExpression() == null).as("Correct expression").isTrue();
-		assertThat(status.getValue() == null).as("Correct value").isTrue();
-		assertThat("".equals(status.getDisplayValue())).as("Correct displayValue").isTrue();
-		assertThat(status.isError()).as("Correct isError").isTrue();
-		assertThat(status.getErrorMessages().length == 1).as("Correct errorMessages").isTrue();
-		assertThat("message1".equals(status.getErrorMessage())).as("Correct errorMessage").isTrue();
-		assertThat("message1".equals(status.getErrorMessagesAsString(","))).as("Correct errorMessagesAsString").isTrue();
+		assertTrue("Has status variable", status != null);
+		assertTrue("Correct expression", status.getExpression() == null);
+		assertTrue("Correct value", status.getValue() == null);
+		assertTrue("Correct displayValue", "".equals(status.getDisplayValue()));
+		assertTrue("Correct isError", status.isError());
+		assertTrue("Correct errorMessages", status.getErrorMessages().length == 1);
+		assertTrue("Correct errorMessage", "message1".equals(status.getErrorMessage()));
+		assertTrue("Correct errorMessagesAsString", "message1".equals(status.getErrorMessagesAsString(",")));
 
 		tag = new BindTag();
 		tag.setPageContext(pc);
 		tag.setPath("tb.*");
-		assertThat(tag.doStartTag() == Tag.EVAL_BODY_INCLUDE).as("Correct doStartTag return value").isTrue();
+		assertTrue("Correct doStartTag return value", tag.doStartTag() == Tag.EVAL_BODY_INCLUDE);
 		status = (BindStatus) pc.getAttribute(BindTag.STATUS_VARIABLE_NAME, PageContext.REQUEST_SCOPE);
-		assertThat(status != null).as("Has status variable").isTrue();
-		assertThat("*".equals(status.getExpression())).as("Correct expression").isTrue();
-		assertThat(status.getValue() == null).as("Correct value").isTrue();
-		assertThat("".equals(status.getDisplayValue())).as("Correct displayValue").isTrue();
-		assertThat(status.isError()).as("Correct isError").isTrue();
-		assertThat(status.getErrorMessages().length == 1).as("Correct errorMessages").isTrue();
-		assertThat("message1".equals(status.getErrorMessage())).as("Correct errorMessage").isTrue();
-		assertThat("message1".equals(status.getErrorMessagesAsString(","))).as("Correct errorMessagesAsString").isTrue();
+		assertTrue("Has status variable", status != null);
+		assertTrue("Correct expression", "*".equals(status.getExpression()));
+		assertTrue("Correct value", status.getValue() == null);
+		assertTrue("Correct displayValue", "".equals(status.getDisplayValue()));
+		assertTrue("Correct isError", status.isError());
+		assertTrue("Correct errorMessages", status.getErrorMessages().length == 1);
+		assertTrue("Correct errorMessage", "message1".equals(status.getErrorMessage()));
+		assertTrue("Correct errorMessagesAsString", "message1".equals(status.getErrorMessagesAsString(",")));
 	}
 
 	@Test
-	void bindStatusGetErrorMessagesAsString() throws JspException {
+	public void bindStatusGetErrorMessagesAsString() throws JspException {
 		// one error (should not include delimiter)
 		PageContext pc = createPageContext();
 		Errors errors = new ServletRequestDataBinder(new TestBean(), "tb").getBindingResult();
@@ -196,7 +194,8 @@ class BindTagTests extends AbstractTagTests {
 		tag.setPath("tb");
 		tag.doStartTag();
 		BindStatus status = (BindStatus) pc.getAttribute(BindTag.STATUS_VARIABLE_NAME, PageContext.REQUEST_SCOPE);
-		assertThat(status.getErrorMessagesAsString(",")).as("Error messages String should be 'message1'").isEqualTo("message1");
+		assertEquals("Error messages String should be 'message1'",
+				status.getErrorMessagesAsString(","), "message1");
 
 		// two errors
 		pc = createPageContext();
@@ -209,7 +208,8 @@ class BindTagTests extends AbstractTagTests {
 		tag.setPath("tb");
 		tag.doStartTag();
 		status = (BindStatus) pc.getAttribute(BindTag.STATUS_VARIABLE_NAME, PageContext.REQUEST_SCOPE);
-		assertThat(status.getErrorMessagesAsString(",")).as("Error messages String should be 'message1,message2'").isEqualTo("message1,message2");
+		assertEquals("Error messages String should be 'message1,message2'",
+				status.getErrorMessagesAsString(","), "message1,message2");
 
 		// no errors
 		pc = createPageContext();
@@ -220,11 +220,11 @@ class BindTagTests extends AbstractTagTests {
 		tag.setPath("tb");
 		tag.doStartTag();
 		status = (BindStatus) pc.getAttribute(BindTag.STATUS_VARIABLE_NAME, PageContext.REQUEST_SCOPE);
-		assertThat(status.getErrorMessagesAsString(",")).as("Error messages String should be ''").isEqualTo("");
+		assertEquals("Error messages String should be ''", status.getErrorMessagesAsString(","), "");
 	}
 
 	@Test
-	void bindTagWithFieldErrors() throws JspException {
+	public void bindTagWithFieldErrors() throws JspException {
 		PageContext pc = createPageContext();
 		TestBean tb = new TestBean();
 		tb.setName("name1");
@@ -238,63 +238,64 @@ class BindTagTests extends AbstractTagTests {
 		tag.setPageContext(pc);
 		tag.setPath("tb.name");
 		tag.setHtmlEscape(true);
-		assertThat(tag.doStartTag() == Tag.EVAL_BODY_INCLUDE).as("Correct doStartTag return value").isTrue();
+		assertTrue("Correct doStartTag return value", tag.doStartTag() == Tag.EVAL_BODY_INCLUDE);
 		BindStatus status = (BindStatus) pc.getAttribute(BindTag.STATUS_VARIABLE_NAME, PageContext.REQUEST_SCOPE);
-		assertThat(status != null).as("Has status variable").isTrue();
-		assertThat("name".equals(status.getExpression())).as("Correct expression").isTrue();
-		assertThat("name1".equals(status.getValue())).as("Correct value").isTrue();
-		assertThat("name1".equals(status.getDisplayValue())).as("Correct displayValue").isTrue();
-		assertThat(status.isError()).as("Correct isError").isTrue();
-		assertThat(status.getErrorCodes().length == 2).as("Correct errorCodes").isTrue();
-		assertThat(status.getErrorMessages().length == 2).as("Correct errorMessages").isTrue();
-		assertThat("code1".equals(status.getErrorCode())).as("Correct errorCode").isTrue();
-		assertThat("code1".equals(status.getErrorCodes()[0])).as("Correct errorCode").isTrue();
-		assertThat("code2".equals(status.getErrorCodes()[1])).as("Correct errorCode").isTrue();
-		assertThat("message &amp; 1".equals(status.getErrorMessage())).as("Correct errorMessage").isTrue();
-		assertThat("message &amp; 1".equals(status.getErrorMessages()[0])).as("Correct errorMessage").isTrue();
-		assertThat("message2".equals(status.getErrorMessages()[1])).as("Correct errorMessage").isTrue();
-		assertThat("message &amp; 1 - message2".equals(status.getErrorMessagesAsString(" - "))).as("Correct errorMessagesAsString").isTrue();
+		assertTrue("Has status variable", status != null);
+		assertTrue("Correct expression", "name".equals(status.getExpression()));
+		assertTrue("Correct value", "name1".equals(status.getValue()));
+		assertTrue("Correct displayValue", "name1".equals(status.getDisplayValue()));
+		assertTrue("Correct isError", status.isError());
+		assertTrue("Correct errorCodes", status.getErrorCodes().length == 2);
+		assertTrue("Correct errorMessages", status.getErrorMessages().length == 2);
+		assertTrue("Correct errorCode", "code1".equals(status.getErrorCode()));
+		assertTrue("Correct errorCode", "code1".equals(status.getErrorCodes()[0]));
+		assertTrue("Correct errorCode", "code2".equals(status.getErrorCodes()[1]));
+		assertTrue("Correct errorMessage", "message &amp; 1".equals(status.getErrorMessage()));
+		assertTrue("Correct errorMessage", "message &amp; 1".equals(status.getErrorMessages()[0]));
+		assertTrue("Correct errorMessage", "message2".equals(status.getErrorMessages()[1]));
+		assertTrue("Correct errorMessagesAsString",
+				"message &amp; 1 - message2".equals(status.getErrorMessagesAsString(" - ")));
 
 		tag = new BindTag();
 		tag.setPageContext(pc);
 		tag.setPath("tb.age");
-		assertThat(tag.doStartTag() == Tag.EVAL_BODY_INCLUDE).as("Correct doStartTag return value").isTrue();
+		assertTrue("Correct doStartTag return value", tag.doStartTag() == Tag.EVAL_BODY_INCLUDE);
 		status = (BindStatus) pc.getAttribute(BindTag.STATUS_VARIABLE_NAME, PageContext.REQUEST_SCOPE);
-		assertThat(status != null).as("Has status variable").isTrue();
-		assertThat("age".equals(status.getExpression())).as("Correct expression").isTrue();
-		assertThat(Integer.valueOf(0).equals(status.getValue())).as("Correct value").isTrue();
-		assertThat("0".equals(status.getDisplayValue())).as("Correct displayValue").isTrue();
-		assertThat(status.isError()).as("Correct isError").isTrue();
-		assertThat(status.getErrorCodes().length == 1).as("Correct errorCodes").isTrue();
-		assertThat(status.getErrorMessages().length == 1).as("Correct errorMessages").isTrue();
-		assertThat("code2".equals(status.getErrorCode())).as("Correct errorCode").isTrue();
-		assertThat("message2".equals(status.getErrorMessage())).as("Correct errorMessage").isTrue();
-		assertThat("message2".equals(status.getErrorMessagesAsString(" - "))).as("Correct errorMessagesAsString").isTrue();
+		assertTrue("Has status variable", status != null);
+		assertTrue("Correct expression", "age".equals(status.getExpression()));
+		assertTrue("Correct value", new Integer(0).equals(status.getValue()));
+		assertTrue("Correct displayValue", "0".equals(status.getDisplayValue()));
+		assertTrue("Correct isError", status.isError());
+		assertTrue("Correct errorCodes", status.getErrorCodes().length == 1);
+		assertTrue("Correct errorMessages", status.getErrorMessages().length == 1);
+		assertTrue("Correct errorCode", "code2".equals(status.getErrorCode()));
+		assertTrue("Correct errorMessage", "message2".equals(status.getErrorMessage()));
+		assertTrue("Correct errorMessagesAsString", "message2".equals(status.getErrorMessagesAsString(" - ")));
 
 		tag = new BindTag();
 		tag.setPageContext(pc);
 		tag.setPath("tb.*");
-		assertThat(tag.doStartTag() == Tag.EVAL_BODY_INCLUDE).as("Correct doStartTag return value").isTrue();
+		assertTrue("Correct doStartTag return value", tag.doStartTag() == Tag.EVAL_BODY_INCLUDE);
 		status = (BindStatus) pc.getAttribute(BindTag.STATUS_VARIABLE_NAME, PageContext.REQUEST_SCOPE);
-		assertThat(status != null).as("Has status variable").isTrue();
-		assertThat("*".equals(status.getExpression())).as("Correct expression").isTrue();
-		assertThat(status.getValue() == null).as("Correct value").isTrue();
-		assertThat("".equals(status.getDisplayValue())).as("Correct displayValue").isTrue();
-		assertThat(status.isError()).as("Correct isError").isTrue();
-		assertThat(status.getErrorCodes().length == 3).as("Correct errorCodes").isTrue();
-		assertThat(status.getErrorMessages().length == 3).as("Correct errorMessages").isTrue();
-		assertThat("code1".equals(status.getErrorCode())).as("Correct errorCode").isTrue();
-		assertThat("code1".equals(status.getErrorCodes()[0])).as("Correct errorCode").isTrue();
-		assertThat("code2".equals(status.getErrorCodes()[1])).as("Correct errorCode").isTrue();
-		assertThat("code2".equals(status.getErrorCodes()[2])).as("Correct errorCode").isTrue();
-		assertThat("message & 1".equals(status.getErrorMessage())).as("Correct errorMessage").isTrue();
-		assertThat("message & 1".equals(status.getErrorMessages()[0])).as("Correct errorMessage").isTrue();
-		assertThat("message2".equals(status.getErrorMessages()[1])).as("Correct errorMessage").isTrue();
-		assertThat("message2".equals(status.getErrorMessages()[2])).as("Correct errorMessage").isTrue();
+		assertTrue("Has status variable", status != null);
+		assertTrue("Correct expression", "*".equals(status.getExpression()));
+		assertTrue("Correct value", status.getValue() == null);
+		assertTrue("Correct displayValue", "".equals(status.getDisplayValue()));
+		assertTrue("Correct isError", status.isError());
+		assertTrue("Correct errorCodes", status.getErrorCodes().length == 3);
+		assertTrue("Correct errorMessages", status.getErrorMessages().length == 3);
+		assertTrue("Correct errorCode", "code1".equals(status.getErrorCode()));
+		assertTrue("Correct errorCode", "code1".equals(status.getErrorCodes()[0]));
+		assertTrue("Correct errorCode", "code2".equals(status.getErrorCodes()[1]));
+		assertTrue("Correct errorCode", "code2".equals(status.getErrorCodes()[2]));
+		assertTrue("Correct errorMessage", "message & 1".equals(status.getErrorMessage()));
+		assertTrue("Correct errorMessage", "message & 1".equals(status.getErrorMessages()[0]));
+		assertTrue("Correct errorMessage", "message2".equals(status.getErrorMessages()[1]));
+		assertTrue("Correct errorMessage", "message2".equals(status.getErrorMessages()[2]));
 	}
 
 	@Test
-	void bindTagWithFieldErrorsAndNoDefaultMessage() throws JspException {
+	public void bindTagWithFieldErrorsAndNoDefaultMessage() throws JspException {
 		PageContext pc = createPageContext();
 		TestBean tb = new TestBean();
 		tb.setName("name1");
@@ -308,50 +309,50 @@ class BindTagTests extends AbstractTagTests {
 		tag.setPageContext(pc);
 		tag.setPath("tb.name");
 		tag.setHtmlEscape(true);
-		assertThat(tag.doStartTag() == Tag.EVAL_BODY_INCLUDE).as("Correct doStartTag return value").isTrue();
+		assertTrue("Correct doStartTag return value", tag.doStartTag() == Tag.EVAL_BODY_INCLUDE);
 		BindStatus status = (BindStatus) pc.getAttribute(BindTag.STATUS_VARIABLE_NAME, PageContext.REQUEST_SCOPE);
-		assertThat(status != null).as("Has status variable").isTrue();
-		assertThat("name".equals(status.getExpression())).as("Correct expression").isTrue();
-		assertThat("name1".equals(status.getValue())).as("Correct value").isTrue();
-		assertThat("name1".equals(status.getDisplayValue())).as("Correct displayValue").isTrue();
-		assertThat(status.isError()).as("Correct isError").isTrue();
-		assertThat(status.getErrorCodes().length == 2).as("Correct errorCodes").isTrue();
-		assertThat("code1".equals(status.getErrorCode())).as("Correct errorCode").isTrue();
-		assertThat("code1".equals(status.getErrorCodes()[0])).as("Correct errorCode").isTrue();
-		assertThat("code2".equals(status.getErrorCodes()[1])).as("Correct errorCode").isTrue();
+		assertTrue("Has status variable", status != null);
+		assertTrue("Correct expression", "name".equals(status.getExpression()));
+		assertTrue("Correct value", "name1".equals(status.getValue()));
+		assertTrue("Correct displayValue", "name1".equals(status.getDisplayValue()));
+		assertTrue("Correct isError", status.isError());
+		assertTrue("Correct errorCodes", status.getErrorCodes().length == 2);
+		assertTrue("Correct errorCode", "code1".equals(status.getErrorCode()));
+		assertTrue("Correct errorCode", "code1".equals(status.getErrorCodes()[0]));
+		assertTrue("Correct errorCode", "code2".equals(status.getErrorCodes()[1]));
 
 		tag = new BindTag();
 		tag.setPageContext(pc);
 		tag.setPath("tb.age");
-		assertThat(tag.doStartTag() == Tag.EVAL_BODY_INCLUDE).as("Correct doStartTag return value").isTrue();
+		assertTrue("Correct doStartTag return value", tag.doStartTag() == Tag.EVAL_BODY_INCLUDE);
 		status = (BindStatus) pc.getAttribute(BindTag.STATUS_VARIABLE_NAME, PageContext.REQUEST_SCOPE);
-		assertThat(status != null).as("Has status variable").isTrue();
-		assertThat("age".equals(status.getExpression())).as("Correct expression").isTrue();
-		assertThat(Integer.valueOf(0).equals(status.getValue())).as("Correct value").isTrue();
-		assertThat("0".equals(status.getDisplayValue())).as("Correct displayValue").isTrue();
-		assertThat(status.isError()).as("Correct isError").isTrue();
-		assertThat(status.getErrorCodes().length == 1).as("Correct errorCodes").isTrue();
-		assertThat("code2".equals(status.getErrorCode())).as("Correct errorCode").isTrue();
+		assertTrue("Has status variable", status != null);
+		assertTrue("Correct expression", "age".equals(status.getExpression()));
+		assertTrue("Correct value", new Integer(0).equals(status.getValue()));
+		assertTrue("Correct displayValue", "0".equals(status.getDisplayValue()));
+		assertTrue("Correct isError", status.isError());
+		assertTrue("Correct errorCodes", status.getErrorCodes().length == 1);
+		assertTrue("Correct errorCode", "code2".equals(status.getErrorCode()));
 
 		tag = new BindTag();
 		tag.setPageContext(pc);
 		tag.setPath("tb.*");
-		assertThat(tag.doStartTag() == Tag.EVAL_BODY_INCLUDE).as("Correct doStartTag return value").isTrue();
+		assertTrue("Correct doStartTag return value", tag.doStartTag() == Tag.EVAL_BODY_INCLUDE);
 		status = (BindStatus) pc.getAttribute(BindTag.STATUS_VARIABLE_NAME, PageContext.REQUEST_SCOPE);
-		assertThat(status != null).as("Has status variable").isTrue();
-		assertThat("*".equals(status.getExpression())).as("Correct expression").isTrue();
-		assertThat(status.getValue() == null).as("Correct value").isTrue();
-		assertThat("".equals(status.getDisplayValue())).as("Correct displayValue").isTrue();
-		assertThat(status.isError()).as("Correct isError").isTrue();
-		assertThat(status.getErrorCodes().length == 3).as("Correct errorCodes").isTrue();
-		assertThat("code1".equals(status.getErrorCode())).as("Correct errorCode").isTrue();
-		assertThat("code1".equals(status.getErrorCodes()[0])).as("Correct errorCode").isTrue();
-		assertThat("code2".equals(status.getErrorCodes()[1])).as("Correct errorCode").isTrue();
-		assertThat("code2".equals(status.getErrorCodes()[2])).as("Correct errorCode").isTrue();
+		assertTrue("Has status variable", status != null);
+		assertTrue("Correct expression", "*".equals(status.getExpression()));
+		assertTrue("Correct value", status.getValue() == null);
+		assertTrue("Correct displayValue", "".equals(status.getDisplayValue()));
+		assertTrue("Correct isError", status.isError());
+		assertTrue("Correct errorCodes", status.getErrorCodes().length == 3);
+		assertTrue("Correct errorCode", "code1".equals(status.getErrorCode()));
+		assertTrue("Correct errorCode", "code1".equals(status.getErrorCodes()[0]));
+		assertTrue("Correct errorCode", "code2".equals(status.getErrorCodes()[1]));
+		assertTrue("Correct errorCode", "code2".equals(status.getErrorCodes()[2]));
 	}
 
 	@Test
-	void bindTagWithFieldErrorsAndDefaultMessageOnly() throws JspException {
+	public void bindTagWithFieldErrorsAndDefaultMessageOnly() throws JspException {
 		PageContext pc = createPageContext();
 		TestBean tb = new TestBean();
 		tb.setName("name1");
@@ -365,52 +366,53 @@ class BindTagTests extends AbstractTagTests {
 		tag.setPageContext(pc);
 		tag.setPath("tb.name");
 		tag.setHtmlEscape(true);
-		assertThat(tag.doStartTag() == Tag.EVAL_BODY_INCLUDE).as("Correct doStartTag return value").isTrue();
+		assertTrue("Correct doStartTag return value", tag.doStartTag() == Tag.EVAL_BODY_INCLUDE);
 		BindStatus status = (BindStatus) pc.getAttribute(BindTag.STATUS_VARIABLE_NAME, PageContext.REQUEST_SCOPE);
-		assertThat(status != null).as("Has status variable").isTrue();
-		assertThat("name".equals(status.getExpression())).as("Correct expression").isTrue();
-		assertThat("name1".equals(status.getValue())).as("Correct value").isTrue();
-		assertThat("name1".equals(status.getDisplayValue())).as("Correct displayValue").isTrue();
-		assertThat(status.isError()).as("Correct isError").isTrue();
-		assertThat(status.getErrorMessages().length == 2).as("Correct errorMessages").isTrue();
-		assertThat("message &amp; 1".equals(status.getErrorMessage())).as("Correct errorMessage").isTrue();
-		assertThat("message &amp; 1".equals(status.getErrorMessages()[0])).as("Correct errorMessage").isTrue();
-		assertThat("message2".equals(status.getErrorMessages()[1])).as("Correct errorMessage").isTrue();
-		assertThat("message &amp; 1 - message2".equals(status.getErrorMessagesAsString(" - "))).as("Correct errorMessagesAsString").isTrue();
+		assertTrue("Has status variable", status != null);
+		assertTrue("Correct expression", "name".equals(status.getExpression()));
+		assertTrue("Correct value", "name1".equals(status.getValue()));
+		assertTrue("Correct displayValue", "name1".equals(status.getDisplayValue()));
+		assertTrue("Correct isError", status.isError());
+		assertTrue("Correct errorMessages", status.getErrorMessages().length == 2);
+		assertTrue("Correct errorMessage", "message &amp; 1".equals(status.getErrorMessage()));
+		assertTrue("Correct errorMessage", "message &amp; 1".equals(status.getErrorMessages()[0]));
+		assertTrue("Correct errorMessage", "message2".equals(status.getErrorMessages()[1]));
+		assertTrue("Correct errorMessagesAsString",
+				"message &amp; 1 - message2".equals(status.getErrorMessagesAsString(" - ")));
 
 		tag = new BindTag();
 		tag.setPageContext(pc);
 		tag.setPath("tb.age");
-		assertThat(tag.doStartTag() == Tag.EVAL_BODY_INCLUDE).as("Correct doStartTag return value").isTrue();
+		assertTrue("Correct doStartTag return value", tag.doStartTag() == Tag.EVAL_BODY_INCLUDE);
 		status = (BindStatus) pc.getAttribute(BindTag.STATUS_VARIABLE_NAME, PageContext.REQUEST_SCOPE);
-		assertThat(status != null).as("Has status variable").isTrue();
-		assertThat("age".equals(status.getExpression())).as("Correct expression").isTrue();
-		assertThat(Integer.valueOf(0).equals(status.getValue())).as("Correct value").isTrue();
-		assertThat("0".equals(status.getDisplayValue())).as("Correct displayValue").isTrue();
-		assertThat(status.isError()).as("Correct isError").isTrue();
-		assertThat(status.getErrorMessages().length == 1).as("Correct errorMessages").isTrue();
-		assertThat("message2".equals(status.getErrorMessage())).as("Correct errorMessage").isTrue();
-		assertThat("message2".equals(status.getErrorMessagesAsString(" - "))).as("Correct errorMessagesAsString").isTrue();
+		assertTrue("Has status variable", status != null);
+		assertTrue("Correct expression", "age".equals(status.getExpression()));
+		assertTrue("Correct value", new Integer(0).equals(status.getValue()));
+		assertTrue("Correct displayValue", "0".equals(status.getDisplayValue()));
+		assertTrue("Correct isError", status.isError());
+		assertTrue("Correct errorMessages", status.getErrorMessages().length == 1);
+		assertTrue("Correct errorMessage", "message2".equals(status.getErrorMessage()));
+		assertTrue("Correct errorMessagesAsString", "message2".equals(status.getErrorMessagesAsString(" - ")));
 
 		tag = new BindTag();
 		tag.setPageContext(pc);
 		tag.setPath("tb.*");
-		assertThat(tag.doStartTag() == Tag.EVAL_BODY_INCLUDE).as("Correct doStartTag return value").isTrue();
+		assertTrue("Correct doStartTag return value", tag.doStartTag() == Tag.EVAL_BODY_INCLUDE);
 		status = (BindStatus) pc.getAttribute(BindTag.STATUS_VARIABLE_NAME, PageContext.REQUEST_SCOPE);
-		assertThat(status != null).as("Has status variable").isTrue();
-		assertThat("*".equals(status.getExpression())).as("Correct expression").isTrue();
-		assertThat(status.getValue() == null).as("Correct value").isTrue();
-		assertThat("".equals(status.getDisplayValue())).as("Correct displayValue").isTrue();
-		assertThat(status.isError()).as("Correct isError").isTrue();
-		assertThat(status.getErrorMessages().length == 3).as("Correct errorMessages").isTrue();
-		assertThat("message & 1".equals(status.getErrorMessage())).as("Correct errorMessage").isTrue();
-		assertThat("message & 1".equals(status.getErrorMessages()[0])).as("Correct errorMessage").isTrue();
-		assertThat("message2".equals(status.getErrorMessages()[1])).as("Correct errorMessage").isTrue();
-		assertThat("message2".equals(status.getErrorMessages()[2])).as("Correct errorMessage").isTrue();
+		assertTrue("Has status variable", status != null);
+		assertTrue("Correct expression", "*".equals(status.getExpression()));
+		assertTrue("Correct value", status.getValue() == null);
+		assertTrue("Correct displayValue", "".equals(status.getDisplayValue()));
+		assertTrue("Correct isError", status.isError());
+		assertTrue("Correct errorMessages", status.getErrorMessages().length == 3);
+		assertTrue("Correct errorMessage", "message & 1".equals(status.getErrorMessage()));
+		assertTrue("Correct errorMessage", "message & 1".equals(status.getErrorMessages()[0]));
+		assertTrue("Correct errorMessage", "message2".equals(status.getErrorMessages()[1]));
+		assertTrue("Correct errorMessage", "message2".equals(status.getErrorMessages()[2]));
 	}
 
 	@Test
-	void bindTagWithNestedFieldErrors() throws JspException {
+	public void bindTagWithNestedFieldErrors() throws JspException {
 		PageContext pc = createPageContext();
 		TestBean tb = new TestBean();
 		tb.setName("name1");
@@ -423,22 +425,22 @@ class BindTagTests extends AbstractTagTests {
 		BindTag tag = new BindTag();
 		tag.setPageContext(pc);
 		tag.setPath("tb.spouse.name");
-		assertThat(tag.doStartTag() == Tag.EVAL_BODY_INCLUDE).as("Correct doStartTag return value").isTrue();
+		assertTrue("Correct doStartTag return value", tag.doStartTag() == Tag.EVAL_BODY_INCLUDE);
 		BindStatus status = (BindStatus) pc.getAttribute(BindTag.STATUS_VARIABLE_NAME, PageContext.REQUEST_SCOPE);
-		assertThat(status != null).as("Has status variable").isTrue();
-		assertThat("spouse.name".equals(status.getExpression())).as("Correct expression").isTrue();
-		assertThat("name2".equals(status.getValue())).as("Correct value").isTrue();
-		assertThat("name2".equals(status.getDisplayValue())).as("Correct displayValue").isTrue();
-		assertThat(status.isError()).as("Correct isError").isTrue();
-		assertThat(status.getErrorCodes().length == 1).as("Correct errorCodes").isTrue();
-		assertThat(status.getErrorMessages().length == 1).as("Correct errorMessages").isTrue();
-		assertThat("code1".equals(status.getErrorCode())).as("Correct errorCode").isTrue();
-		assertThat("message1".equals(status.getErrorMessage())).as("Correct errorMessage").isTrue();
-		assertThat("message1".equals(status.getErrorMessagesAsString(" - "))).as("Correct errorMessagesAsString").isTrue();
+		assertTrue("Has status variable", status != null);
+		assertTrue("Correct expression", "spouse.name".equals(status.getExpression()));
+		assertTrue("Correct value", "name2".equals(status.getValue()));
+		assertTrue("Correct displayValue", "name2".equals(status.getDisplayValue()));
+		assertTrue("Correct isError", status.isError());
+		assertTrue("Correct errorCodes", status.getErrorCodes().length == 1);
+		assertTrue("Correct errorMessages", status.getErrorMessages().length == 1);
+		assertTrue("Correct errorCode", "code1".equals(status.getErrorCode()));
+		assertTrue("Correct errorMessage", "message1".equals(status.getErrorMessage()));
+		assertTrue("Correct errorMessagesAsString", "message1".equals(status.getErrorMessagesAsString(" - ")));
 	}
 
 	@Test
-	void propertyExposing() throws JspException {
+	public void propertyExposing() throws JspException {
 		PageContext pc = createPageContext();
 		TestBean tb = new TestBean();
 		tb.setName("name1");
@@ -451,19 +453,19 @@ class BindTagTests extends AbstractTagTests {
 		BindTag tag = new BindTag();
 		tag.setPageContext(pc);
 		tag.setPath("tb");
-		assertThat(tag.doStartTag() == Tag.EVAL_BODY_INCLUDE).as("Correct doStartTag return value").isTrue();
-		assertThat(tag.getProperty()).isNull();
+		assertTrue("Correct doStartTag return value", tag.doStartTag() == Tag.EVAL_BODY_INCLUDE);
+		assertNull(tag.getProperty());
 
 		// test property set (tb.name)
 		tag.release();
 		tag.setPageContext(pc);
 		tag.setPath("tb.name");
-		assertThat(tag.doStartTag() == Tag.EVAL_BODY_INCLUDE).as("Correct doStartTag return value").isTrue();
-		assertThat(tag.getProperty()).isEqualTo("name");
+		assertTrue("Correct doStartTag return value", tag.doStartTag() == Tag.EVAL_BODY_INCLUDE);
+		assertEquals("name", tag.getProperty());
 	}
 
 	@Test
-	void bindTagWithIndexedProperties() throws JspException {
+	public void bindTagWithIndexedProperties() throws JspException {
 		PageContext pc = createPageContext();
 		IndexedTestBean tb = new IndexedTestBean();
 		Errors errors = new ServletRequestDataBinder(tb, "tb").getBindingResult();
@@ -474,24 +476,23 @@ class BindTagTests extends AbstractTagTests {
 		BindTag tag = new BindTag();
 		tag.setPageContext(pc);
 		tag.setPath("tb.array[0]");
-		assertThat(tag.doStartTag() == Tag.EVAL_BODY_INCLUDE).as("Correct doStartTag return value").isTrue();
+		assertTrue("Correct doStartTag return value", tag.doStartTag() == Tag.EVAL_BODY_INCLUDE);
 		BindStatus status = (BindStatus) pc.getAttribute(BindTag.STATUS_VARIABLE_NAME, PageContext.REQUEST_SCOPE);
-		assertThat(status != null).as("Has status variable").isTrue();
-		assertThat("array[0]".equals(status.getExpression())).as("Correct expression").isTrue();
-		boolean condition = status.getValue() instanceof TestBean;
-		assertThat(condition).as("Value is TestBean").isTrue();
-		assertThat("name0".equals(((TestBean) status.getValue()).getName())).as("Correct value").isTrue();
-		assertThat(status.isError()).as("Correct isError").isTrue();
-		assertThat(status.getErrorCodes().length == 2).as("Correct errorCodes").isTrue();
-		assertThat(status.getErrorMessages().length == 2).as("Correct errorMessages").isTrue();
-		assertThat("code1".equals(status.getErrorCodes()[0])).as("Correct errorCode").isTrue();
-		assertThat("code2".equals(status.getErrorCodes()[1])).as("Correct errorCode").isTrue();
-		assertThat("message1".equals(status.getErrorMessages()[0])).as("Correct errorMessage").isTrue();
-		assertThat("message2".equals(status.getErrorMessages()[1])).as("Correct errorMessage").isTrue();
+		assertTrue("Has status variable", status != null);
+		assertTrue("Correct expression", "array[0]".equals(status.getExpression()));
+		assertTrue("Value is TestBean", status.getValue() instanceof TestBean);
+		assertTrue("Correct value", "name0".equals(((TestBean) status.getValue()).getName()));
+		assertTrue("Correct isError", status.isError());
+		assertTrue("Correct errorCodes", status.getErrorCodes().length == 2);
+		assertTrue("Correct errorMessages", status.getErrorMessages().length == 2);
+		assertTrue("Correct errorCode", "code1".equals(status.getErrorCodes()[0]));
+		assertTrue("Correct errorCode", "code2".equals(status.getErrorCodes()[1]));
+		assertTrue("Correct errorMessage", "message1".equals(status.getErrorMessages()[0]));
+		assertTrue("Correct errorMessage", "message2".equals(status.getErrorMessages()[1]));
 	}
 
 	@Test
-	void bindTagWithMappedProperties() throws JspException {
+	public void bindTagWithMappedProperties() throws JspException {
 		PageContext pc = createPageContext();
 		IndexedTestBean tb = new IndexedTestBean();
 		Errors errors = new ServletRequestDataBinder(tb, "tb").getBindingResult();
@@ -502,24 +503,23 @@ class BindTagTests extends AbstractTagTests {
 		BindTag tag = new BindTag();
 		tag.setPageContext(pc);
 		tag.setPath("tb.map[key1]");
-		assertThat(tag.doStartTag() == Tag.EVAL_BODY_INCLUDE).as("Correct doStartTag return value").isTrue();
+		assertTrue("Correct doStartTag return value", tag.doStartTag() == Tag.EVAL_BODY_INCLUDE);
 		BindStatus status = (BindStatus) pc.getAttribute(BindTag.STATUS_VARIABLE_NAME, PageContext.REQUEST_SCOPE);
-		assertThat(status != null).as("Has status variable").isTrue();
-		assertThat("map[key1]".equals(status.getExpression())).as("Correct expression").isTrue();
-		boolean condition = status.getValue() instanceof TestBean;
-		assertThat(condition).as("Value is TestBean").isTrue();
-		assertThat("name4".equals(((TestBean) status.getValue()).getName())).as("Correct value").isTrue();
-		assertThat(status.isError()).as("Correct isError").isTrue();
-		assertThat(status.getErrorCodes().length == 2).as("Correct errorCodes").isTrue();
-		assertThat(status.getErrorMessages().length == 2).as("Correct errorMessages").isTrue();
-		assertThat("code1".equals(status.getErrorCodes()[0])).as("Correct errorCode").isTrue();
-		assertThat("code2".equals(status.getErrorCodes()[1])).as("Correct errorCode").isTrue();
-		assertThat("message1".equals(status.getErrorMessages()[0])).as("Correct errorMessage").isTrue();
-		assertThat("message2".equals(status.getErrorMessages()[1])).as("Correct errorMessage").isTrue();
+		assertTrue("Has status variable", status != null);
+		assertTrue("Correct expression", "map[key1]".equals(status.getExpression()));
+		assertTrue("Value is TestBean", status.getValue() instanceof TestBean);
+		assertTrue("Correct value", "name4".equals(((TestBean) status.getValue()).getName()));
+		assertTrue("Correct isError", status.isError());
+		assertTrue("Correct errorCodes", status.getErrorCodes().length == 2);
+		assertTrue("Correct errorMessages", status.getErrorMessages().length == 2);
+		assertTrue("Correct errorCode", "code1".equals(status.getErrorCodes()[0]));
+		assertTrue("Correct errorCode", "code2".equals(status.getErrorCodes()[1]));
+		assertTrue("Correct errorMessage", "message1".equals(status.getErrorMessages()[0]));
+		assertTrue("Correct errorMessage", "message2".equals(status.getErrorMessages()[1]));
 	}
 
 	@Test
-	void bindTagWithIndexedPropertiesAndCustomEditor() throws JspException {
+	public void bindTagWithIndexedPropertiesAndCustomEditor() throws JspException {
 		PageContext pc = createPageContext();
 		IndexedTestBean tb = new IndexedTestBean();
 		DataBinder binder = new ServletRequestDataBinder(tb, "tb");
@@ -537,18 +537,17 @@ class BindTagTests extends AbstractTagTests {
 		BindTag tag = new BindTag();
 		tag.setPageContext(pc);
 		tag.setPath("tb.array[0]");
-		assertThat(tag.doStartTag() == Tag.EVAL_BODY_INCLUDE).as("Correct doStartTag return value").isTrue();
+		assertTrue("Correct doStartTag return value", tag.doStartTag() == Tag.EVAL_BODY_INCLUDE);
 		BindStatus status = (BindStatus) pc.getAttribute(BindTag.STATUS_VARIABLE_NAME, PageContext.REQUEST_SCOPE);
-		assertThat(status != null).as("Has status variable").isTrue();
-		assertThat("array[0]".equals(status.getExpression())).as("Correct expression").isTrue();
+		assertTrue("Has status variable", status != null);
+		assertTrue("Correct expression", "array[0]".equals(status.getExpression()));
 		// because of the custom editor getValue() should return a String
-		boolean condition = status.getValue() instanceof String;
-		assertThat(condition).as("Value is TestBean").isTrue();
-		assertThat("something".equals(status.getValue())).as("Correct value").isTrue();
+		assertTrue("Value is TestBean", status.getValue() instanceof String);
+		assertTrue("Correct value", "something".equals(status.getValue()));
 	}
 
 	@Test
-	void bindTagWithToStringAndHtmlEscaping() throws JspException {
+	public void bindTagWithToStringAndHtmlEscaping() throws JspException {
 		PageContext pc = createPageContext();
 		BindTag tag = new BindTag();
 		tag.setPageContext(pc);
@@ -560,14 +559,13 @@ class BindTagTests extends AbstractTagTests {
 		pc.getRequest().setAttribute("tb", tb);
 		tag.doStartTag();
 		BindStatus status = (BindStatus) pc.getAttribute(BindTag.STATUS_VARIABLE_NAME, PageContext.REQUEST_SCOPE);
-		assertThat(status.getExpression()).isEqualTo("doctor");
-		boolean condition = status.getValue() instanceof NestedTestBean;
-		assertThat(condition).isTrue();
-		assertThat(status.getDisplayValue().contains("juergen&amp;eva")).isTrue();
+		assertEquals("doctor", status.getExpression());
+		assertTrue(status.getValue() instanceof NestedTestBean);
+		assertTrue(status.getDisplayValue().indexOf("juergen&amp;eva") != -1);
 	}
 
 	@Test
-	void bindTagWithSetValueAndHtmlEscaping() throws JspException {
+	public void bindTagWithSetValueAndHtmlEscaping() throws JspException {
 		PageContext pc = createPageContext();
 		BindTag tag = new BindTag();
 		tag.setPageContext(pc);
@@ -576,13 +574,12 @@ class BindTagTests extends AbstractTagTests {
 		pc.getRequest().setAttribute("tb", new TestBean("juergen&eva", 99));
 		tag.doStartTag();
 		BindStatus status = (BindStatus) pc.getAttribute(BindTag.STATUS_VARIABLE_NAME, PageContext.REQUEST_SCOPE);
-		assertThat(status.getExpression()).isEqualTo("someSet");
-		boolean condition = status.getValue() instanceof Set;
-		assertThat(condition).isTrue();
+		assertEquals("someSet", status.getExpression());
+		assertTrue(status.getValue() instanceof Set);
 	}
 
 	@Test
-	void bindTagWithFieldButWithoutErrorsInstance() throws JspException {
+	public void bindTagWithFieldButWithoutErrorsInstance() throws JspException {
 		PageContext pc = createPageContext();
 		BindTag tag = new BindTag();
 		tag.setPageContext(pc);
@@ -590,12 +587,12 @@ class BindTagTests extends AbstractTagTests {
 		pc.getRequest().setAttribute("tb", new TestBean("juergen&eva", 99));
 		tag.doStartTag();
 		BindStatus status = (BindStatus) pc.getAttribute(BindTag.STATUS_VARIABLE_NAME, PageContext.REQUEST_SCOPE);
-		assertThat(status.getExpression()).isEqualTo("name");
-		assertThat(status.getValue()).isEqualTo("juergen&eva");
+		assertEquals("name", status.getExpression());
+		assertEquals("juergen&eva", status.getValue());
 	}
 
 	@Test
-	void bindTagWithFieldButWithoutErrorsInstanceAndHtmlEscaping() throws JspException {
+	public void bindTagWithFieldButWithoutErrorsInstanceAndHtmlEscaping() throws JspException {
 		PageContext pc = createPageContext();
 		BindTag tag = new BindTag();
 		tag.setPageContext(pc);
@@ -604,12 +601,12 @@ class BindTagTests extends AbstractTagTests {
 		pc.getRequest().setAttribute("tb", new TestBean("juergen&eva", 99));
 		tag.doStartTag();
 		BindStatus status = (BindStatus) pc.getAttribute(BindTag.STATUS_VARIABLE_NAME, PageContext.REQUEST_SCOPE);
-		assertThat(status.getExpression()).isEqualTo("name");
-		assertThat(status.getValue()).isEqualTo("juergen&amp;eva");
+		assertEquals("name", status.getExpression());
+		assertEquals("juergen&amp;eva", status.getValue());
 	}
 
 	@Test
-	void bindTagWithBeanButWithoutErrorsInstance() throws JspException {
+	public void bindTagWithBeanButWithoutErrorsInstance() throws JspException {
 		PageContext pc = createPageContext();
 		BindTag tag = new BindTag();
 		tag.setPageContext(pc);
@@ -617,35 +614,40 @@ class BindTagTests extends AbstractTagTests {
 		pc.getRequest().setAttribute("tb", new TestBean("juergen", 99));
 		tag.doStartTag();
 		BindStatus status = (BindStatus) pc.getAttribute(BindTag.STATUS_VARIABLE_NAME, PageContext.REQUEST_SCOPE);
-		assertThat(status.getExpression()).isNull();
-		assertThat(status.getValue()).isNull();
+		assertNull(status.getExpression());
+		assertNull(status.getValue());
 	}
 
 	@Test
-	void bindTagWithoutBean() throws JspException {
+	public void bindTagWithoutBean() throws JspException {
 		PageContext pc = createPageContext();
 		BindTag tag = new BindTag();
 		tag.setPageContext(pc);
 		tag.setPath("tb");
-		assertThatExceptionOfType(JspException.class).isThrownBy(
-				tag::doStartTag);
+		try {
+			tag.doStartTag();
+			fail("Should have thrown JspException");
+		}
+		catch (JspException ex) {
+			// expected
+		}
 	}
 
 
 	@Test
-	void bindErrorsTagWithoutErrors() throws JspException {
+	public void bindErrorsTagWithoutErrors() throws JspException {
 		PageContext pc = createPageContext();
 		Errors errors = new ServletRequestDataBinder(new TestBean(), "tb").getBindingResult();
 		pc.getRequest().setAttribute(BindingResult.MODEL_KEY_PREFIX + "tb", errors);
 		BindErrorsTag tag = new BindErrorsTag();
 		tag.setPageContext(pc);
 		tag.setName("tb");
-		assertThat(tag.doStartTag() == Tag.SKIP_BODY).as("Correct doStartTag return value").isTrue();
-		assertThat(pc.getAttribute(BindErrorsTag.ERRORS_VARIABLE_NAME) == null).as("Doesn't have errors variable").isTrue();
+		assertTrue("Correct doStartTag return value", tag.doStartTag() == Tag.SKIP_BODY);
+		assertTrue("Doesn't have errors variable", pc.getAttribute(BindErrorsTag.ERRORS_VARIABLE_NAME) == null);
 	}
 
 	@Test
-	void bindErrorsTagWithErrors() throws JspException {
+	public void bindErrorsTagWithErrors() throws JspException {
 		PageContext pc = createPageContext();
 		Errors errors = new ServletRequestDataBinder(new TestBean(), "tb").getBindingResult();
 		errors.reject("test", null, "test");
@@ -653,34 +655,34 @@ class BindTagTests extends AbstractTagTests {
 		BindErrorsTag tag = new BindErrorsTag();
 		tag.setPageContext(pc);
 		tag.setName("tb");
-		assertThat(tag.doStartTag() == Tag.EVAL_BODY_INCLUDE).as("Correct doStartTag return value").isTrue();
-		assertThat(pc.getAttribute(BindErrorsTag.ERRORS_VARIABLE_NAME, PageContext.REQUEST_SCOPE) == errors).as("Has errors variable").isTrue();
+		assertTrue("Correct doStartTag return value", tag.doStartTag() == Tag.EVAL_BODY_INCLUDE);
+		assertTrue("Has errors variable", pc.getAttribute(BindErrorsTag.ERRORS_VARIABLE_NAME, PageContext.REQUEST_SCOPE) == errors);
 	}
 
 	@Test
-	void bindErrorsTagWithoutBean() throws JspException {
+	public void bindErrorsTagWithoutBean() throws JspException {
 		PageContext pc = createPageContext();
 		BindErrorsTag tag = new BindErrorsTag();
 		tag.setPageContext(pc);
 		tag.setName("tb");
-		assertThat(tag.doStartTag() == Tag.SKIP_BODY).as("Correct doStartTag return value").isTrue();
+		assertTrue("Correct doStartTag return value", tag.doStartTag() == Tag.SKIP_BODY);
 	}
 
 
 	@Test
-	void nestedPathDoEndTag() throws JspException {
+	public void nestedPathDoEndTag() throws JspException {
 		PageContext pc = createPageContext();
 		NestedPathTag tag = new NestedPathTag();
 		tag.setPath("foo");
 		tag.setPageContext(pc);
 		tag.doStartTag();
 		int returnValue = tag.doEndTag();
-		assertThat(returnValue).isEqualTo(Tag.EVAL_PAGE);
-		assertThat(pc.getAttribute(NestedPathTag.NESTED_PATH_VARIABLE_NAME, PageContext.REQUEST_SCOPE)).isNull();
+		assertEquals(Tag.EVAL_PAGE, returnValue);
+		assertNull(pc.getAttribute(NestedPathTag.NESTED_PATH_VARIABLE_NAME, PageContext.REQUEST_SCOPE));
 	}
 
 	@Test
-	void nestedPathDoEndTagWithNesting() throws JspException {
+	public void nestedPathDoEndTagWithNesting() throws JspException {
 		PageContext pc = createPageContext();
 		NestedPathTag tag = new NestedPathTag();
 		tag.setPath("foo");
@@ -693,46 +695,46 @@ class BindTagTests extends AbstractTagTests {
 		anotherTag.doStartTag();
 		anotherTag.doEndTag();
 
-		assertThat(pc.getAttribute(NestedPathTag.NESTED_PATH_VARIABLE_NAME, PageContext.REQUEST_SCOPE)).isEqualTo("foo.");
+		assertEquals("foo.", pc.getAttribute(NestedPathTag.NESTED_PATH_VARIABLE_NAME, PageContext.REQUEST_SCOPE));
 
 		tag.doEndTag();
-		assertThat(pc.getAttribute(NestedPathTag.NESTED_PATH_VARIABLE_NAME, PageContext.REQUEST_SCOPE)).isNull();
+		assertNull(pc.getAttribute(NestedPathTag.NESTED_PATH_VARIABLE_NAME, PageContext.REQUEST_SCOPE));
 	}
 
 	@Test
-	void nestedPathDoStartTagInternal() throws JspException {
+	public void nestedPathDoStartTagInternal() throws JspException {
 		PageContext pc = createPageContext();
 		NestedPathTag tag = new NestedPathTag();
 		tag.setPath("foo");
 		tag.setPageContext(pc);
 		int returnValue = tag.doStartTag();
 
-		assertThat(returnValue).isEqualTo(Tag.EVAL_BODY_INCLUDE);
-		assertThat(pc.getAttribute(NestedPathTag.NESTED_PATH_VARIABLE_NAME, PageContext.REQUEST_SCOPE)).isEqualTo("foo.");
+		assertEquals(Tag.EVAL_BODY_INCLUDE, returnValue);
+		assertEquals("foo.", pc.getAttribute(NestedPathTag.NESTED_PATH_VARIABLE_NAME, PageContext.REQUEST_SCOPE));
 	}
 
 	@Test
-	void nestedPathDoStartTagInternalWithNesting() throws JspException {
+	public void nestedPathDoStartTagInternalWithNesting() throws JspException {
 		PageContext pc = createPageContext();
 		NestedPathTag tag = new NestedPathTag();
 		tag.setPath("foo");
 		tag.setPageContext(pc);
 		tag.doStartTag();
-		assertThat(pc.getAttribute(NestedPathTag.NESTED_PATH_VARIABLE_NAME, PageContext.REQUEST_SCOPE)).isEqualTo("foo.");
+		assertEquals("foo.", pc.getAttribute(NestedPathTag.NESTED_PATH_VARIABLE_NAME, PageContext.REQUEST_SCOPE));
 
 		NestedPathTag anotherTag = new NestedPathTag();
 		anotherTag.setPageContext(pc);
 		anotherTag.setPath("bar");
 		anotherTag.doStartTag();
 
-		assertThat(pc.getAttribute(NestedPathTag.NESTED_PATH_VARIABLE_NAME, PageContext.REQUEST_SCOPE)).isEqualTo("foo.bar.");
+		assertEquals("foo.bar.", pc.getAttribute(NestedPathTag.NESTED_PATH_VARIABLE_NAME, PageContext.REQUEST_SCOPE));
 
 		NestedPathTag yetAnotherTag = new NestedPathTag();
 		yetAnotherTag.setPageContext(pc);
 		yetAnotherTag.setPath("boo");
 		yetAnotherTag.doStartTag();
 
-		assertThat(pc.getAttribute(NestedPathTag.NESTED_PATH_VARIABLE_NAME, PageContext.REQUEST_SCOPE)).isEqualTo("foo.bar.boo.");
+		assertEquals("foo.bar.boo.", pc.getAttribute(NestedPathTag.NESTED_PATH_VARIABLE_NAME, PageContext.REQUEST_SCOPE));
 
 		yetAnotherTag.doEndTag();
 
@@ -741,11 +743,11 @@ class BindTagTests extends AbstractTagTests {
 		andAnotherTag.setPath("boo2");
 		andAnotherTag.doStartTag();
 
-		assertThat(pc.getAttribute(NestedPathTag.NESTED_PATH_VARIABLE_NAME, PageContext.REQUEST_SCOPE)).isEqualTo("foo.bar.boo2.");
+		assertEquals("foo.bar.boo2.", pc.getAttribute(NestedPathTag.NESTED_PATH_VARIABLE_NAME, PageContext.REQUEST_SCOPE));
 	}
 
 	@Test
-	void nestedPathWithBindTag() throws JspException {
+	public void nestedPathWithBindTag() throws JspException {
 		PageContext pc = createPageContext();
 		Errors errors = new ServletRequestDataBinder(new TestBean(), "tb").getBindingResult();
 		pc.getRequest().setAttribute(BindingResult.MODEL_KEY_PREFIX + "tb", errors);
@@ -759,35 +761,35 @@ class BindTagTests extends AbstractTagTests {
 		bindTag.setPageContext(pc);
 		bindTag.setPath("name");
 
-		assertThat(bindTag.doStartTag() == Tag.EVAL_BODY_INCLUDE).as("Correct doStartTag return value").isTrue();
+		assertTrue("Correct doStartTag return value", bindTag.doStartTag() == Tag.EVAL_BODY_INCLUDE);
 		BindStatus status = (BindStatus) pc.getAttribute(BindTag.STATUS_VARIABLE_NAME, PageContext.REQUEST_SCOPE);
-		assertThat(status != null).as("Has status variable").isTrue();
-		assertThat(status.getPath()).isEqualTo("tb.name");
-		assertThat(status.getDisplayValue()).as("Correct field value").isEqualTo("");
+		assertTrue("Has status variable", status != null);
+		assertEquals("tb.name", status.getPath());
+		assertEquals("Correct field value", "", status.getDisplayValue());
 
 		BindTag bindTag2 = new BindTag();
 		bindTag2.setPageContext(pc);
 		bindTag2.setPath("age");
 
-		assertThat(bindTag2.doStartTag() == Tag.EVAL_BODY_INCLUDE).as("Correct doStartTag return value").isTrue();
+		assertTrue("Correct doStartTag return value", bindTag2.doStartTag() == Tag.EVAL_BODY_INCLUDE);
 		BindStatus status2 = (BindStatus) pc.getAttribute(BindTag.STATUS_VARIABLE_NAME, PageContext.REQUEST_SCOPE);
-		assertThat(status2 != null).as("Has status variable").isTrue();
-		assertThat(status2.getPath()).isEqualTo("tb.age");
-		assertThat(status2.getDisplayValue()).as("Correct field value").isEqualTo("0");
+		assertTrue("Has status variable", status2 != null);
+		assertEquals("tb.age", status2.getPath());
+		assertEquals("Correct field value", "0", status2.getDisplayValue());
 
 		bindTag2.doEndTag();
 
 		BindStatus status3 = (BindStatus) pc.getAttribute(BindTag.STATUS_VARIABLE_NAME, PageContext.REQUEST_SCOPE);
-		assertThat(status3).as("Status matches previous status").isSameAs(status);
-		assertThat(status.getPath()).isEqualTo("tb.name");
-		assertThat(status.getDisplayValue()).as("Correct field value").isEqualTo("");
+		assertSame("Status matches previous status", status, status3);
+		assertEquals("tb.name", status.getPath());
+		assertEquals("Correct field value", "", status.getDisplayValue());
 
 		bindTag.doEndTag();
 		nestedPathTag.doEndTag();
 	}
 
 	@Test
-	void nestedPathWithBindTagWithIgnoreNestedPath() throws JspException {
+	public void nestedPathWithBindTagWithIgnoreNestedPath() throws JspException {
 		PageContext pc = createPageContext();
 		Errors errors = new ServletRequestDataBinder(new TestBean(), "tb2").getBindingResult();
 		pc.getRequest().setAttribute(BindingResult.MODEL_KEY_PREFIX + "tb2", errors);
@@ -802,14 +804,14 @@ class BindTagTests extends AbstractTagTests {
 		bindTag.setIgnoreNestedPath(true);
 		bindTag.setPath("tb2.name");
 
-		assertThat(bindTag.doStartTag() == Tag.EVAL_BODY_INCLUDE).as("Correct doStartTag return value").isTrue();
+		assertTrue("Correct doStartTag return value", bindTag.doStartTag() == Tag.EVAL_BODY_INCLUDE);
 		BindStatus status = (BindStatus) pc.getAttribute(BindTag.STATUS_VARIABLE_NAME, PageContext.REQUEST_SCOPE);
-		assertThat(status != null).as("Has status variable").isTrue();
-		assertThat(status.getPath()).isEqualTo("tb2.name");
+		assertTrue("Has status variable", status != null);
+		assertEquals("tb2.name", status.getPath());
 	}
 
 	@Test
-	void transformTagCorrectBehavior() throws JspException {
+	public void transformTagCorrectBehavior() throws JspException {
 		// first set up the pagecontext and the bean
 		PageContext pc = createPageContext();
 		TestBean tb = new TestBean();
@@ -833,8 +835,8 @@ class BindTagTests extends AbstractTagTests {
 		transform.setVar("theDate");
 		transform.doStartTag();
 
-		assertThat(pc.getAttribute("theDate")).isNotNull();
-		assertThat(df.format(tb.getDate())).isEqualTo(pc.getAttribute("theDate"));
+		assertNotNull(pc.getAttribute("theDate"));
+		assertEquals(pc.getAttribute("theDate"), df.format(tb.getDate()));
 
 		// try another time, this time using Strings
 		bind = new BindTag();
@@ -849,12 +851,12 @@ class BindTagTests extends AbstractTagTests {
 		transform.setVar("theString");
 		transform.doStartTag();
 
-		assertThat(pc.getAttribute("theString")).isNotNull();
-		assertThat(pc.getAttribute("theString")).isEqualTo("name");
+		assertNotNull(pc.getAttribute("theString"));
+		assertEquals("name", pc.getAttribute("theString"));
 	}
 
 	@Test
-	void transformTagWithHtmlEscape() throws JspException {
+	public void transformTagWithHtmlEscape() throws JspException {
 		// first set up the PageContext and the bean
 		PageContext pc = createPageContext();
 		TestBean tb = new TestBean();
@@ -878,12 +880,12 @@ class BindTagTests extends AbstractTagTests {
 		transform.setHtmlEscape(true);
 		transform.doStartTag();
 
-		assertThat(pc.getAttribute("theString")).isNotNull();
-		assertThat(pc.getAttribute("theString")).isEqualTo("na&lt;me");
+		assertNotNull(pc.getAttribute("theString"));
+		assertEquals("na&lt;me", pc.getAttribute("theString"));
 	}
 
 	@Test
-	void transformTagOutsideBindTag() throws JspException {
+	public void transformTagOutsideBindTag() throws JspException {
 		// first set up the pagecontext and the bean
 		PageContext pc = createPageContext();
 		TestBean tb = new TestBean();
@@ -898,8 +900,13 @@ class BindTagTests extends AbstractTagTests {
 		transform.setPageContext(pc);
 		transform.setVar("var");
 		transform.setValue("bla");
-		assertThatExceptionOfType(JspException.class).as("executed outside BindTag").isThrownBy(
-				transform::doStartTag);
+		try {
+			transform.doStartTag();
+			fail("Tag can be executed outside BindTag");
+		}
+		catch (JspException e) {
+			// this is ok!
+		}
 
 		// now try to execute the tag outside a bindtag, but inside a messageTag
 		MessageTag message = new MessageTag();
@@ -909,12 +916,17 @@ class BindTagTests extends AbstractTagTests {
 		transform.setVar("var");
 		transform.setValue("bla");
 		transform.setParent(message);
-		assertThatExceptionOfType(JspException.class).as("executed outside BindTag and inside messagetag").isThrownBy(
-				transform::doStartTag);
+		try {
+			transform.doStartTag();
+			fail("Tag can be executed outside BindTag and inside messagtag");
+		}
+		catch (JspException e) {
+			// this is ok!
+		}
 	}
 
 	@Test
-	void transformTagNonExistingValue() throws JspException {
+	public void transformTagNonExistingValue() throws JspException {
 		// first set up the pagecontext and the bean
 		PageContext pc = createPageContext();
 		TestBean tb = new TestBean();
@@ -937,11 +949,11 @@ class BindTagTests extends AbstractTagTests {
 		transform.setVar("theString2");
 		transform.doStartTag();
 
-		assertThat(pc.getAttribute("theString2")).isNull();
+		assertNull(pc.getAttribute("theString2"));
 	}
 
 	@Test
-	void transformTagWithSettingOfScope() throws JspException {
+	public void transformTagWithSettingOfScope() throws JspException {
 		// first set up the pagecontext and the bean
 		PageContext pc = createPageContext();
 		TestBean tb = new TestBean();
@@ -968,8 +980,8 @@ class BindTagTests extends AbstractTagTests {
 
 		transform.release();
 
-		assertThat(pc.getAttribute("theDate")).isNotNull();
-		assertThat(pc.getAttribute("theDate")).isEqualTo(df.format(tb.getDate()));
+		assertNotNull(pc.getAttribute("theDate"));
+		assertEquals(df.format(tb.getDate()), pc.getAttribute("theDate"));
 
 		// try another time, this time using Strings
 		bind = new BindTag();
@@ -987,8 +999,8 @@ class BindTagTests extends AbstractTagTests {
 
 		transform.release();
 
-		assertThat(pc.getAttribute("theString")).isNotNull();
-		assertThat(pc.getAttribute("theString")).isEqualTo("name");
+		assertNotNull(pc.getAttribute("theString"));
+		assertEquals("name", pc.getAttribute("theString"));
 	}
 
 	/**
@@ -996,7 +1008,7 @@ class BindTagTests extends AbstractTagTests {
 	 */
 	@SuppressWarnings("serial")
 	@Test
-	void nestingInFormTag() throws JspException {
+	public void nestingInFormTag() throws JspException {
 		PageContext pc = createPageContext();
 		TestBean tb = new TestBean();
 		DateFormat df = new SimpleDateFormat("yyyy-MM-dd");
@@ -1027,7 +1039,7 @@ class BindTagTests extends AbstractTagTests {
 		formTag.setCssClass(cssClass);
 		formTag.setCssStyle(cssStyle);
 		formTag.setAction(action);
-		formTag.setModelAttribute(commandName);
+		formTag.setCommandName(commandName);
 		formTag.setEnctype(enctype);
 		formTag.setMethod(method);
 		formTag.setOnsubmit(onsubmit);
