@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2021 the original author or authors.
+ * Copyright 2002-2015 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      https://www.apache.org/licenses/LICENSE-2.0
+ *      http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -24,23 +24,23 @@ import java.util.Date;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import javax.servlet.jsp.JspException;
+import javax.servlet.jsp.tagext.Tag;
 
-import jakarta.servlet.jsp.JspException;
-import jakarta.servlet.jsp.tagext.Tag;
 import org.dom4j.Document;
 import org.dom4j.Element;
 import org.dom4j.io.SAXReader;
-import org.junit.jupiter.api.Test;
+
+import org.junit.Test;
 
 import org.springframework.beans.propertyeditors.StringTrimmerEditor;
-import org.springframework.beans.testfixture.beans.Colour;
-import org.springframework.beans.testfixture.beans.Pet;
-import org.springframework.beans.testfixture.beans.TestBean;
+import org.springframework.tests.sample.beans.Colour;
+import org.springframework.tests.sample.beans.Pet;
+import org.springframework.tests.sample.beans.TestBean;
 import org.springframework.validation.BeanPropertyBindingResult;
 import org.springframework.validation.BindingResult;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException;
+import static org.junit.Assert.*;
 
 /**
  * @author Rob Harrop
@@ -48,7 +48,7 @@ import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException
  * @author Jeremy Grelle
  */
 @SuppressWarnings({ "rawtypes", "unchecked" })
-class CheckboxTagTests extends AbstractFormTagTests {
+public class CheckboxTagTests extends AbstractFormTagTests {
 
 	private CheckboxTag tag;
 
@@ -67,10 +67,10 @@ class CheckboxTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	void withSingleValueBooleanObjectChecked() throws Exception {
+	public void withSingleValueBooleanObjectChecked() throws Exception {
 		this.tag.setPath("someBoolean");
 		int result = this.tag.doStartTag();
-		assertThat(result).isEqualTo(Tag.SKIP_BODY);
+		assertEquals(Tag.SKIP_BODY, result);
 		String output = getOutput();
 
 		// wrap the output so it is valid XML
@@ -79,21 +79,21 @@ class CheckboxTagTests extends AbstractFormTagTests {
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
 		Element rootElement = document.getRootElement();
-		assertThat(rootElement.elements().size()).as("Both tag and hidden element not rendered").isEqualTo(2);
-		Element checkboxElement = rootElement.elements().get(0);
-		assertThat(checkboxElement.getName()).isEqualTo("input");
-		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
-		assertThat(checkboxElement.attribute("id").getValue()).isEqualTo("someBoolean1");
-		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("someBoolean");
-		assertThat(checkboxElement.attribute("checked").getValue()).isEqualTo("checked");
-		assertThat(checkboxElement.attribute("value").getValue()).isEqualTo("true");
+		assertEquals("Both tag and hidden element not rendered", 2, rootElement.elements().size());
+		Element checkboxElement = (Element) rootElement.elements().get(0);
+		assertEquals("input", checkboxElement.getName());
+		assertEquals("checkbox", checkboxElement.attribute("type").getValue());
+		assertEquals("someBoolean1", checkboxElement.attribute("id").getValue());
+		assertEquals("someBoolean", checkboxElement.attribute("name").getValue());
+		assertEquals("checked", checkboxElement.attribute("checked").getValue());
+		assertEquals("true", checkboxElement.attribute("value").getValue());
 	}
 
 	@Test
-	void withIndexedBooleanObjectNotChecked() throws Exception {
+	public void withIndexedBooleanObjectNotChecked() throws Exception {
 		this.tag.setPath("someMap[key]");
 		int result = this.tag.doStartTag();
-		assertThat(result).isEqualTo(Tag.SKIP_BODY);
+		assertEquals(Tag.SKIP_BODY, result);
 		String output = getOutput();
 
 		// wrap the output so it is valid XML
@@ -102,18 +102,18 @@ class CheckboxTagTests extends AbstractFormTagTests {
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
 		Element rootElement = document.getRootElement();
-		assertThat(rootElement.elements().size()).as("Both tag and hidden element not rendered").isEqualTo(2);
-		Element checkboxElement = rootElement.elements().get(0);
-		assertThat(checkboxElement.getName()).isEqualTo("input");
-		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
-		assertThat(checkboxElement.attribute("id").getValue()).isEqualTo("someMapkey1");
-		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("someMap[key]");
-		assertThat(checkboxElement.attribute("checked").getValue()).isEqualTo("checked");
-		assertThat(checkboxElement.attribute("value").getValue()).isEqualTo("true");
+		assertEquals("Both tag and hidden element not rendered", 2, rootElement.elements().size());
+		Element checkboxElement = (Element) rootElement.elements().get(0);
+		assertEquals("input", checkboxElement.getName());
+		assertEquals("checkbox", checkboxElement.attribute("type").getValue());
+		assertEquals("someMapkey1", checkboxElement.attribute("id").getValue());
+		assertEquals("someMap[key]", checkboxElement.attribute("name").getValue());
+		assertEquals("checked", checkboxElement.attribute("checked").getValue());
+		assertEquals("true", checkboxElement.attribute("value").getValue());
 	}
 
 	@Test
-	void withSingleValueBooleanObjectCheckedAndDynamicAttributes() throws Exception {
+	public void withSingleValueBooleanObjectCheckedAndDynamicAttributes() throws Exception {
 		String dynamicAttribute1 = "attr1";
 		String dynamicAttribute2 = "attr2";
 
@@ -122,7 +122,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 		this.tag.setDynamicAttribute(null, dynamicAttribute2, dynamicAttribute2);
 
 		int result = this.tag.doStartTag();
-		assertThat(result).isEqualTo(Tag.SKIP_BODY);
+		assertEquals(Tag.SKIP_BODY, result);
 		String output = getOutput();
 
 		// wrap the output so it is valid XML
@@ -131,22 +131,22 @@ class CheckboxTagTests extends AbstractFormTagTests {
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
 		Element rootElement = document.getRootElement();
-		assertThat(rootElement.elements().size()).as("Both tag and hidden element not rendered").isEqualTo(2);
-		Element checkboxElement = rootElement.elements().get(0);
-		assertThat(checkboxElement.getName()).isEqualTo("input");
-		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
-		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("someBoolean");
-		assertThat(checkboxElement.attribute("checked").getValue()).isEqualTo("checked");
-		assertThat(checkboxElement.attribute("value").getValue()).isEqualTo("true");
-		assertThat(checkboxElement.attribute(dynamicAttribute1).getValue()).isEqualTo(dynamicAttribute1);
-		assertThat(checkboxElement.attribute(dynamicAttribute2).getValue()).isEqualTo(dynamicAttribute2);
+		assertEquals("Both tag and hidden element not rendered", 2, rootElement.elements().size());
+		Element checkboxElement = (Element) rootElement.elements().get(0);
+		assertEquals("input", checkboxElement.getName());
+		assertEquals("checkbox", checkboxElement.attribute("type").getValue());
+		assertEquals("someBoolean", checkboxElement.attribute("name").getValue());
+		assertEquals("checked", checkboxElement.attribute("checked").getValue());
+		assertEquals("true", checkboxElement.attribute("value").getValue());
+		assertEquals(dynamicAttribute1, checkboxElement.attribute(dynamicAttribute1).getValue());
+		assertEquals(dynamicAttribute2, checkboxElement.attribute(dynamicAttribute2).getValue());
 	}
 
 	@Test
-	void withSingleValueBooleanChecked() throws Exception {
+	public void withSingleValueBooleanChecked() throws Exception {
 		this.tag.setPath("jedi");
 		int result = this.tag.doStartTag();
-		assertThat(result).isEqualTo(Tag.SKIP_BODY);
+		assertEquals(Tag.SKIP_BODY, result);
 		String output = getOutput();
 
 		// wrap the output so it is valid XML
@@ -154,20 +154,20 @@ class CheckboxTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
-		assertThat(checkboxElement.getName()).isEqualTo("input");
-		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
-		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("jedi");
-		assertThat(checkboxElement.attribute("checked").getValue()).isEqualTo("checked");
-		assertThat(checkboxElement.attribute("value").getValue()).isEqualTo("true");
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
+		assertEquals("input", checkboxElement.getName());
+		assertEquals("checkbox", checkboxElement.attribute("type").getValue());
+		assertEquals("jedi", checkboxElement.attribute("name").getValue());
+		assertEquals("checked", checkboxElement.attribute("checked").getValue());
+		assertEquals("true", checkboxElement.attribute("value").getValue());
 	}
 
 	@Test
-	void withSingleValueBooleanObjectUnchecked() throws Exception {
+	public void withSingleValueBooleanObjectUnchecked() throws Exception {
 		this.bean.setSomeBoolean(Boolean.FALSE);
 		this.tag.setPath("someBoolean");
 		int result = this.tag.doStartTag();
-		assertThat(result).isEqualTo(Tag.SKIP_BODY);
+		assertEquals(Tag.SKIP_BODY, result);
 
 		String output = getOutput();
 
@@ -176,20 +176,20 @@ class CheckboxTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
-		assertThat(checkboxElement.getName()).isEqualTo("input");
-		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
-		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("someBoolean");
-		assertThat(checkboxElement.attribute("checked")).isNull();
-		assertThat(checkboxElement.attribute("value").getValue()).isEqualTo("true");
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
+		assertEquals("input", checkboxElement.getName());
+		assertEquals("checkbox", checkboxElement.attribute("type").getValue());
+		assertEquals("someBoolean", checkboxElement.attribute("name").getValue());
+		assertNull(checkboxElement.attribute("checked"));
+		assertEquals("true", checkboxElement.attribute("value").getValue());
 	}
 
 	@Test
-	void withSingleValueBooleanUnchecked() throws Exception {
+	public void withSingleValueBooleanUnchecked() throws Exception {
 		this.bean.setJedi(false);
 		this.tag.setPath("jedi");
 		int result = this.tag.doStartTag();
-		assertThat(result).isEqualTo(Tag.SKIP_BODY);
+		assertEquals(Tag.SKIP_BODY, result);
 
 		String output = getOutput();
 
@@ -198,21 +198,21 @@ class CheckboxTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
-		assertThat(checkboxElement.getName()).isEqualTo("input");
-		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
-		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("jedi");
-		assertThat(checkboxElement.attribute("checked")).isNull();
-		assertThat(checkboxElement.attribute("value").getValue()).isEqualTo("true");
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
+		assertEquals("input", checkboxElement.getName());
+		assertEquals("checkbox", checkboxElement.attribute("type").getValue());
+		assertEquals("jedi", checkboxElement.attribute("name").getValue());
+		assertNull(checkboxElement.attribute("checked"));
+		assertEquals("true", checkboxElement.attribute("value").getValue());
 	}
 
 	@Test
-	void withSingleValueNull() throws Exception {
+	public void withSingleValueNull() throws Exception {
 		this.bean.setName(null);
 		this.tag.setPath("name");
 		this.tag.setValue("Rob Harrop");
 		int result = this.tag.doStartTag();
-		assertThat(result).isEqualTo(Tag.SKIP_BODY);
+		assertEquals(Tag.SKIP_BODY, result);
 
 		String output = getOutput();
 
@@ -221,21 +221,21 @@ class CheckboxTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
-		assertThat(checkboxElement.getName()).isEqualTo("input");
-		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
-		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("name");
-		assertThat(checkboxElement.attribute("checked")).isNull();
-		assertThat(checkboxElement.attribute("value").getValue()).isEqualTo("Rob Harrop");
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
+		assertEquals("input", checkboxElement.getName());
+		assertEquals("checkbox", checkboxElement.attribute("type").getValue());
+		assertEquals("name", checkboxElement.attribute("name").getValue());
+		assertNull(checkboxElement.attribute("checked"));
+		assertEquals("Rob Harrop", checkboxElement.attribute("value").getValue());
 	}
 
 	@Test
-	void withSingleValueNotNull() throws Exception {
+	public void withSingleValueNotNull() throws Exception {
 		this.bean.setName("Rob Harrop");
 		this.tag.setPath("name");
 		this.tag.setValue("Rob Harrop");
 		int result = this.tag.doStartTag();
-		assertThat(result).isEqualTo(Tag.SKIP_BODY);
+		assertEquals(Tag.SKIP_BODY, result);
 
 		String output = getOutput();
 
@@ -244,16 +244,16 @@ class CheckboxTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
-		assertThat(checkboxElement.getName()).isEqualTo("input");
-		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
-		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("name");
-		assertThat(checkboxElement.attribute("checked").getValue()).isEqualTo("checked");
-		assertThat(checkboxElement.attribute("value").getValue()).isEqualTo("Rob Harrop");
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
+		assertEquals("input", checkboxElement.getName());
+		assertEquals("checkbox", checkboxElement.attribute("type").getValue());
+		assertEquals("name", checkboxElement.attribute("name").getValue());
+		assertEquals("checked", checkboxElement.attribute("checked").getValue());
+		assertEquals("Rob Harrop", checkboxElement.attribute("value").getValue());
 	}
 
 	@Test
-	void withSingleValueAndEditor() throws Exception {
+	public void withSingleValueAndEditor() throws Exception {
 		this.bean.setName("Rob Harrop");
 		this.tag.setPath("name");
 		this.tag.setValue("   Rob Harrop");
@@ -262,7 +262,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 		getPageContext().getRequest().setAttribute(BindingResult.MODEL_KEY_PREFIX + COMMAND_NAME, bindingResult);
 
 		int result = this.tag.doStartTag();
-		assertThat(result).isEqualTo(Tag.SKIP_BODY);
+		assertEquals(Tag.SKIP_BODY, result);
 
 		String output = getOutput();
 
@@ -271,20 +271,20 @@ class CheckboxTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
-		assertThat(checkboxElement.getName()).isEqualTo("input");
-		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
-		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("name");
-		assertThat(checkboxElement.attribute("checked").getValue()).isEqualTo("checked");
-		assertThat(checkboxElement.attribute("value").getValue()).isEqualTo("   Rob Harrop");
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
+		assertEquals("input", checkboxElement.getName());
+		assertEquals("checkbox", checkboxElement.attribute("type").getValue());
+		assertEquals("name", checkboxElement.attribute("name").getValue());
+		assertEquals("checked", checkboxElement.attribute("checked").getValue());
+		assertEquals("   Rob Harrop", checkboxElement.attribute("value").getValue());
 	}
 
 	@Test
-	void withMultiValueChecked() throws Exception {
+	public void withMultiValueChecked() throws Exception {
 		this.tag.setPath("stringArray");
 		this.tag.setValue("foo");
 		int result = this.tag.doStartTag();
-		assertThat(result).isEqualTo(Tag.SKIP_BODY);
+		assertEquals(Tag.SKIP_BODY, result);
 
 		String output = getOutput();
 
@@ -293,20 +293,20 @@ class CheckboxTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
-		assertThat(checkboxElement.getName()).isEqualTo("input");
-		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
-		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("stringArray");
-		assertThat(checkboxElement.attribute("checked").getValue()).isEqualTo("checked");
-		assertThat(checkboxElement.attribute("value").getValue()).isEqualTo("foo");
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
+		assertEquals("input", checkboxElement.getName());
+		assertEquals("checkbox", checkboxElement.attribute("type").getValue());
+		assertEquals("stringArray", checkboxElement.attribute("name").getValue());
+		assertEquals("checked", checkboxElement.attribute("checked").getValue());
+		assertEquals("foo", checkboxElement.attribute("value").getValue());
 	}
 
 	@Test
-	void withMultiValueUnchecked() throws Exception {
+	public void withMultiValueUnchecked() throws Exception {
 		this.tag.setPath("stringArray");
 		this.tag.setValue("abc");
 		int result = this.tag.doStartTag();
-		assertThat(result).isEqualTo(Tag.SKIP_BODY);
+		assertEquals(Tag.SKIP_BODY, result);
 
 		String output = getOutput();
 
@@ -315,16 +315,16 @@ class CheckboxTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
-		assertThat(checkboxElement.getName()).isEqualTo("input");
-		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
-		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("stringArray");
-		assertThat(checkboxElement.attribute("checked")).isNull();
-		assertThat(checkboxElement.attribute("value").getValue()).isEqualTo("abc");
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
+		assertEquals("input", checkboxElement.getName());
+		assertEquals("checkbox", checkboxElement.attribute("type").getValue());
+		assertEquals("stringArray", checkboxElement.attribute("name").getValue());
+		assertNull(checkboxElement.attribute("checked"));
+		assertEquals("abc", checkboxElement.attribute("value").getValue());
 	}
 
 	@Test
-	void withMultiValueWithEditor() throws Exception {
+	public void withMultiValueWithEditor() throws Exception {
 		this.tag.setPath("stringArray");
 		this.tag.setValue("   foo");
 		BeanPropertyBindingResult bindingResult = new BeanPropertyBindingResult(this.bean, COMMAND_NAME);
@@ -333,8 +333,8 @@ class CheckboxTagTests extends AbstractFormTagTests {
 		getPageContext().getRequest().setAttribute(BindingResult.MODEL_KEY_PREFIX + COMMAND_NAME, bindingResult);
 
 		int result = this.tag.doStartTag();
-		assertThat(result).isEqualTo(Tag.SKIP_BODY);
-		assertThat(editor.count).isEqualTo(1);
+		assertEquals(Tag.SKIP_BODY, result);
+		assertEquals(1, editor.count);
 
 		String output = getOutput();
 
@@ -343,16 +343,16 @@ class CheckboxTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
-		assertThat(checkboxElement.getName()).isEqualTo("input");
-		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
-		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("stringArray");
-		assertThat(checkboxElement.attribute("checked").getValue()).isEqualTo("checked");
-		assertThat(checkboxElement.attribute("value").getValue()).isEqualTo("   foo");
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
+		assertEquals("input", checkboxElement.getName());
+		assertEquals("checkbox", checkboxElement.attribute("type").getValue());
+		assertEquals("stringArray", checkboxElement.attribute("name").getValue());
+		assertEquals("checked", checkboxElement.attribute("checked").getValue());
+		assertEquals("   foo", checkboxElement.attribute("value").getValue());
 	}
 
 	@Test
-	void withMultiValueIntegerWithEditor() throws Exception {
+	public void withMultiValueIntegerWithEditor() throws Exception {
 		this.tag.setPath("someIntegerArray");
 		this.tag.setValue("   1");
 		BeanPropertyBindingResult bindingResult = new BeanPropertyBindingResult(this.bean, COMMAND_NAME);
@@ -361,8 +361,8 @@ class CheckboxTagTests extends AbstractFormTagTests {
 		getPageContext().getRequest().setAttribute(BindingResult.MODEL_KEY_PREFIX + COMMAND_NAME, bindingResult);
 
 		int result = this.tag.doStartTag();
-		assertThat(result).isEqualTo(Tag.SKIP_BODY);
-		assertThat(editor.count).isEqualTo(1);
+		assertEquals(Tag.SKIP_BODY, result);
+		assertEquals(1, editor.count);
 
 		String output = getOutput();
 
@@ -371,20 +371,20 @@ class CheckboxTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
-		assertThat(checkboxElement.getName()).isEqualTo("input");
-		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
-		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("someIntegerArray");
-		assertThat(checkboxElement.attribute("checked").getValue()).isEqualTo("checked");
-		assertThat(checkboxElement.attribute("value").getValue()).isEqualTo("   1");
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
+		assertEquals("input", checkboxElement.getName());
+		assertEquals("checkbox", checkboxElement.attribute("type").getValue());
+		assertEquals("someIntegerArray", checkboxElement.attribute("name").getValue());
+		assertEquals("checked", checkboxElement.attribute("checked").getValue());
+		assertEquals("   1", checkboxElement.attribute("value").getValue());
 	}
 
 	@Test
-	void withCollection() throws Exception {
+	public void withCollection() throws Exception {
 		this.tag.setPath("someList");
 		this.tag.setValue("foo");
 		int result = this.tag.doStartTag();
-		assertThat(result).isEqualTo(Tag.SKIP_BODY);
+		assertEquals(Tag.SKIP_BODY, result);
 
 		String output = getOutput();
 
@@ -393,21 +393,21 @@ class CheckboxTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
-		assertThat(checkboxElement.getName()).isEqualTo("input");
-		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
-		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("someList");
-		assertThat(checkboxElement.attribute("checked").getValue()).isEqualTo("checked");
-		assertThat(checkboxElement.attribute("value").getValue()).isEqualTo("foo");
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
+		assertEquals("input", checkboxElement.getName());
+		assertEquals("checkbox", checkboxElement.attribute("type").getValue());
+		assertEquals("someList", checkboxElement.attribute("name").getValue());
+		assertEquals("checked", checkboxElement.attribute("checked").getValue());
+		assertEquals("foo", checkboxElement.attribute("value").getValue());
 	}
 
 	@Test
-	void withObjectChecked() throws Exception {
+	public void withObjectChecked() throws Exception {
 		this.tag.setPath("date");
 		this.tag.setValue(getDate());
 
 		int result = this.tag.doStartTag();
-		assertThat(result).isEqualTo(Tag.SKIP_BODY);
+		assertEquals(Tag.SKIP_BODY, result);
 
 		String output = getOutput();
 
@@ -416,22 +416,22 @@ class CheckboxTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
-		assertThat(checkboxElement.getName()).isEqualTo("input");
-		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
-		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("date");
-		assertThat(checkboxElement.attribute("checked").getValue()).isEqualTo("checked");
-		assertThat(checkboxElement.attribute("value").getValue()).isEqualTo(getDate().toString());
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
+		assertEquals("input", checkboxElement.getName());
+		assertEquals("checkbox", checkboxElement.attribute("type").getValue());
+		assertEquals("date", checkboxElement.attribute("name").getValue());
+		assertEquals("checked", checkboxElement.attribute("checked").getValue());
+		assertEquals(getDate().toString(), checkboxElement.attribute("value").getValue());
 	}
 
 	@Test
-	void withObjectUnchecked() throws Exception {
+	public void withObjectUnchecked() throws Exception {
 		this.tag.setPath("date");
 		Date date = new Date();
 		this.tag.setValue(date);
 
 		int result = this.tag.doStartTag();
-		assertThat(result).isEqualTo(Tag.SKIP_BODY);
+		assertEquals(Tag.SKIP_BODY, result);
 
 		String output = getOutput();
 
@@ -440,21 +440,21 @@ class CheckboxTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
-		assertThat(checkboxElement.getName()).isEqualTo("input");
-		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
-		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("date");
-		assertThat(checkboxElement.attribute("checked")).isNull();
-		assertThat(checkboxElement.attribute("value").getValue()).isEqualTo(date.toString());
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
+		assertEquals("input", checkboxElement.getName());
+		assertEquals("checkbox", checkboxElement.attribute("type").getValue());
+		assertEquals("date", checkboxElement.attribute("name").getValue());
+		assertNull(checkboxElement.attribute("checked"));
+		assertEquals(date.toString(), checkboxElement.attribute("value").getValue());
 	}
 
 	@Test
-	void collectionOfColoursSelected() throws Exception {
+	public void collectionOfColoursSelected() throws Exception {
 		this.tag.setPath("otherColours");
 		this.tag.setValue("RED");
 
 		int result = this.tag.doStartTag();
-		assertThat(result).isEqualTo(Tag.SKIP_BODY);
+		assertEquals(Tag.SKIP_BODY, result);
 
 		String output = getOutput();
 
@@ -463,20 +463,20 @@ class CheckboxTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
-		assertThat(checkboxElement.getName()).isEqualTo("input");
-		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
-		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("otherColours");
-		assertThat(checkboxElement.attribute("checked").getValue()).isEqualTo("checked");
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
+		assertEquals("input", checkboxElement.getName());
+		assertEquals("checkbox", checkboxElement.attribute("type").getValue());
+		assertEquals("otherColours", checkboxElement.attribute("name").getValue());
+		assertEquals("checked", checkboxElement.attribute("checked").getValue());
 	}
 
 	@Test
-	void collectionOfColoursNotSelected() throws Exception {
+	public void collectionOfColoursNotSelected() throws Exception {
 		this.tag.setPath("otherColours");
 		this.tag.setValue("PURPLE");
 
 		int result = this.tag.doStartTag();
-		assertThat(result).isEqualTo(Tag.SKIP_BODY);
+		assertEquals(Tag.SKIP_BODY, result);
 
 		String output = getOutput();
 
@@ -485,20 +485,20 @@ class CheckboxTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
-		assertThat(checkboxElement.getName()).isEqualTo("input");
-		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
-		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("otherColours");
-		assertThat(checkboxElement.attribute("checked")).isNull();
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
+		assertEquals("input", checkboxElement.getName());
+		assertEquals("checkbox", checkboxElement.attribute("type").getValue());
+		assertEquals("otherColours", checkboxElement.attribute("name").getValue());
+		assertNull(checkboxElement.attribute("checked"));
 	}
 
 	@Test
-	void collectionOfPetsAsString() throws Exception {
+	public void collectionOfPetsAsString() throws Exception {
 		this.tag.setPath("pets");
 		this.tag.setValue("Spot");
 
 		int result = this.tag.doStartTag();
-		assertThat(result).isEqualTo(Tag.SKIP_BODY);
+		assertEquals(Tag.SKIP_BODY, result);
 
 		String output = getOutput();
 
@@ -507,20 +507,20 @@ class CheckboxTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
-		assertThat(checkboxElement.getName()).isEqualTo("input");
-		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
-		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("pets");
-		assertThat(checkboxElement.attribute("checked").getValue()).isEqualTo("checked");
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
+		assertEquals("input", checkboxElement.getName());
+		assertEquals("checkbox", checkboxElement.attribute("type").getValue());
+		assertEquals("pets", checkboxElement.attribute("name").getValue());
+		assertEquals("checked", checkboxElement.attribute("checked").getValue());
 	}
 
 	@Test
-	void collectionOfPetsAsStringNotSelected() throws Exception {
+	public void collectionOfPetsAsStringNotSelected() throws Exception {
 		this.tag.setPath("pets");
 		this.tag.setValue("Santa's Little Helper");
 
 		int result = this.tag.doStartTag();
-		assertThat(result).isEqualTo(Tag.SKIP_BODY);
+		assertEquals(Tag.SKIP_BODY, result);
 
 		String output = getOutput();
 
@@ -529,20 +529,20 @@ class CheckboxTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
-		assertThat(checkboxElement.getName()).isEqualTo("input");
-		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
-		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("pets");
-		assertThat(checkboxElement.attribute("checked")).isNull();
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
+		assertEquals("input", checkboxElement.getName());
+		assertEquals("checkbox", checkboxElement.attribute("type").getValue());
+		assertEquals("pets", checkboxElement.attribute("name").getValue());
+		assertNull(checkboxElement.attribute("checked"));
 	}
 
 	@Test
-	void collectionOfPets() throws Exception {
+	public void collectionOfPets() throws Exception {
 		this.tag.setPath("pets");
 		this.tag.setValue(new Pet("Rudiger"));
 
 		int result = this.tag.doStartTag();
-		assertThat(result).isEqualTo(Tag.SKIP_BODY);
+		assertEquals(Tag.SKIP_BODY, result);
 
 		String output = getOutput();
 
@@ -551,21 +551,21 @@ class CheckboxTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
-		assertThat(checkboxElement.getName()).isEqualTo("input");
-		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
-		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("pets");
-		assertThat(checkboxElement.attribute("value").getValue()).isEqualTo("Rudiger");
-		assertThat(checkboxElement.attribute("checked").getValue()).isEqualTo("checked");
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
+		assertEquals("input", checkboxElement.getName());
+		assertEquals("checkbox", checkboxElement.attribute("type").getValue());
+		assertEquals("pets", checkboxElement.attribute("name").getValue());
+		assertEquals("Rudiger", checkboxElement.attribute("value").getValue());
+		assertEquals("checked", checkboxElement.attribute("checked").getValue());
 	}
 
 	@Test
-	void collectionOfPetsNotSelected() throws Exception {
+	public void collectionOfPetsNotSelected() throws Exception {
 		this.tag.setPath("pets");
 		this.tag.setValue(new Pet("Santa's Little Helper"));
 
 		int result = this.tag.doStartTag();
-		assertThat(result).isEqualTo(Tag.SKIP_BODY);
+		assertEquals(Tag.SKIP_BODY, result);
 
 		String output = getOutput();
 
@@ -574,16 +574,16 @@ class CheckboxTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
-		assertThat(checkboxElement.getName()).isEqualTo("input");
-		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
-		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("pets");
-		assertThat(checkboxElement.attribute("value").getValue()).isEqualTo("Santa's Little Helper");
-		assertThat(checkboxElement.attribute("checked")).isNull();
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
+		assertEquals("input", checkboxElement.getName());
+		assertEquals("checkbox", checkboxElement.attribute("type").getValue());
+		assertEquals("pets", checkboxElement.attribute("name").getValue());
+		assertEquals("Santa's Little Helper", checkboxElement.attribute("value").getValue());
+		assertNull(checkboxElement.attribute("checked"));
 	}
 
 	@Test
-	void collectionOfPetsWithEditor() throws Exception {
+	public void collectionOfPetsWithEditor() throws Exception {
 		this.tag.setPath("pets");
 		this.tag.setValue(new ItemPet("Rudiger"));
 
@@ -593,7 +593,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 		getPageContext().getRequest().setAttribute(BindingResult.MODEL_KEY_PREFIX + COMMAND_NAME, bindingResult);
 
 		int result = this.tag.doStartTag();
-		assertThat(result).isEqualTo(Tag.SKIP_BODY);
+		assertEquals(Tag.SKIP_BODY, result);
 
 		String output = getOutput();
 
@@ -602,27 +602,32 @@ class CheckboxTagTests extends AbstractFormTagTests {
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
-		Element checkboxElement = document.getRootElement().elements().get(0);
-		assertThat(checkboxElement.getName()).isEqualTo("input");
-		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
-		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("pets");
-		assertThat(checkboxElement.attribute("value").getValue()).isEqualTo("Rudiger");
-		assertThat(checkboxElement.attribute("checked").getValue()).isEqualTo("checked");
+		Element checkboxElement = (Element) document.getRootElement().elements().get(0);
+		assertEquals("input", checkboxElement.getName());
+		assertEquals("checkbox", checkboxElement.attribute("type").getValue());
+		assertEquals("pets", checkboxElement.attribute("name").getValue());
+		assertEquals("Rudiger", checkboxElement.attribute("value").getValue());
+		assertEquals("checked", checkboxElement.attribute("checked").getValue());
 	}
 
 	@Test
-	void withNullValue() throws Exception {
-		this.tag.setPath("name");
-		assertThatIllegalArgumentException().as("null value binding to a non-boolean").isThrownBy(
-				this.tag::doStartTag);
+	public void withNullValue() throws Exception {
+		try {
+			this.tag.setPath("name");
+			this.tag.doStartTag();
+			fail("Should not be able to render with a null value when binding to a non-boolean.");
+		}
+		catch (IllegalArgumentException e) {
+			// success
+		}
 	}
 
 	@Test
-	void hiddenElementOmittedOnDisabled() throws Exception {
+	public void hiddenElementOmittedOnDisabled() throws Exception {
 		this.tag.setPath("someBoolean");
 		this.tag.setDisabled(true);
 		int result = this.tag.doStartTag();
-		assertThat(result).isEqualTo(Tag.SKIP_BODY);
+		assertEquals(Tag.SKIP_BODY, result);
 		String output = getOutput();
 
 		// wrap the output so it is valid XML
@@ -631,20 +636,24 @@ class CheckboxTagTests extends AbstractFormTagTests {
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
 		Element rootElement = document.getRootElement();
-		assertThat(rootElement.elements().size()).as("Both tag and hidden element rendered incorrectly").isEqualTo(1);
-		Element checkboxElement = rootElement.elements().get(0);
-		assertThat(checkboxElement.getName()).isEqualTo("input");
-		assertThat(checkboxElement.attribute("type").getValue()).isEqualTo("checkbox");
-		assertThat(checkboxElement.attribute("name").getValue()).isEqualTo("someBoolean");
-		assertThat(checkboxElement.attribute("checked").getValue()).isEqualTo("checked");
-		assertThat(checkboxElement.attribute("value").getValue()).isEqualTo("true");
+		assertEquals("Both tag and hidden element rendered incorrectly", 1, rootElement.elements().size());
+		Element checkboxElement = (Element) rootElement.elements().get(0);
+		assertEquals("input", checkboxElement.getName());
+		assertEquals("checkbox", checkboxElement.attribute("type").getValue());
+		assertEquals("someBoolean", checkboxElement.attribute("name").getValue());
+		assertEquals("checked", checkboxElement.attribute("checked").getValue());
+		assertEquals("true", checkboxElement.attribute("value").getValue());
 	}
 
 	@Test
-	void dynamicTypeAttribute() throws JspException {
-		assertThatIllegalArgumentException().isThrownBy(() ->
-				this.tag.setDynamicAttribute(null, "type", "email"))
-			.withMessage("Attribute type=\"email\" is not allowed");
+	public void dynamicTypeAttribute() throws JspException {
+		try {
+			this.tag.setDynamicAttribute(null, "type", "email");
+			fail("Expected exception");
+		}
+		catch (IllegalArgumentException e) {
+			assertEquals("Attribute type=\"email\" is not allowed", e.getMessage());
+		}
 	}
 
 
@@ -685,7 +694,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 		this.bean.setJedi(true);
 		this.bean.setSomeBoolean(Boolean.TRUE);
 		this.bean.setStringArray(new String[] {"bar", "foo"});
-		this.bean.setSomeIntegerArray(new Integer[] {2, 1});
+		this.bean.setSomeIntegerArray(new Integer[] {new Integer(2), new Integer(1)});
 		this.bean.setOtherColours(colours);
 		this.bean.setPets(pets);
 		this.bean.setSomeList(someList);
@@ -717,7 +726,7 @@ class CheckboxTagTests extends AbstractFormTagTests {
 		@Override
 		public void setAsText(String text) {
 			this.count++;
-			setValue(Integer.valueOf(text.trim()));
+			setValue(new Integer(text.trim()));
 		}
 	}
 
