@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2021 the original author or authors.
+ * Copyright 2002-2015 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      https://www.apache.org/licenses/LICENSE-2.0
+ *      http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -16,20 +16,20 @@
 
 package org.springframework.web.servlet.tags.form;
 
-import jakarta.servlet.jsp.JspException;
-import jakarta.servlet.jsp.tagext.Tag;
-import org.junit.jupiter.api.Test;
+import javax.servlet.jsp.JspException;
+import javax.servlet.jsp.tagext.Tag;
 
-import org.springframework.beans.testfixture.beans.TestBean;
+import org.junit.Test;
+
+import org.springframework.tests.sample.beans.TestBean;
 import org.springframework.validation.BeanPropertyBindingResult;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException;
+import static org.junit.Assert.*;
 
 /**
  * @author Rob Harrop
  */
-class HiddenInputTagTests extends AbstractFormTagTests {
+public class HiddenInputTagTests extends AbstractFormTagTests {
 
 	private HiddenInputTag tag;
 
@@ -48,10 +48,10 @@ class HiddenInputTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	void render() throws Exception {
+	public void render() throws Exception {
 		this.tag.setPath("name");
 		int result = this.tag.doStartTag();
-		assertThat(result).isEqualTo(Tag.SKIP_BODY);
+		assertEquals(Tag.SKIP_BODY, result);
 
 		String output = getOutput();
 
@@ -64,14 +64,14 @@ class HiddenInputTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	void withCustomBinder() throws Exception {
+	public void withCustomBinder() throws Exception {
 		this.tag.setPath("myFloat");
 
 		BeanPropertyBindingResult errors = new BeanPropertyBindingResult(this.bean, COMMAND_NAME);
 		errors.getPropertyAccessor().registerCustomEditor(Float.class, new SimpleFloatEditor());
 		exposeBindingResult(errors);
 
-		assertThat(this.tag.doStartTag()).isEqualTo(Tag.SKIP_BODY);
+		assertEquals(Tag.SKIP_BODY, this.tag.doStartTag());
 
 		String output = getOutput();
 
@@ -83,14 +83,18 @@ class HiddenInputTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	void dynamicTypeAttribute() throws JspException {
-		assertThatIllegalArgumentException().isThrownBy(() ->
-				this.tag.setDynamicAttribute(null, "type", "email"))
-			.withMessage("Attribute type=\"email\" is not allowed");
+	public void dynamicTypeAttribute() throws JspException {
+		try {
+			this.tag.setDynamicAttribute(null, "type", "email");
+			fail("Expected exception");
+		}
+		catch (IllegalArgumentException e) {
+			assertEquals("Attribute type=\"email\" is not allowed", e.getMessage());
+		}
 	}
 
 	@Test
-	void disabledTrue() throws Exception {
+	public void disabledTrue() throws Exception {
 		this.tag.setDisabled(true);
 
 		this.tag.doStartTag();
@@ -106,7 +110,7 @@ class HiddenInputTagTests extends AbstractFormTagTests {
 	// SPR-8661
 
 	@Test
-	void disabledFalse() throws Exception {
+	public void disabledFalse() throws Exception {
 		this.tag.setDisabled(false);
 
 		this.tag.doStartTag();
@@ -120,18 +124,18 @@ class HiddenInputTagTests extends AbstractFormTagTests {
 	}
 
 	private void assertTagClosed(String output) {
-		assertThat(output.endsWith("/>")).isTrue();
+		assertTrue(output.endsWith("/>"));
 	}
 
 	private void assertTagOpened(String output) {
-		assertThat(output.startsWith("<input ")).isTrue();
+		assertTrue(output.startsWith("<input "));
 	}
 
 	@Override
 	protected TestBean createTestBean() {
 		this.bean = new TestBean();
 		bean.setName("Sally Greenwood");
-		bean.setMyFloat(Float.valueOf("12.34"));
+		bean.setMyFloat(new Float("12.34"));
 		return bean;
 	}
 
